--- a/tex/p097.tex
+++ b/tex/p097.tex
@@ -78,7 +78,7 @@
 \vs p097 8:6 New Testament authors and later Christian writers further complicated the distortion of Hebrew history by their well\hyp{}meant attempts to transcendentalize the Jewish prophets. Thus has Hebrew history been disastrously exploited by both Jewish and Christian writers. Secular Hebrew history has been thoroughly dogmatized. It has been converted into a fiction of sacred history and has become inextricably bound up with the moral concepts and religious teachings of the so\hyp{}called Christian nations.
 \vs p097 8:7 \pc A brief recital of the high points in Hebrew history will illustrate how the facts of the record were so altered in Babylon by the Jewish priests as to turn the everyday secular history of their people into a fictitious and sacred history.
 \usection{Hebrew History}
-\vs p097 9:1 There never were 12 tribes of the Israelites --- only 3 or 4 tribes settled in Palestine. The Hebrew nation came into being as the result of the union of the so\hyp{}called Israelites and the Canaanites. “And the children of Israel dwelt among the Canaanites. And they took their daughters to be their wives and gave their daughters to the sons of the Canaanites.” The Hebrews never drove the Canaanites out of Palestine, notwithstanding that the priests’ record of these things unhesitatingly declared that they did.
+\vs p097 9:1 There never were twelve tribes of the Israelites --- only three or four tribes settled in Palestine. The Hebrew nation came into being as the result of the union of the so\hyp{}called Israelites and the Canaanites. “And the children of Israel dwelt among the Canaanites. And they took their daughters to be their wives and gave their daughters to the sons of the Canaanites.” The Hebrews never drove the Canaanites out of Palestine, notwithstanding that the priests’ record of these things unhesitatingly declared that they did.
 \vs p097 9:2 The Israelitish consciousness took origin in the hill country of Ephraim; the later Jewish consciousness originated in the southern clan of Judah. The Jews (Judahites) always sought to defame and blacken the record of the northern Israelites (Ephraimites).
 \vs p097 9:3 \pc Pretentious Hebrew history begins with Saul’s rallying the northern clans to withstand an attack by the Ammonites upon their fellow tribesmen --- the Gileadites --- east of the Jordan. With an army of a little more than 3,000 he defeated the enemy, and it was this exploit that led the hill tribes to make him king. When the exiled priests rewrote this story, they raised Saul’s army to 330,000 and added “Judah” to the list of tribes participating in the battle.
 \vs p097 9:4 Immediately following the defeat of the Ammonites, Saul was made king by popular election by his troops. No priest or prophet participated in this affair. But the priests later on put it in the record that Saul was crowned king by the prophet Samuel in accordance with divine directions. This they did in order to establish a “divine line of descent” for David’s Judahite kingship.
