--- a/tex/p124.tex
+++ b/tex/p124.tex
@@ -41,7 +41,7 @@
 \vs p124 3:6 \pc About the middle of May the lad accompanied his father on a business trip to Scythopolis, the chief Greek city of the Decapolis, the ancient Hebrew city of Beth\hyp{}shean. On the way Joseph recounted much of the olden history of King Saul, the Philistines, and the subsequent events of Israel’s turbulent history. Jesus was tremendously impressed with the clean appearance and well\hyp{}ordered arrangement of this so\hyp{}called heathen city. He marveled at the open\hyp{}air theatre and admired the beautiful marble temple dedicated to the worship of the “heathen” gods. Joseph was much perturbed by the lad’s enthusiasm and sought to counteract these favourable impressions by extolling the beauty and grandeur of the Jewish temple at Jerusalem. Jesus had often gazed curiously upon this magnificent Greek city from the hill of Nazareth and had many times inquired about its extensive public works and ornate buildings, but his father had always sought to avoid answering these questions. Now they were face to face with the beauties of this gentile city, and Joseph could not gracefully ignore Jesus’ inquiries.
 \vs p124 3:7 It so happened that just at this time the annual competitive games and public demonstrations of physical prowess between the Greek cities of the Decapolis were in progress at the Scythopolis amphitheatre, and Jesus was insistent that his father take him to see the games, and he was so insistent that Joseph hesitated to deny him. The boy was thrilled with the games and entered most heartily into the spirit of the demonstrations of physical development and athletic skill. Joseph was inexpressibly shocked to observe his son’s enthusiasm as he beheld these exhibitions of “heathen” vaingloriousness. After the games were finished, Joseph received the surprise of his life when he heard Jesus express his approval of them and suggest that it would be good for the young men of Nazareth if they could be thus benefited by wholesome outdoor physical activities. Joseph talked earnestly and long with Jesus concerning the evil nature of such practices, but he well knew that the lad was unconvinced.
 \vs p124 3:8 The only time Jesus ever saw his father angry with him was that night in their room at the inn when, in the course of their discussions, the boy so far forgot the trends of Jewish thought as to suggest that they go back home and work for the building of an amphitheatre at Nazareth. When Joseph heard his first\hyp{}born son express such un\hyp{}Jewish sentiments, he forgot his usual calm demeanour and, seizing Jesus by the shoulder, angrily exclaimed, “My son, never again let me hear you give utterance to such an evil thought as long as you live.” Jesus was startled by his father’s display of emotion; he had never before been made to feel the personal sting of his father’s indignation and was astonished and shocked beyond expression. He only replied, \textcolour{ubdarkred}{“Very well, my father, it shall be so.”} And never again did the boy even in the slightest manner allude to the games and other athletic activities of the Greeks as long as his father lived.
-\vs p124 3:9 Later on, Jesus saw the Greek amphitheatre at Jerusalem and learned how hateful such things were from the Jewish point of view. Nevertheless, throughout his life he endeavoured to introduce the idea of wholesome recreation into his personal plans and, as far as Jewish practice would permit, into the later program of regular activities for his 12 apostles.
+\vs p124 3:9 Later on, Jesus saw the Greek amphitheatre at Jerusalem and learned how hateful such things were from the Jewish point of view. Nevertheless, throughout his life he endeavoured to introduce the idea of wholesome recreation into his personal plans and, as far as Jewish practice would permit, into the later program of regular activities for his twelve apostles.
 \vs p124 3:10 At the end of this 11\ts{th} year Jesus was a vigorous, well\hyp{}developed, moderately humorous, and fairly light\hyp{}hearted youth, but from this year on he was more and more given to peculiar seasons of profound meditation and serious contemplation. He was much given to thinking about how he was to carry out his obligations to his family and at the same time be obedient to the call of his mission to the world; already he had conceived that his ministry was not to be limited to the betterment of the Jewish people.
 \usection{The Twelfth Year (A.D.\,6)}
 \vs p124 4:1 This was an eventful year in Jesus’ life. He continued to make progress at school and was indefatigable in his study of nature, while increasingly he prosecuted his study of the methods whereby men make a living. He began doing regular work in the home carpenter shop and was permitted to manage his own earnings, a very unusual arrangement to obtain in a Jewish family. This year he also learned the wisdom of keeping such matters a secret in the family. He was becoming conscious of the way in which he had caused trouble in the village, and henceforth he became increasingly discreet in concealing everything which might cause him to be regarded as different from his fellows.
