--- a/tex/p128.tex
+++ b/tex/p128.tex
@@ -48,7 +48,7 @@
 \vs p128 3:9 \pc More and more the Nazareth family became engrossed with their immediate and human problems; not often was mention made of the future mission of Jesus, and very seldom did he himself speak of his future career. His mother rarely thought about his being a child of promise. She was slowly giving up the idea that Jesus was to fulfil any divine mission on earth, yet at times her faith was revived when she paused to recall the Gabriel visitation before the child was born.
 \usection{The Damascus Episode}
 \vs p128 4:1 The last four months of this year Jesus spent in Damascus as the guest of the merchant whom he first met at Philadelphia when on his way to Jerusalem. A representative of this merchant had sought out Jesus when passing through Nazareth and escorted him to Damascus. This part\hyp{}Jewish merchant proposed to devote an extraordinary sum of money to the establishment of a school of religious philosophy at Damascus. He planned to create a centre of learning which would out\hyp{}rival Alexandria. And he proposed that Jesus should immediately begin a long tour of the world’s educational centres preparatory to becoming the head of this new project. This was one of the greatest temptations that Jesus ever faced in the course of his purely human career.
-\vs p128 4:2 Presently this merchant brought before Jesus a group of 12 merchants and bankers who agreed to support this newly projected school. Jesus manifested deep interest in the proposed school, helped them plan for its organization, but always expressed the fear that his other and unstated but prior obligations would prevent his accepting the direction of such a pretentious enterprise. His would\hyp{}be benefactor was persistent, and he profitably employed Jesus at his home doing some translating while he, his wife, and their sons and daughters sought to prevail upon Jesus to accept the proffered honour. But he would not consent. He well knew that his mission on earth was not to be supported by institutions of learning; he knew that he must not obligate himself in the least to be directed by the “councils of men,” no matter how well\hyp{}intentioned.
+\vs p128 4:2 Presently this merchant brought before Jesus a group of twelve merchants and bankers who agreed to support this newly projected school. Jesus manifested deep interest in the proposed school, helped them plan for its organization, but always expressed the fear that his other and unstated but prior obligations would prevent his accepting the direction of such a pretentious enterprise. His would\hyp{}be benefactor was persistent, and he profitably employed Jesus at his home doing some translating while he, his wife, and their sons and daughters sought to prevail upon Jesus to accept the proffered honour. But he would not consent. He well knew that his mission on earth was not to be supported by institutions of learning; he knew that he must not obligate himself in the least to be directed by the “councils of men,” no matter how well\hyp{}intentioned.
 \vs p128 4:3 He who was rejected by the Jerusalem religious leaders, even after he had demonstrated his leadership, was recognized and hailed as a master teacher by the businessmen and bankers of Damascus, and all this when he was an obscure and unknown carpenter of Nazareth.
 \vs p128 4:4 He never spoke about this offer to his family, and the end of this year found him back in Nazareth going about his daily duties just as if he had never been tempted by the flattering propositions of his Damascus friends. Neither did these men of Damascus ever associate the later citizen of Capernaum who turned all Jewry upside down with the former carpenter of Nazareth who had dared to refuse the honour which their combined wealth might have procured.
 \vs p128 4:5 \pc Jesus most cleverly and intentionally contrived to detach various episodes of his life so that they never became, in the eyes of the world, associated together as the doings of a single individual. Many times in subsequent years he listened to the recital of this very story of the strange Galilean who declined the opportunity of founding a school in Damascus to compete with Alexandria.
