--- a/tex/p132.tex
+++ b/tex/p132.tex
@@ -46,7 +46,7 @@
 \vs p132 3:10 Universe progress is characterized by increasing personality freedom because it is associated with the progressive attainment of higher and higher levels of self\hyp{}understanding and consequent voluntary self\hyp{}restraint. The attainment of perfection of spiritual self\hyp{}restraint equals completeness of universe freedom and personal liberty. Faith fosters and maintains man’s soul in the midst of the confusion of his early orientation in such a vast universe, whereas prayer becomes the great unifier of the various inspirations of the creative imagination and the faith urges of a soul trying to identify itself with the spirit ideals of the indwelling and associated divine presence.
 \vs p132 3:11 \pc Nabon was greatly impressed by these words, as he was by each of his talks with Jesus. These truths continued to burn within his heart, and he was of great assistance to the later arriving preachers of Jesus’ gospel.
 \usection{Personal Ministry}
-\vs p132 4:1 Jesus did not devote all his leisure while in Rome to this work of preparing men and women to become future disciples in the oncoming kingdom. He spent much time gaining an intimate knowledge of all races and classes of men who lived in this, the largest and most cosmopolitan city of the world. In each of these numerous human contacts Jesus had a double purpose: He desired to learn their reactions to the life they were living in the flesh, and he was also minded to say or do something to make that life richer and more worth while. His religious teachings during these weeks were no different than those which characterized his later life as teacher of the 12 and preacher to the multitudes.
+\vs p132 4:1 Jesus did not devote all his leisure while in Rome to this work of preparing men and women to become future disciples in the oncoming kingdom. He spent much time gaining an intimate knowledge of all races and classes of men who lived in this, the largest and most cosmopolitan city of the world. In each of these numerous human contacts Jesus had a double purpose: He desired to learn their reactions to the life they were living in the flesh, and he was also minded to say or do something to make that life richer and more worth while. His religious teachings during these weeks were no different than those which characterized his later life as teacher of the twelve and preacher to the multitudes.
 \vs p132 4:2 Always the burden of his message was: the fact of the heavenly Father’s love and the truth of his mercy, coupled with the good news that man is a faith\hyp{}son of this same God of love. Jesus’ usual technique of social contact was to draw people out and into talking with him by asking them questions. The interview would usually begin by his asking them questions and end by their asking him questions. He was equally adept in teaching by either asking or answering questions. As a rule, to those he taught the most, he said the least. Those who derived most benefit from his personal ministry were overburdened, anxious, and dejected mortals who gained much relief because of the opportunity to unburden their souls to a sympathetic and understanding listener, and he was all that and more. And when these maladjusted human beings had told Jesus about their troubles, always was he able to offer practical and immediately helpful suggestions looking toward the correction of their real difficulties, albeit he did not neglect to speak words of present comfort and immediate consolation. And invariably would he tell these distressed mortals about the love of God and impart the information, by various and sundry methods, that they were the children of this loving Father in heaven.
 \vs p132 4:3 In this manner, during the sojourn in Rome, Jesus personally came into affectionate and uplifting contact with upward of 500 mortals of the realm. He thus gained a knowledge of the different races of mankind which he could never have acquired in Jerusalem and hardly even in Alexandria. He always regarded this six months as one of the richest and most informative of any like period of his earth life.
 \vs p132 4:4 As might have been expected, such a versatile and aggressive man could not thus function for six months in the world’s metropolis without being approached by numerous persons who desired to secure his services in connection with some business or, more often, for some project of teaching, social reform, or religious movement. More than a dozen such proffers were made, and he utilized each one as an opportunity for imparting some thought of spiritual ennoblement by well\hyp{}chosen words or by some obliging service. Jesus was very fond of doing things --- even little things --- for all sorts of people.
