--- a/tex/p144.tex
+++ b/tex/p144.tex
@@ -13,16 +13,16 @@
 \vs p144 0:2 There were a number of reasons why Jesus and his apostles were in retirement at this time on the borders of Samaria and the Decapolis. The Jerusalem religious rulers were very antagonistic; Herod Antipas still held John in prison, fearing either to release or execute him, while he continued to entertain suspicions that John and Jesus were in some way associated. These conditions made it unwise to plan for aggressive work in either Judea or Galilee. There was a third reason: the slowly augmenting tension between the leaders of John’s disciples and the apostles of Jesus, which grew worse with the increasing number of believers.
 \vs p144 0:3 Jesus knew that the days of the preliminary work of teaching and preaching were about over, that the next move involved the beginning of the full and final effort of his life on earth, and he did not wish the launching of this undertaking to be in any manner either trying or embarrassing to John the Baptist. Jesus had therefore decided to spend some time in retirement rehearsing his apostles and then to do some quiet work in the cities of the Decapolis until John should be either executed or released to join them in a united effort.
 \usection{The Gilboa Encampment}
-\vs p144 1:1 As time passed, the 12 became more devoted to Jesus and increasingly committed to the work of the kingdom. Their devotion was in large part a matter of personal loyalty. They did not grasp his many\hyp{}sided teaching; they did not fully comprehend the nature of Jesus or the significance of his bestowal on earth.
+\vs p144 1:1 As time passed, the twelve became more devoted to Jesus and increasingly committed to the work of the kingdom. Their devotion was in large part a matter of personal loyalty. They did not grasp his many\hyp{}sided teaching; they did not fully comprehend the nature of Jesus or the significance of his bestowal on earth.
 \vs p144 1:2 Jesus made it plain to his apostles that they were in retirement for three reasons:
 \vs p144 1:3 \ublistelem{1.}\bibnobreakspace To confirm their understanding of, and faith in, the gospel of the kingdom.
 \vs p144 1:4 \ublistelem{2.}\bibnobreakspace To allow opposition to their work in both Judea and Galilee to quiet down.
 \vs p144 1:5 \ublistelem{3.}\bibnobreakspace To await the fate of John the Baptist.
-\vs p144 1:6 \pc While tarrying on Gilboa, Jesus told the 12 much about his early life and his experiences on Mount Hermon; he also revealed something of what happened in the hills during the 40 days immediately after his baptism. And he directly charged them that they should tell no man about these experiences until after he had returned to the Father.
+\vs p144 1:6 \pc While tarrying on Gilboa, Jesus told the twelve much about his early life and his experiences on Mount Hermon; he also revealed something of what happened in the hills during the 40 days immediately after his baptism. And he directly charged them that they should tell no man about these experiences until after he had returned to the Father.
 \vs p144 1:7 During these September weeks they rested, visited, recounted their experiences since Jesus first called them to service, and engaged in an earnest effort to co\hyp{}ordinate what the Master had so far taught them. In a measure they all sensed that this would be their last opportunity for prolonged rest. They realized that their next public effort in either Judea or Galilee would mark the beginning of the final proclamation of the coming kingdom, but they had little or no settled idea as to what the kingdom would be when it came. John and Andrew thought the kingdom had already come; Peter and James believed that it was yet to come; Nathaniel and Thomas frankly confessed they were puzzled; Matthew, Philip, and Simon Zelotes were uncertain and confused; the twins were blissfully ignorant of the controversy; and Judas Iscariot was silent, noncommittal.
 \vs p144 1:8 \pc Much of this time Jesus was alone on the mountain near the camp. Occasionally he took with him Peter, James, or John, but more often he went off to pray or commune alone. Subsequent to the baptism of Jesus and the 40 days in the Perean hills, it is hardly proper to speak of these seasons of communion with his Father as prayer, nor is it consistent to speak of Jesus as worshipping, but it is altogether correct to allude to these seasons as personal communion with his Father.
 \vs p144 1:9 The central theme of the discussions throughout the entire month of September was prayer and worship. After they had discussed worship for some days, Jesus finally delivered his memorable discourse on prayer in answer to Thomas’s request: “Master, teach us how to pray.”
-\vs p144 1:10 John had taught his disciples a prayer, a prayer for salvation in the coming kingdom. Although Jesus never forbade his followers to use John’s form of prayer, the apostles very early perceived that their Master did not fully approve of the practice of uttering set and formal prayers. Nevertheless, believers constantly requested to be taught how to pray. The 12 longed to know what form of petition Jesus would approve. And it was chiefly because of this need for some simple petition for the common people that Jesus at this time consented, in answer to Thomas’s request, to teach them a suggestive form of prayer. Jesus gave this lesson one afternoon in the third week of their sojourn on Mount Gilboa.
+\vs p144 1:10 John had taught his disciples a prayer, a prayer for salvation in the coming kingdom. Although Jesus never forbade his followers to use John’s form of prayer, the apostles very early perceived that their Master did not fully approve of the practice of uttering set and formal prayers. Nevertheless, believers constantly requested to be taught how to pray. The twelve longed to know what form of petition Jesus would approve. And it was chiefly because of this need for some simple petition for the common people that Jesus at this time consented, in answer to Thomas’s request, to teach them a suggestive form of prayer. Jesus gave this lesson one afternoon in the third week of their sojourn on Mount Gilboa.
 \usection{The Discourse on Prayer}
 \vs p144 2:1 \textcolour{ubdarkred}{“John indeed taught you a simple form of prayer: ‘O Father, cleanse us from sin, show us your glory, reveal your love, and let your spirit sanctify our hearts forevermore, Amen!’ He taught this prayer that you might have something to teach the multitude. He did not intend that you should use such a set and formal petition as the expression of your own souls in prayer.}
 \vs p144 2:2 \textcolour{ubdarkred}{“Prayer is entirely a personal and spontaneous expression of the attitude of the soul toward the spirit; prayer should be the communion of sonship and the expression of fellowship. Prayer, when indited by the spirit, leads to co\hyp{}operative spiritual progress. The ideal prayer is a form of spiritual communion which leads to intelligent worship. True praying is the sincere attitude of reaching heavenward for the attainment of your ideals.}
@@ -45,8 +45,8 @@
 \vs p144 3:11 \textcolour{ubdarkred}{Save us in temptation, deliver us from evil,}
 \vs p144 3:12 \hsetoff \textcolour{ubdarkred}{And increasingly make us perfect like yourself.}
 \vspace*{1ex}
-\vs p144 3:13 \pc It is not strange that the apostles desired Jesus to teach them a model prayer for believers. John the Baptist had taught his followers several prayers; all great teachers had formulated prayers for their pupils. The religious teachers of the Jews had some 25 or 30 set prayers which they recited in the synagogues and even on the street corners. Jesus was particularly averse to praying in public. Up to this time the 12 had heard him pray only a few times. They observed him spending entire nights at prayer or worship, and they were very curious to know the manner or form of his petitions. They were really hard pressed to know what to answer the multitudes when they asked to be taught how to pray as John had taught his disciples.
-\vs p144 3:14 Jesus taught the 12 always to pray in secret; to go off by themselves amidst the quiet surroundings of nature or to go in their rooms and shut the doors when they engaged in prayer.
+\vs p144 3:13 \pc It is not strange that the apostles desired Jesus to teach them a model prayer for believers. John the Baptist had taught his followers several prayers; all great teachers had formulated prayers for their pupils. The religious teachers of the Jews had some 25 or 30 set prayers which they recited in the synagogues and even on the street corners. Jesus was particularly averse to praying in public. Up to this time the twelve had heard him pray only a few times. They observed him spending entire nights at prayer or worship, and they were very curious to know the manner or form of his petitions. They were really hard pressed to know what to answer the multitudes when they asked to be taught how to pray as John had taught his disciples.
+\vs p144 3:14 Jesus taught the twelve always to pray in secret; to go off by themselves amidst the quiet surroundings of nature or to go in their rooms and shut the doors when they engaged in prayer.
 \vs p144 3:15 After Jesus’ death and ascension to the Father it became the practice of many believers to finish this so\hyp{}called Lord’s prayer by the addition of --- “In the name of the Lord Jesus Christ.” Still later on, two lines were lost in copying, and there was added to this prayer an extra clause, reading: “For yours is the kingdom and the power and the glory, forevermore.”
 \vs p144 3:16 Jesus gave the apostles the prayer in collective form as they had prayed it in the Nazareth home. He never taught a formal personal prayer, only group, family, or social petitions. And he never volunteered to do that.
 \vs p144 3:17 Jesus taught that effective prayer must be:
@@ -55,7 +55,7 @@
 \vs p144 3:20 \ublistelem{3.}\bibnobreakspace Sincere --- honest of heart.
 \vs p144 3:21 \ublistelem{4.}\bibnobreakspace Intelligent --- according to light.
 \vs p144 3:22 \ublistelem{5.}\bibnobreakspace Trustful --- in submission to the Father’s all\hyp{}wise will.
-\vs p144 3:23 \pc When Jesus spent whole nights on the mountain in prayer, it was mainly for his disciples, particularly for the 12. The Master prayed very little for himself, although he engaged in much worship of the nature of understanding communion with his Paradise Father.
+\vs p144 3:23 \pc When Jesus spent whole nights on the mountain in prayer, it was mainly for his disciples, particularly for the twelve. The Master prayed very little for himself, although he engaged in much worship of the nature of understanding communion with his Paradise Father.
 \usection{More about Prayer}
 \vs p144 4:1 For days after the discourse on prayer the apostles continued to ask the Master questions regarding this all\hyp{}important and worshipful practice. Jesus’ instruction to the apostles during these days, regarding prayer and worship, may be summarized and restated in modern phraseology as follows:
 \vs p144 4:2 \pc The earnest and longing repetition of any petition, when such a prayer is the sincere expression of a child of God and is uttered in faith, no matter how ill\hyp{}advised or impossible of direct answer, never fails to expand the soul’s capacity for spiritual receptivity.
@@ -69,7 +69,7 @@
 \vs p144 4:10 \pc One of the reasons why Peter, James, and John, who so often accompanied Jesus on his long night vigils, never heard Jesus pray, was because their Master so rarely uttered his prayers as spoken words. Practically all of Jesus’ praying was done in the spirit and in the heart --- silently.
 \vs p144 4:11 Of all the apostles, Peter and James came the nearest to comprehending the Master’s teaching about prayer and worship.
 \usection{Other Forms of Prayer}
-\vs p144 5:1 From time to time, during the remainder of Jesus’ sojourn on earth, he brought to the notice of the apostles several additional forms of prayer, but he did this only in illustration of other matters, and he enjoined that these “parable prayers” should not be taught to the multitudes. Many of them were from other inhabited planets, but this fact Jesus did not reveal to the 12. Among these prayers were the following:
+\vs p144 5:1 From time to time, during the remainder of Jesus’ sojourn on earth, he brought to the notice of the apostles several additional forms of prayer, but he did this only in illustration of other matters, and he enjoined that these “parable prayers” should not be taught to the multitudes. Many of them were from other inhabited planets, but this fact Jesus did not reveal to the twelve. Among these prayers were the following:
 \vspace*{1ex}
 \vs p144 5:2 Our Father in whom consist the universe realms,
 \vs p144 5:3 \hsetoff Uplifted be your name and all\hyp{}glorious your character.
@@ -178,24 +178,24 @@
 \vs p144 5:106 Even so, in the name of the bestowal Son
 \vs p144 5:107 \hsetoff And for the honour and glory of the Supreme Father.
 \vspace*{1ex}
-\vs p144 5:108 Though the apostles were not at liberty to present these prayer lessons in their public teachings, they profited much from all of these revelations in their personal religious experiences. Jesus utilized these and other prayer models as illustrations in connection with the intimate instruction of the 12, and specific permission has been granted for transcribing these seven specimen prayers into this record.
+\vs p144 5:108 Though the apostles were not at liberty to present these prayer lessons in their public teachings, they profited much from all of these revelations in their personal religious experiences. Jesus utilized these and other prayer models as illustrations in connection with the intimate instruction of the twelve, and specific permission has been granted for transcribing these seven specimen prayers into this record.
 \usection{Conference with John’s Apostles}
-\vs p144 6:1 Around the first of October, Philip and some of his fellow apostles were in a near\hyp{}by village buying food when they met some of the apostles of John the Baptist. As a result of this chance meeting in the market place there came about a three weeks’ conference at the Gilboa camp between the apostles of Jesus and the apostles of John, for John had recently appointed 12 of his leaders to be apostles, following the precedent of Jesus. John had done this in response to the urging of Abner, the chief of his loyal supporters. Jesus was present at the Gilboa camp throughout the first week of this joint conference but absented himself the last two weeks.
+\vs p144 6:1 Around the first of October, Philip and some of his fellow apostles were in a near\hyp{}by village buying food when they met some of the apostles of John the Baptist. As a result of this chance meeting in the market place there came about a three weeks’ conference at the Gilboa camp between the apostles of Jesus and the apostles of John, for John had recently appointed twelve of his leaders to be apostles, following the precedent of Jesus. John had done this in response to the urging of Abner, the chief of his loyal supporters. Jesus was present at the Gilboa camp throughout the first week of this joint conference but absented himself the last two weeks.
 \vs p144 6:2 By the beginning of the second week of this month, Abner had assembled all of his associates at the Gilboa camp and was prepared to go into council with the apostles of Jesus. For three weeks these 24 men were in session three times a day and for six days each week. The first week Jesus mingled with them between their forenoon, afternoon, and evening sessions. They wanted the Master to meet with them and preside over their joint deliberations, but he steadfastly refused to participate in their discussions, though he did consent to speak to them on three occasions. These talks by Jesus to the 24 were on sympathy, co\hyp{}operation, and tolerance.
 \vs p144 6:3 Andrew and Abner alternated in presiding over these joint meetings of the two apostolic groups. These men had many difficulties to discuss and numerous problems to solve. Again and again would they take their troubles to Jesus, only to hear him say: \textcolour{ubdarkred}{“I am concerned only with your personal and purely religious problems. I am the representative of the Father to the \bibemph{individual,} not to the group. If you are in personal difficulty in your relations with God, come to me, and I will hear you and counsel you in the solution of your problem. But when you enter upon the co\hyp{}ordination of divergent human interpretations of religious questions and upon the socialization of religion, you are destined to solve all such problems by your own decisions. Albeit, I am ever sympathetic and always interested, and when you arrive at your conclusions touching these matters of nonspiritual import, provided you are all agreed, then I pledge in advance my full approval and hearty co\hyp{}operation. And now, in order to leave you unhampered in your deliberations, I am leaving you for two weeks. Be not anxious about me, for I will return to you. I will be about my Father’s business, for we have other realms besides this one.”}
 \vs p144 6:4 After thus speaking, Jesus went down the mountainside, and they saw him no more for two full weeks. And they never knew where he went or what he did during these days. It was some time before the 24 could settle down to the serious consideration of their problems, they were so disconcerted by the absence of the Master. However, within a week they were again in the heart of their discussions, and they could not go to Jesus for help.
 \vs p144 6:5 \pc The first item the group agreed upon was the adoption of the prayer which Jesus had so recently taught them. It was unanimously voted to accept this prayer as the one to be taught believers by both groups of apostles.
-\vs p144 6:6 They next decided that, as long as John lived, whether in prison or out, both groups of 12 apostles would go on with their work, and that joint meetings for one week would be held every three months at places to be agreed upon from time to time.
+\vs p144 6:6 They next decided that, as long as John lived, whether in prison or out, both groups of twelve apostles would go on with their work, and that joint meetings for one week would be held every three months at places to be agreed upon from time to time.
 \vs p144 6:7 But the most serious of all their problems was the question of baptism. Their difficulties were all the more aggravated because Jesus had refused to make any pronouncement upon the subject. They finally agreed: As long as John lived, or until they might jointly modify this decision, only the apostles of John would baptize believers, and only the apostles of Jesus would finally instruct the new disciples. Accordingly, from that time until after the death of John, two of the apostles of John accompanied Jesus and his apostles to baptize believers, for the joint council had unanimously voted that baptism was to become the initial step in the outward alliance with the affairs of the kingdom.
 \vs p144 6:8 It was next agreed, in case of the death of John, that the apostles of John would present themselves to Jesus and become subject to his direction, and that they would baptize no more unless authorized by Jesus or his apostles.
 \vs p144 6:9 And then was it voted that, in case of John’s death, the apostles of Jesus would begin to baptize with water as the emblem of the baptism of the divine Spirit. As to whether or not \bibemph{repentance} should be attached to the preaching of baptism was left optional; no decision was made binding upon the group. John’s apostles preached, “Repent and be baptized.” Jesus’ apostles proclaimed, “Believe and be baptized.”
 \vs p144 6:10 \pc And this is the story of the first attempt of Jesus’ followers to co\hyp{}ordinate divergent efforts, compose differences of opinion, organize group undertakings, legislate on outward observances, and socialize personal religious practices.
 \vs p144 6:11 Many other minor matters were considered and their solutions unanimously agreed upon. These 24 men had a truly remarkable experience these two weeks when they were compelled to face problems and compose difficulties without Jesus. They learned to differ, to debate, to contend, to pray, and to compromise, and throughout it all to remain sympathetic with the other person’s viewpoint and to maintain at least some degree of tolerance for his honest opinions.
 \vs p144 6:12 \pc On the afternoon of their final discussion of financial questions, Jesus returned, heard of their deliberations, listened to their decisions, and said: \textcolour{ubdarkred}{“These, then, are your conclusions, and I shall help you each to carry out the spirit of your united decisions.”}
-\vs p144 6:13 \pc 2½ months from this time John was executed, and throughout this period the apostles of John remained with Jesus and the 12. They all worked together and baptized believers during this season of labour in the cities of the Decapolis. The Gilboa camp was broken up on November 2, A.D.\,27.
+\vs p144 6:13 \pc 2½ months from this time John was executed, and throughout this period the apostles of John remained with Jesus and the twelve. They all worked together and baptized believers during this season of labour in the cities of the Decapolis. The Gilboa camp was broken up on November 2, A.D.\,27.
 \usection{In the Decapolis Cities}
 \vs p144 7:1 Throughout the months of November and December, Jesus and the 24 worked quietly in the Greek cities of the Decapolis, chiefly in Scythopolis, Gerasa, Abila, and Gadara. This was really the end of that preliminary period of taking over John’s work and organization. Always does the socialized religion of a new revelation pay the price of compromise with the established forms and usages of the preceding religion which it seeks to salvage. Baptism was the price which the followers of Jesus paid in order to carry with them, as a socialized religious group, the followers of John the Baptist. John’s followers, in joining Jesus’ followers, gave up just about everything except water baptism.
-\vs p144 7:2 Jesus did little public teaching on this mission to the cities of the Decapolis. He spent considerable time teaching the 24 and had many special sessions with John’s 12 apostles. In time they became more understanding as to why Jesus did not go to visit John in prison, and why he made no effort to secure his release. But they never could understand why Jesus did no marvellous works, why he refused to produce outward signs of his divine authority. Before coming to the Gilboa camp, they had believed in Jesus mostly because of John’s testimony, but soon they were beginning to believe as a result of their own contact with the Master and his teachings.
+\vs p144 7:2 Jesus did little public teaching on this mission to the cities of the Decapolis. He spent considerable time teaching the 24 and had many special sessions with John’s twelve apostles. In time they became more understanding as to why Jesus did not go to visit John in prison, and why he made no effort to secure his release. But they never could understand why Jesus did no marvellous works, why he refused to produce outward signs of his divine authority. Before coming to the Gilboa camp, they had believed in Jesus mostly because of John’s testimony, but soon they were beginning to believe as a result of their own contact with the Master and his teachings.
 \vs p144 7:3 For these two months the group worked most of the time in pairs, one of Jesus’ apostles going out with one of John’s. The apostle of John baptized, the apostle of Jesus instructed, while they both preached the gospel of the kingdom as they understood it. And they won many souls among these gentiles and apostate Jews.
 \vs p144 7:4 Abner, the chief of John’s apostles, became a devout believer in Jesus and was later on made the head of a group of 70 teachers whom the Master commissioned to preach the gospel.
 \usection{In Camp near Pella}
