--- a/tex/p146.tex
+++ b/tex/p146.tex
@@ -7,7 +7,7 @@
 \uminitoc{Nain and the Widow’s Son}
 \uminitoc{At Endor}
 \author{Midwayer Commission}
-\vs p146 0:1 The first public preaching tour of Galilee began on Sunday, January 18, A.D.\,28, and continued for about two months, ending with the return to Capernaum on March 17. On this tour Jesus and the 12 apostles, assisted by the former apostles of John, preached the gospel and baptized believers in Rimmon, Jotapata, Ramah, Zebulun, Iron, Gischala, Chorazin, Madon, Cana, Nain, and Endor. In these cities they tarried and taught, while in many other smaller towns they proclaimed the gospel of the kingdom as they passed through.
+\vs p146 0:1 The first public preaching tour of Galilee began on Sunday, January 18, A.D.\,28, and continued for about two months, ending with the return to Capernaum on March 17. On this tour Jesus and the twelve apostles, assisted by the former apostles of John, preached the gospel and baptized believers in Rimmon, Jotapata, Ramah, Zebulun, Iron, Gischala, Chorazin, Madon, Cana, Nain, and Endor. In these cities they tarried and taught, while in many other smaller towns they proclaimed the gospel of the kingdom as they passed through.
 \vs p146 0:2 This was the first time Jesus permitted his associates to preach without restraint. On this tour he cautioned them on only three occasions; he admonished them to remain away from Nazareth and to be discreet when passing through Capernaum and Tiberias. It was a source of great satisfaction to the apostles at last to feel they were at liberty to preach and teach without restriction, and they threw themselves into the work of preaching the gospel, ministering to the sick, and baptizing believers, with great earnestness and joy.
 \usection{Preaching at Rimmon}
 \vs p146 1:1 The small city of Rimmon had once been dedicated to the worship of a Babylonian god of the air, Ramman. Many of the earlier Babylonian and later Zoroastrian teachings were still embraced in the beliefs of the Rimmonites; therefore did Jesus and the 24 devote much of their time to the task of making plain the difference between these older beliefs and the new gospel of the kingdom. Peter here preached one of the great sermons of his early career on “Aaron and the Golden Calf.”
