--- a/tex/p149.tex
+++ b/tex/p149.tex
@@ -7,10 +7,10 @@
 \uminitoc{The “Fear of the Lord”}
 \uminitoc{Returning to Bethsaida}
 \author{Midwayer Commission}
-\vs p149 0:1 The second public preaching tour of Galilee began on Sunday, October 3, A.D.\,28, and continued for almost three months, ending on December 30. Participating in this effort were Jesus and his 12 apostles, assisted by the newly recruited corps of 117 evangelists and by numerous other interested persons. On this tour they visited Gadara, Ptolemais, Japhia, Dabaritta, Megiddo, Jezreel, Scythopolis, Tarichea, Hippos, Gamala, Bethsaida\hyp{}Julias, and many other cities and villages.
+\vs p149 0:1 The second public preaching tour of Galilee began on Sunday, October 3, A.D.\,28, and continued for almost three months, ending on December 30. Participating in this effort were Jesus and his twelve apostles, assisted by the newly recruited corps of 117 evangelists and by numerous other interested persons. On this tour they visited Gadara, Ptolemais, Japhia, Dabaritta, Megiddo, Jezreel, Scythopolis, Tarichea, Hippos, Gamala, Bethsaida\hyp{}Julias, and many other cities and villages.
 \vs p149 0:2 Before the departure on this Sunday morning Andrew and Peter asked Jesus to give the final charge to the new evangelists, but the Master declined, saying that it was not his province to do those things which others could acceptably perform. After due deliberation it was decided that James Zebedee should administer the charge. At the conclusion of James’s remarks Jesus said to the evangelists: \textcolour{ubdarkred}{“Go now forth to do the work as you have been charged, and later on, when you have shown yourselves competent and faithful, I will ordain you to preach the gospel of the kingdom.”}
 \vs p149 0:3 On this tour only James and John travelled with Jesus. Peter and the other apostles each took with them about one dozen of the evangelists and maintained close contact with them while they carried on their work of preaching and teaching. As fast as believers were ready to enter the kingdom, the apostles would administer baptism. Jesus and his two companions travelled extensively during these three months, often visiting two cities in one day to observe the work of the evangelists and to encourage them in their efforts to establish the kingdom. This entire second preaching tour was principally an effort to afford practical experience for this corps of 117 newly trained evangelists.
-\vs p149 0:4 \pc Throughout this period and subsequently, up to the time of the final departure of Jesus and the 12 for Jerusalem, David Zebedee maintained a permanent headquarters for the work of the kingdom in his father’s house at Bethsaida. This was the clearinghouse for Jesus’ work on earth and the relay station for the messenger service which David carried on between the workers in various parts of Palestine and adjacent regions. He did all of this on his own initiative but with the approval of Andrew. David employed 40 to 50 messengers in this intelligence division of the rapidly enlarging and extending work of the kingdom. While thus employed, he partially supported himself by spending some of his time at his old work of fishing.
+\vs p149 0:4 \pc Throughout this period and subsequently, up to the time of the final departure of Jesus and the twelve for Jerusalem, David Zebedee maintained a permanent headquarters for the work of the kingdom in his father’s house at Bethsaida. This was the clearinghouse for Jesus’ work on earth and the relay station for the messenger service which David carried on between the workers in various parts of Palestine and adjacent regions. He did all of this on his own initiative but with the approval of Andrew. David employed 40 to 50 messengers in this intelligence division of the rapidly enlarging and extending work of the kingdom. While thus employed, he partially supported himself by spending some of his time at his old work of fishing.
 \usection{The Widespread Fame of Jesus}
 \vs p149 1:1 By the time the camp at Bethsaida had been broken up, the fame of Jesus, particularly as a healer, had spread to all parts of Palestine and through all of Syria and the surrounding countries. For weeks after they left Bethsaida, the sick continued to arrive, and when they did not find the Master, on learning from David where he was, they would go in search of him. On this tour Jesus did not deliberately perform any so\hyp{}called miracles of healing. Nevertheless, scores of afflicted found restoration of health and happiness as a result of the reconstructive power of the intense faith which impelled them to seek for healing.
 \vs p149 1:2 There began to appear about the time of this mission --- and continued throughout the remainder of Jesus’ life on earth --- a peculiar and unexplained series of healing phenomena. In the course of this 3 months’ tour more than 100 men, women, and children from Judea, Idumea, Galilee, Syria, Tyre, and Sidon, and from beyond the Jordan were beneficiaries of this unconscious healing by Jesus and, returning to their homes, added to the enlargement of Jesus’ fame. And they did this notwithstanding that Jesus would, every time he observed one of these cases of spontaneous healing, directly charge the beneficiary to \textcolour{ubdarkred}{“tell no man.”}
