--- a/tex/p155.tex
+++ b/tex/p155.tex
@@ -15,8 +15,8 @@
 \vs p155 1:5 \textcolour{ubdarkred}{“Let me emphatically state this eternal truth: If you, by truth co\hyp{}ordination, learn to exemplify in your lives this beautiful wholeness of righteousness, your fellow men will then seek after you that they may gain what you have so acquired. The measure wherewith truth seekers are drawn to you represents the measure of your truth endowment, your righteousness. The extent to which you have to go with your message to the people is, in a way, the measure of your failure to live the whole or righteous life, the truth\hyp{}co\hyp{}ordinated life.”}
 \vs p155 1:6 And many other things the Master taught his apostles and the evangelists before they bade him good night and sought rest upon their pillows.
 \usection{The Evangelists in Chorazin}
-\vs p155 2:1 On Monday morning, May 23, Jesus directed Peter to go over to Chorazin with the 12 evangelists while he, with the 11, departed for Caesarea\hyp{}Philippi, going by way of the Jordan to the Damascus\hyp{}Capernaum road, thence north\hyp{}east to the junction with the road to Caesarea\hyp{}Philippi, and then on into that city, where they tarried and taught for two weeks. They arrived during the afternoon of Tuesday, May 24.
-\vs p155 2:2 Peter and the evangelists sojourned in Chorazin for two weeks, preaching the gospel of the kingdom to a small but earnest company of believers. But they were not able to win many new converts. No city of all Galilee yielded so few souls for the kingdom as Chorazin. In accordance with Peter’s instructions the 12 evangelists had less to say about healing --- things physical --- while they preached and taught with increased vigour the spiritual truths of the heavenly kingdom. These two weeks at Chorazin constituted a veritable baptism of adversity for the 12 evangelists in that it was the most difficult and unproductive period in their careers up to this time. Being thus deprived of the satisfaction of winning souls for the kingdom, each of them the more earnestly and honestly took stock of his own soul and its progress in the spiritual paths of the new life.
+\vs p155 2:1 On Monday morning, May 23, Jesus directed Peter to go over to Chorazin with the twelve evangelists while he, with the 11, departed for Caesarea\hyp{}Philippi, going by way of the Jordan to the Damascus\hyp{}Capernaum road, thence north\hyp{}east to the junction with the road to Caesarea\hyp{}Philippi, and then on into that city, where they tarried and taught for two weeks. They arrived during the afternoon of Tuesday, May 24.
+\vs p155 2:2 Peter and the evangelists sojourned in Chorazin for two weeks, preaching the gospel of the kingdom to a small but earnest company of believers. But they were not able to win many new converts. No city of all Galilee yielded so few souls for the kingdom as Chorazin. In accordance with Peter’s instructions the twelve evangelists had less to say about healing --- things physical --- while they preached and taught with increased vigour the spiritual truths of the heavenly kingdom. These two weeks at Chorazin constituted a veritable baptism of adversity for the twelve evangelists in that it was the most difficult and unproductive period in their careers up to this time. Being thus deprived of the satisfaction of winning souls for the kingdom, each of them the more earnestly and honestly took stock of his own soul and its progress in the spiritual paths of the new life.
 \vs p155 2:3 When it appeared that no more people were minded to seek entrance into the kingdom, Peter, on Tuesday, June 7, called his associates together and departed for Caesarea\hyp{}Philippi to join Jesus and the apostles. They arrived about noontime on Wednesday and spent the entire evening in rehearsing their experiences among the unbelievers of Chorazin. During the discussions of this evening Jesus made further reference to the parable of the sower and taught them much about the meaning of the apparent failure of life undertakings.
 \usection{At Caesarea\hyp{}Philippi}
 \vs p155 3:1 Although Jesus did no public work during this two weeks’ sojourn near Caesarea\hyp{}Philippi, the apostles held numerous quiet evening meetings in the city, and many of the believers came out to the camp to talk with the Master. Very few were added to the group of believers as a result of this visit. Jesus talked with the apostles each day, and they more clearly discerned that a new phase of the work of preaching the kingdom of heaven was now beginning. They were commencing to comprehend that the “kingdom of heaven is not meat and drink but the realization of the spiritual joy of the acceptance of divine sonship.”
@@ -26,7 +26,7 @@
 \vs p155 3:5 One of the great lessons of this sojourn at Caesarea had to do with the origin of religious traditions, with the grave danger of allowing a sense of sacredness to become attached to nonsacred things, common ideas, or everyday events. From one conference they emerged with the teaching that true religion was man’s heartfelt loyalty to his highest and truest convictions.
 \vs p155 3:6 Jesus warned his believers that, if their religious longings were only material, increasing knowledge of nature would, by progressive displacement of the supposed supernatural origin of things, ultimately deprive them of their faith in God. But that, if their religion were spiritual, never could the progress of physical science disturb their faith in eternal realities and divine values.
 \vs p155 3:7 They learned that, when religion is wholly spiritual in motive, it makes all life more worth while, filling it with high purposes, dignifying it with transcendent values, inspiring it with superb motives, all the while comforting the human soul with a sublime and sustaining hope. True religion is designed to lessen the strain of existence; it releases faith and courage for daily living and unselfish serving. Faith promotes spiritual vitality and righteous fruitfulness.
-\vs p155 3:8 Jesus repeatedly taught his apostles that no civilization could long survive the loss of the best in its religion. And he never grew weary of pointing out to the 12 the great danger of accepting religious symbols and ceremonies in the place of religious experience. His whole earth life was consistently devoted to the mission of thawing out the frozen forms of religion into the liquid liberties of enlightened sonship.
+\vs p155 3:8 Jesus repeatedly taught his apostles that no civilization could long survive the loss of the best in its religion. And he never grew weary of pointing out to the twelve the great danger of accepting religious symbols and ceremonies in the place of religious experience. His whole earth life was consistently devoted to the mission of thawing out the frozen forms of religion into the liquid liberties of enlightened sonship.
 \usection{On the Way to Phoenicia}
 \vs p155 4:1 On Thursday morning, June 9, after receiving word regarding the progress of the kingdom brought by the messengers of David from Bethsaida, this group of 25 teachers of truth left Caesarea\hyp{}Philippi to begin their journey to the Phoenician coast. They passed around the marsh country, by way of Luz, to the point of junction with the Magdala\hyp{}Mount Lebanon trail road, thence to the crossing with the road leading to Sidon, arriving there Friday afternoon.
 \vs p155 4:2 While pausing for lunch under the shadow of an overhanging ledge of rock, near Luz, Jesus delivered one of the most remarkable addresses which his apostles ever listened to throughout all their years of association with him. No sooner had they seated themselves to break bread than Simon Peter asked Jesus: “Master, since the Father in heaven knows all things, and since his spirit is our support in the establishment of the kingdom of heaven on earth, why is it that we flee from the threats of our enemies? Why do we refuse to confront the foes of truth?” But before Jesus had begun to answer Peter’s question, Thomas broke in, asking: “Master, I should really like to know just what is wrong with the religion of our enemies at Jerusalem. What is the real difference between their religion and ours? Why is it we are at such diversity of belief when we all profess to serve the same God?” And when Thomas had finished, Jesus said: \textcolour{ubdarkred}{“While I would not ignore Peter’s question, knowing full well how easy it would be to misunderstand my reasons for avoiding an open clash with the rulers of the Jews at just this time, still it will prove more helpful to all of you if I choose rather to answer Thomas’s question. And that I will proceed to do when you have finished your lunch.”}
