--- a/tex/p156.tex
+++ b/tex/p156.tex
@@ -9,7 +9,7 @@
 \vs p156 0:1 On Friday afternoon, June 10, Jesus and his associates arrived in the environs of Sidon, where they stopped at the home of a well\hyp{}to\hyp{}do woman who had been a patient in the Bethsaida hospital during the times when Jesus was at the height of his popular favour. The evangelists and the apostles were lodged with her friends in the immediate neighbourhood, and they rested over the Sabbath day amid these refreshing surroundings. They spent almost 2½ weeks in Sidon and vicinity before they prepared to visit the coast cities to the north.
 \vs p156 0:2 This June Sabbath day was one of great quiet. The evangelists and apostles were altogether absorbed in their meditations regarding the discourses of the Master on religion to which they had listened en route to Sidon. They were all able to appreciate something of what he had told them, but none of them fully grasped the import of his teaching.
 \usection{The Syrian Woman}
-\vs p156 1:1 There lived near the home of Karuska, where the Master lodged, a Syrian woman who had heard much of Jesus as a great healer and teacher, and on this Sabbath afternoon she came over, bringing her little daughter. The child, about 12 years old, was afflicted with a grievous nervous disorder characterized by convulsions and other distressing manifestations.
+\vs p156 1:1 There lived near the home of Karuska, where the Master lodged, a Syrian woman who had heard much of Jesus as a great healer and teacher, and on this Sabbath afternoon she came over, bringing her little daughter. The child, about twelve years old, was afflicted with a grievous nervous disorder characterized by convulsions and other distressing manifestations.
 \vs p156 1:2 Jesus had charged his associates to tell no one of his presence at the home of Karuska, explaining that he desired to have a rest. While they had obeyed their Master’s instructions, the servant of Karuska had gone over to the house of this Syrian woman, Norana, to inform her that Jesus lodged at the home of her mistress and had urged this anxious mother to bring her afflicted daughter for healing. This mother, of course, believed that her child was possessed by a demon, an unclean spirit.
 \vs p156 1:3 When Norana arrived with her daughter, the Alpheus twins explained through an interpreter that the Master was resting and could not be disturbed; whereupon Norana replied that she and the child would remain right there until the Master had finished his rest. Peter also endeavoured to reason with her and to persuade her to go home. He explained that Jesus was weary with much teaching and healing, and that he had come to Phoenicia for a period of quiet and rest. But it was futile; Norana would not leave. To Peter’s entreaties she replied only: “I will not depart until I have seen your Master. I know he can cast the demon out of my child, and I will not go until the healer has looked upon my daughter.”
 \vs p156 1:4 Then Thomas sought to send the woman away but met only with failure. To him she said: “I have faith that your Master can cast out this demon which torments my child. I have heard of his mighty works in Galilee, and I believe in him. What has happened to you, his disciples, that you would send away those who come seeking your Master’s help?” And when she had thus spoken, Thomas withdrew.
@@ -56,9 +56,9 @@
 \vs p156 5:20 The God\hyp{}conscious mortal is certain of salvation; he is unafraid of life; he is honest and consistent. He knows how bravely to endure unavoidable suffering; he is uncomplaining when faced by inescapable hardship.
 \vs p156 5:21 The true believer does not grow weary in well\hyp{}doing just because he is thwarted. Difficulty whets the ardour of the truth lover, while obstacles only challenge the exertions of the undaunted kingdom builder.
 \vs p156 5:22 \pc And many other things Jesus taught them before they made ready to depart from Tyre.
-\vs p156 5:23 The day before Jesus left Tyre for the return to the region of the Sea of Galilee, he called his associates together and directed the 12 evangelists to go back by a route different from that which he and the 12 apostles were to take. And after the evangelists here left Jesus, they were never again so intimately associated with him.
+\vs p156 5:23 The day before Jesus left Tyre for the return to the region of the Sea of Galilee, he called his associates together and directed the twelve evangelists to go back by a route different from that which he and the twelve apostles were to take. And after the evangelists here left Jesus, they were never again so intimately associated with him.
 \usection{The Return from Phoenicia}
-\vs p156 6:1 About noon on Sunday, July 24, Jesus and the 12 left the home of Joseph, south of Tyre, going down the coast to Ptolemais. Here they tarried for a day, speaking words of comfort to the company of believers resident there. Peter preached to them on the evening of July 25.
+\vs p156 6:1 About noon on Sunday, July 24, Jesus and the twelve left the home of Joseph, south of Tyre, going down the coast to Ptolemais. Here they tarried for a day, speaking words of comfort to the company of believers resident there. Peter preached to them on the evening of July 25.
 \vs p156 6:2 On Tuesday they left Ptolemais, going east inland to near Jotapata by way of the Tiberias road. Wednesday they stopped at Jotapata and instructed the believers further in the things of the kingdom. Thursday they left Jotapata, going north on the Nazareth\hyp{}Mount Lebanon trail to the village of Zebulun, by way of Ramah. They held meetings at Ramah on Friday and remained over the Sabbath. They reached Zebulun on Sunday, the 31\ts{st}, holding a meeting that evening and departing the next morning.
 \vs p156 6:3 Leaving Zebulun, they journeyed over to the junction with the Magdala\hyp{}Sidon road near Gischala, and thence they made their way to Gennesaret on the western shores of the lake of Galilee, south of Capernaum, where they had appointed to meet with David Zebedee, and where they intended to take counsel as to the next move to be made in the work of preaching the gospel of the kingdom.
 \vs p156 6:4 During a brief conference with David they learned that many leaders were then gathered together on the opposite side of the lake near Kheresa, and accordingly, that very evening a boat took them across. For one day they rested quietly in the hills, going on the next day to the park, near by, where the Master once fed the 5,000. Here they rested for 3 days and held daily conferences, which were attended by about 50 men and women, the remnants of the once numerous company of believers resident in Capernaum and its environs.
