--- a/tex/p159.tex
+++ b/tex/p159.tex
@@ -6,8 +6,8 @@
 \uminitoc{The Positive Nature of Jesus’ Religion}
 \uminitoc{The Return to Magadan}
 \author{Midwayer Commission}
-\vs p159 0:1 When Jesus and the 12 arrived at Magadan Park, they found awaiting them a group of almost 100 evangelists and disciples, including the women’s corps, and they were ready immediately to begin the teaching and preaching tour of the cities of the Decapolis.
-\vs p159 0:2 On this Thursday morning, August 18, the Master called his followers together and directed that each of the apostles should associate himself with one of the 12 evangelists, and that with others of the evangelists they should go out in 12 groups to labour in the cities and villages of the Decapolis. The women’s corps and others of the disciples he directed to remain with him. Jesus allotted four weeks to this tour, instructing his followers to return to Magadan not later than Friday, September 16. He promised to visit them often during this time. In the course of this month these 12 groups laboured in Gerasa, Gamala, Hippos, Zaphon, Gadara, Abila, Edrei, Philadelphia, Heshbon, Dium, Scythopolis, and many other cities. Throughout this tour no miracles of healing or other extraordinary events occurred.
+\vs p159 0:1 When Jesus and the twelve arrived at Magadan Park, they found awaiting them a group of almost 100 evangelists and disciples, including the women’s corps, and they were ready immediately to begin the teaching and preaching tour of the cities of the Decapolis.
+\vs p159 0:2 On this Thursday morning, August 18, the Master called his followers together and directed that each of the apostles should associate himself with one of the twelve evangelists, and that with others of the evangelists they should go out in twelve groups to labour in the cities and villages of the Decapolis. The women’s corps and others of the disciples he directed to remain with him. Jesus allotted four weeks to this tour, instructing his followers to return to Magadan not later than Friday, September 16. He promised to visit them often during this time. In the course of this month these twelve groups laboured in Gerasa, Gamala, Hippos, Zaphon, Gadara, Abila, Edrei, Philadelphia, Heshbon, Dium, Scythopolis, and many other cities. Throughout this tour no miracles of healing or other extraordinary events occurred.
 \usection{The Sermon on Forgiveness}
 \vs p159 1:1 One evening at Hippos, in answer to a disciple’s question, Jesus taught the lesson on forgiveness. Said the Master:
 \vs p159 1:2 \pc \textcolour{ubdarkred}{“If a kindhearted man has 100 sheep and 1 of them goes astray, does he not immediately leave the 99 and go out in search of the 1 that has gone astray? And if he is a good shepherd, will he not keep up his quest for the lost sheep until he finds it? And then, when the shepherd has found his lost sheep, he lays it over his shoulder and, going home rejoicing, calls to his friends and neighbours, ‘Rejoice with me, for I have found my sheep that was lost.’ I declare that there is more joy in heaven over one sinner who repents than over 99 righteous persons who need no repentance. Even so, it is not the will of my Father in heaven that one of these little ones should go astray, much less that they should perish. In your religion God may receive repentant sinners; in the gospel of the kingdom the Father goes forth to find them even before they have seriously thought of repentance.}
@@ -69,7 +69,7 @@
 \usection{The Return to Magadan}
 \vs p159 6:1 The mission of four weeks in the Decapolis was moderately successful. Hundreds of souls were received into the kingdom, and the apostles and evangelists had a valuable experience in carrying on their work without the inspiration of the immediate personal presence of Jesus.
 \vs p159 6:2 On Friday, September 16, the entire corps of workers assembled by prearrangement at Magadan Park. On the Sabbath day a council of more than 100 believers was held at which the future plans for extending the work of the kingdom were fully considered. The messengers of David were present and made reports concerning the welfare of the believers throughout Judea, Samaria, Galilee, and adjoining districts.
-\vs p159 6:3 Few of Jesus’ followers at this time fully appreciated the great value of the services of the messenger corps. Not only did the messengers keep the believers throughout Palestine in touch with each other and with Jesus and the apostles, but during these dark days they also served as collectors of funds, not only for the sustenance of Jesus and his associates, but also for the support of the families of the 12 apostles and the 12 evangelists.
+\vs p159 6:3 Few of Jesus’ followers at this time fully appreciated the great value of the services of the messenger corps. Not only did the messengers keep the believers throughout Palestine in touch with each other and with Jesus and the apostles, but during these dark days they also served as collectors of funds, not only for the sustenance of Jesus and his associates, but also for the support of the families of the twelve apostles and the twelve evangelists.
 \vs p159 6:4 About this time Abner moved his base of operations from Hebron to Bethlehem, and this latter place was also the headquarters in Judea for David’s messengers. David maintained an overnight relay messenger service between Jerusalem and Bethsaida. These runners left Jerusalem each evening, relaying at Sychar and Scythopolis, arriving in Bethsaida by breakfast time the next morning.
 \vs p159 6:5 Jesus and his associates now prepared to take a week’s rest before they made ready to start upon the last epoch of their labours in behalf of the kingdom. This was their last rest, for the Perean mission developed into a campaign of preaching and teaching which extended right on down to the time of their arrival at Jerusalem and of the enactment of the closing episodes of Jesus’ earth career.
 \quizlink
