--- a/tex/p161.tex
+++ b/tex/p161.tex
@@ -3,7 +3,7 @@
 \uminitoc{The Divine Nature of Jesus}
 \uminitoc{Jesus’ Human and Divine Minds}
 \author{Midwayer Commission}
-\vs p161 0:1 On Sunday, September 25, A.D.\,29, the apostles and the evangelists assembled at Magadan. After a long conference that evening with his associates, Jesus surprised all by announcing that early the next day he and the 12 apostles would start for Jerusalem to attend the feast of tabernacles. He directed that the evangelists visit the believers in Galilee, and that the women’s corps return for a while to Bethsaida.
+\vs p161 0:1 On Sunday, September 25, A.D.\,29, the apostles and the evangelists assembled at Magadan. After a long conference that evening with his associates, Jesus surprised all by announcing that early the next day he and the twelve apostles would start for Jerusalem to attend the feast of tabernacles. He directed that the evangelists visit the believers in Galilee, and that the women’s corps return for a while to Bethsaida.
 \vs p161 0:2 When the hour came to leave for Jerusalem, Nathaniel and Thomas were still in the midst of their discussions with Rodan of Alexandria, and they secured the Master’s permission to remain at Magadan for a few days. And so, while Jesus and the ten were on their way to Jerusalem, Nathaniel and Thomas were engaged in earnest debate with Rodan. The week prior, in which Rodan had expounded his philosophy, Thomas and Nathaniel had alternated in presenting the gospel of the kingdom to the Greek philosopher. Rodan discovered that he had been well instructed in Jesus’ teachings by one of the former apostles of John the Baptist who had been his teacher at Alexandria.
 \usection{The Personality of God}
 \vs p161 1:1 There was one matter on which Rodan and the two apostles did not see alike, and that was the personality of God. Rodan readily accepted all that was presented to him regarding the attributes of God, but he contended that the Father in heaven is not, cannot be, a person as man conceives personality. While the apostles found themselves in difficulty trying to prove that God is a person, Rodan found it still more difficult to prove he is not a person.
@@ -11,7 +11,7 @@
 \vs p161 1:3 This contention greatly troubled Thomas and Nathaniel, and they had asked Jesus to come to their rescue, but the Master refused to enter into their discussions. He did say to Thomas: \textcolour{ubdarkred}{“It matters little what \bibemph{idea} of the Father you may entertain as long as you are spiritually acquainted with the \bibemph{ideal} of his infinite and eternal nature.”}
 \vs p161 1:4 Thomas contended that God does communicate with man, and therefore that the Father is a person, even within the definition of Rodan. This the Greek rejected on the ground that God does not reveal himself personally; that he is still a mystery. Then Nathaniel appealed to his own personal experience with God, and that Rodan allowed, affirming that he had recently had similar experiences, but these experiences, he contended, proved only the \bibemph{reality} of God, not his \bibemph{personality.}
 \vs p161 1:5 By Monday night Thomas gave up. But by Tuesday night Nathaniel had won Rodan to believe in the personality of the Father, and he effected this change in the Greek’s views by the following steps of reasoning:
-\vs p161 1:6 \ublistelem{1.}\bibnobreakspace The Father in Paradise does enjoy equality of communication with at least two other beings who are fully equal to himself and wholly like himself --- the Eternal Son and the Infinite Spirit. In view of the doctrine of the Trinity, the Greek was compelled to concede the personality possibility of the Universal Father. (It was the later consideration of these discussions which led to the enlarged conception of the Trinity in the minds of the 12 apostles. Of course, it was the general belief that Jesus was the Eternal Son.)
+\vs p161 1:6 \ublistelem{1.}\bibnobreakspace The Father in Paradise does enjoy equality of communication with at least two other beings who are fully equal to himself and wholly like himself --- the Eternal Son and the Infinite Spirit. In view of the doctrine of the Trinity, the Greek was compelled to concede the personality possibility of the Universal Father. (It was the later consideration of these discussions which led to the enlarged conception of the Trinity in the minds of the twelve apostles. Of course, it was the general belief that Jesus was the Eternal Son.)
 \vs p161 1:7 \ublistelem{2.}\bibnobreakspace Since Jesus was equal with the Father, and since this Son had achieved the manifestation of personality to his earth children, such a phenomenon constituted proof of the fact, and demonstration of the possibility, of the possession of personality by all three of the Godheads and forever settled the question regarding the ability of God to communicate with man and the possibility of man’s communicating with God.
 \vs p161 1:8 \ublistelem{3.}\bibnobreakspace That Jesus was on terms of mutual association and perfect communication with man; that Jesus was the Son of God. That the relation of Son and Father presupposes equality of communication and mutuality of sympathetic understanding; that Jesus and the Father were one. That Jesus maintained at one and the same time understanding communication with both God and man, and that, since both God and man comprehended the meaning of the symbols of Jesus’ communication, both God and man possessed the attributes of personality in so far as the requirements of the ability of intercommunication were concerned. That the personality of Jesus demonstrated the personality of God, while it proved conclusively the presence of God in man. That two things which are related to the same thing are related to each other.
 \vs p161 1:9 \ublistelem{4.}\bibnobreakspace That personality represents man’s highest concept of human reality and divine values; that God also represents man’s highest concept of divine reality and infinite values; therefore, that God must be a divine and infinite personality, a personality in reality although infinitely and eternally transcending man’s concept and definition of personality, but nevertheless always and universally a personality.
