--- a/tex/p162.tex
+++ b/tex/p162.tex
@@ -12,7 +12,7 @@
 \vs p162 0:1 When Jesus started up to Jerusalem with the ten apostles, he planned to go through Samaria, that being the shorter route. Accordingly, they passed down the eastern shore of the lake and, by way of Scythopolis, entered the borders of Samaria. Near nightfall Jesus sent Philip and Matthew over to a village on the eastern slopes of Mount Gilboa to secure lodging for the company. It so happened that these villagers were greatly prejudiced against the Jews, even more so than the average Samaritans, and these feelings were heightened at this particular time as so many were on their way to the feast of tabernacles. These people knew very little about Jesus, and they refused him lodging because he and his associates were Jews. When Matthew and Philip manifested indignation and informed these Samaritans that they were declining to entertain the Holy One of Israel, the infuriated villagers chased them out of the little town with sticks and stones.
 \vs p162 0:2 After Philip and Matthew had returned to their fellows and reported how they had been driven out of the village, James and John stepped up to Jesus and said: “Master, we pray you to give us permission to bid fire come down from heaven to devour these insolent and impenitent Samaritans.” But when Jesus heard these words of vengeance, he turned upon the sons of Zebedee and severely rebuked them: \textcolour{ubdarkred}{“You know not what manner of attitude you manifest. Vengeance savours not of the outlook of the kingdom of heaven. Rather than dispute, let us journey over to the little village by the Jordan ford.”} Thus because of sectarian prejudice these Samaritans denied themselves the honour of showing hospitality to the Creator Son of a universe.
 \vs p162 0:3 Jesus and the ten stopped for the night at the village near the Jordan ford. Early the next day they crossed the river and continued on to Jerusalem by way of the east Jordan highway, arriving at Bethany late Wednesday evening. Thomas and Nathaniel arrived on Friday, having been delayed by their conferences with Rodan.
-\vs p162 0:4 \pc Jesus and the 12 remained in the vicinity of Jerusalem until the end of the following month (October), about 4½ weeks. Jesus himself went into the city only a few times, and these brief visits were made during the days of the feast of tabernacles. He spent a considerable portion of October with Abner and his associates at Bethlehem.
+\vs p162 0:4 \pc Jesus and the twelve remained in the vicinity of Jerusalem until the end of the following month (October), about 4½ weeks. Jesus himself went into the city only a few times, and these brief visits were made during the days of the feast of tabernacles. He spent a considerable portion of October with Abner and his associates at Bethlehem.
 \usection{The Dangers of the Visit to Jerusalem}
 \vs p162 1:1 Long before they fled from Galilee, the followers of Jesus had implored him to go to Jerusalem to proclaim the gospel of the kingdom in order that his message might have the prestige of having been preached at the centre of Jewish culture and learning; but now that he had actually come to Jerusalem to teach, they were afraid for his life. Knowing that the Sanhedrin had sought to bring Jesus to Jerusalem for trial and recalling the Master’s recently reiterated declarations that he must be subject to death, the apostles had been literally stunned by his sudden decision to attend the feast of tabernacles. To all their previous entreaties that he go to Jerusalem he had replied, \textcolour{ubdarkred}{“The hour has not yet come.”} Now, to their protests of fear he answered only, \textcolour{ubdarkred}{“But the hour has come.”}
 \vs p162 1:2 During the feast of tabernacles Jesus went boldly into Jerusalem on several occasions and publicly taught in the temple. This he did in spite of the efforts of his apostles to dissuade him. Though they had long urged him to proclaim his message in Jerusalem, they now feared to see him enter the city at this time, knowing full well that the scribes and Pharisees were bent on bringing about his death.
@@ -21,7 +21,7 @@
 \vs p162 1:5 There were many reasons why Jesus was able publicly to preach in the temple courts throughout the days of the feast, and chief of these was the fear that had come over the officers of the Sanhedrin as a result of the secret division of sentiment in their own ranks. It was a fact that many of the members of the Sanhedrin either secretly believed in Jesus or else were decidedly averse to arresting him during the feast, when such large numbers of people were present in Jerusalem, many of whom either believed in him or were at least friendly to the spiritual movement which he sponsored.
 \vs p162 1:6 The efforts of Abner and his associates throughout Judea had also done much to consolidate sentiment favourable to the kingdom, so much so that the enemies of Jesus dared not be too outspoken in their opposition. This was one of the reasons why Jesus could publicly visit Jerusalem and live to go away. One or two months before this he would certainly have been put to death.
 \vs p162 1:7 But the audacious boldness of Jesus in publicly appearing in Jerusalem overawed his enemies; they were not prepared for such a daring challenge. Several times during this month the Sanhedrin made feeble attempts to place the Master under arrest, but nothing came of these efforts. His enemies were so taken aback by Jesus’ unexpected public appearance in Jerusalem that they conjectured he must have been promised protection by the Roman authorities. Knowing that Philip (Herod Antipas’s brother) was almost a follower of Jesus, the members of the Sanhedrin speculated that Philip had secured for Jesus promises of protection against his enemies. Jesus had departed from their jurisdiction before they awakened to the realization that they had been mistaken in the belief that his sudden and bold appearance in Jerusalem had been due to a secret understanding with the Roman officials.
-\vs p162 1:8 Only the 12 apostles had known that Jesus intended to attend the feast of tabernacles when they had departed from Magadan. The other followers of the Master were greatly astonished when he appeared in the temple courts and began publicly to teach, and the Jewish authorities were surprised beyond expression when it was reported that he was teaching in the temple.
+\vs p162 1:8 Only the twelve apostles had known that Jesus intended to attend the feast of tabernacles when they had departed from Magadan. The other followers of the Master were greatly astonished when he appeared in the temple courts and began publicly to teach, and the Jewish authorities were surprised beyond expression when it was reported that he was teaching in the temple.
 \vs p162 1:9 Although his disciples had not expected Jesus to attend the feast, the vast majority of the pilgrims from afar who had heard of him entertained the hope that they might see him at Jerusalem. And they were not disappointed, for on several occasions he taught in Solomon’s Porch and elsewhere in the temple courts. These teachings were really the official or formal announcement of the divinity of Jesus to the Jewish people and to the whole world.
 \vs p162 1:10 The multitudes who listened to the Master’s teachings were divided in their opinions. Some said he was a good man; some a prophet; some that he was truly the Messiah; others said he was a mischievous meddler, that he was leading the people astray with his strange doctrines. His enemies hesitated to denounce him openly for fear of his friendly believers, while his friends feared to acknowledge him openly for fear of the Jewish leaders, knowing that the Sanhedrin was determined to put him to death. But even his enemies marveled at his teaching, knowing that he had not been instructed in the schools of the rabbis.
 \vs p162 1:11 Every time Jesus went to Jerusalem, his apostles were filled with terror. They were the more afraid as, from day to day, they listened to his increasingly bold pronouncements regarding the nature of his mission on earth. They were unaccustomed to hearing Jesus make such positive claims and such amazing assertions even when preaching among his friends.
@@ -70,11 +70,11 @@
 \vs p162 8:2 For years it had been the custom for these 3 to drop everything and listen to Jesus’ teaching whenever he chanced to visit them. With the loss of their parents, Martha had assumed the responsibilities of the home life, and so on this occasion, while Lazarus and Mary sat at Jesus’ feet drinking in his refreshing teaching, Martha made ready to serve the evening meal. It should be explained that Martha was unnecessarily distracted by numerous needless tasks, and that she was cumbered by many trivial cares; that was her disposition.
 \vs p162 8:3 As Martha busied herself with all these supposed duties, she was perturbed because Mary did nothing to help. Therefore she went to Jesus and said: “Master, do you not care that my sister has left me alone to do all of the serving? Will you not bid her to come and help me?” Jesus answered: \textcolour{ubdarkred}{“Martha, Martha, why are you always anxious about so many things and troubled by so many trifles? Only one thing is really worth while, and since Mary has chosen this good and needful part, I shall not take it away from her. But when will both of you learn to live as I have taught you: both serving in co\hyp{}operation and both refreshing your souls in unison? Can you not learn that there is a time for everything --- that the lesser matters of life should give way before the greater things of the heavenly kingdom?”}
 \usection{At Bethlehem with Abner}
-\vs p162 9:1 Throughout the week that followed the feast of tabernacles, scores of believers forgathered at Bethany and received instruction from the 12 apostles. The Sanhedrin made no effort to molest these gatherings since Jesus was not present; he was throughout this time working with Abner and his associates in Bethlehem. The day following the close of the feast, Jesus had departed for Bethany, and he did not again teach in the temple during this visit to Jerusalem.
+\vs p162 9:1 Throughout the week that followed the feast of tabernacles, scores of believers forgathered at Bethany and received instruction from the twelve apostles. The Sanhedrin made no effort to molest these gatherings since Jesus was not present; he was throughout this time working with Abner and his associates in Bethlehem. The day following the close of the feast, Jesus had departed for Bethany, and he did not again teach in the temple during this visit to Jerusalem.
 \vs p162 9:2 \pc At this time, Abner was making his headquarters at Bethlehem, and from that centre many workers had been sent to the cities of Judea and southern Samaria and even to Alexandria. Within a few days of his arrival, Jesus and Abner completed the arrangements for the consolidation of the work of the two groups of apostles.
 \vs p162 9:3 Throughout his visit to the feast of tabernacles, Jesus had divided his time about equally between Bethany and Bethlehem. At Bethany he spent considerable time with his apostles; at Bethlehem he gave much instruction to Abner and the other former apostles of John. And it was this intimate contact that finally led them to believe in him. These former apostles of John the Baptist were influenced by the courage he displayed in his public teaching in Jerusalem as well as by the sympathetic understanding they experienced in his private teaching at Bethlehem. These influences finally and fully won over each of Abner’s associates to a wholehearted acceptance of the kingdom and all that such a step implied.
-\vs p162 9:4 \pc Before leaving Bethlehem for the last time, the Master made arrangements for them all to join him in the united effort which was to precede the ending of his earth career in the flesh. It was agreed that Abner and his associates were to join Jesus and the 12 in the near future at Magadan Park.
-\vs p162 9:5 In accordance with this understanding, early in November Abner and his 11 fellows cast their lot with Jesus and the 12 and laboured with them as one organization right on down to the crucifixion.
-\vs p162 9:6 In the latter part of October Jesus and the 12 withdrew from the immediate vicinity of Jerusalem. On Sunday, October 30, Jesus and his associates left the city of Ephraim, where he had been resting in seclusion for a few days, and, going by the west Jordan highway directly to Magadan Park, arrived late on the afternoon of Wednesday, November 2.
+\vs p162 9:4 \pc Before leaving Bethlehem for the last time, the Master made arrangements for them all to join him in the united effort which was to precede the ending of his earth career in the flesh. It was agreed that Abner and his associates were to join Jesus and the twelve in the near future at Magadan Park.
+\vs p162 9:5 In accordance with this understanding, early in November Abner and his 11 fellows cast their lot with Jesus and the twelve and laboured with them as one organization right on down to the crucifixion.
+\vs p162 9:6 In the latter part of October Jesus and the twelve withdrew from the immediate vicinity of Jerusalem. On Sunday, October 30, Jesus and his associates left the city of Ephraim, where he had been resting in seclusion for a few days, and, going by the west Jordan highway directly to Magadan Park, arrived late on the afternoon of Wednesday, November 2.
 \vs p162 9:7 The apostles were greatly relieved to have the Master back on friendly soil; no more did they urge him to go up to Jerusalem to proclaim the gospel of the kingdom.
 \quizlink
