--- a/tex/p163.tex
+++ b/tex/p163.tex
@@ -7,7 +7,7 @@
 \uminitoc{The Return of the Seventy}
 \uminitoc{Preparation for the Last Mission}
 \author{Midwayer Commission}
-\vs p163 0:1 A few days after the return of Jesus and the 12 to Magadan from Jerusalem, Abner and a group of some 50 disciples arrived from Bethlehem. At this time there were also assembled at Magadan Camp the evangelistic corps, the women’s corps, and about 150 other true and tried disciples from all parts of Palestine. After devoting a few days to visiting and the reorganization of the camp, Jesus and the 12 began a course of intensive training for this special group of believers, and from this well\hyp{}trained and experienced aggregation of disciples the Master subsequently chose the 70 teachers and sent them forth to proclaim the gospel of the kingdom. This regular instruction began on Friday, November 4, and continued until Sabbath, November 19.
+\vs p163 0:1 A few days after the return of Jesus and the twelve to Magadan from Jerusalem, Abner and a group of some 50 disciples arrived from Bethlehem. At this time there were also assembled at Magadan Camp the evangelistic corps, the women’s corps, and about 150 other true and tried disciples from all parts of Palestine. After devoting a few days to visiting and the reorganization of the camp, Jesus and the twelve began a course of intensive training for this special group of believers, and from this well\hyp{}trained and experienced aggregation of disciples the Master subsequently chose the 70 teachers and sent them forth to proclaim the gospel of the kingdom. This regular instruction began on Friday, November 4, and continued until Sabbath, November 19.
 \vs p163 0:2 Jesus gave a talk to this company each morning. Peter taught methods of public preaching; Nathaniel instructed them in the art of teaching; Thomas explained how to answer questions; while Matthew directed the organization of their group finances. The other apostles also participated in this training in accordance with their special experience and natural talents.
 \usection{Ordination of the Seventy}
 \vs p163 1:1 The 70 were ordained by Jesus on Sabbath afternoon, November 19, at the Magadan Camp, and Abner was placed at the head of these gospel preachers and teachers. This corps of 70 consisted of Abner and 10 of the former apostles of John, 51 of the earlier evangelists, and 8 other disciples who had distinguished themselves in the service of the kingdom.
@@ -27,12 +27,12 @@
 \vs p163 2:8 Thus always it was and forever will be: Men must arrive at their own decisions. There is a certain range of the freedom of choice which mortals may exercise. The forces of the spiritual world will not coerce man; they allow him to go the way of his own choosing.
 \vs p163 2:9 Jesus foresaw that Matadormus, with his riches, could not possibly become an ordained associate of men who had forsaken all for the gospel; at the same time, he saw that, without his riches, he would become the ultimate leader of all of them. But, like Jesus’ own brethren, he never became great in the kingdom because he deprived himself of that intimate and personal association with the Master which might have been his experience had he been willing to do at this time the very thing which Jesus asked, and which, several years subsequently, he actually did.
 \vs p163 2:10 Riches have nothing directly to do with entrance into the kingdom of heaven, but the \bibemph{love of wealth does.} The spiritual loyalties of the kingdom are incompatible with servility to materialistic mammon. Man may not share his supreme loyalty to a spiritual ideal with a material devotion.
-\vs p163 2:11 Jesus never taught that it was wrong to have wealth. He required only the 12 and the 70 to dedicate all of their worldly possessions to the common cause. Even then, he provided for the profitable liquidation of their property, as in the case of the Apostle Matthew. Jesus many times advised his well\hyp{}to\hyp{}do disciples as he taught the rich man of Rome. The Master regarded the wise investment of excess earnings as a legitimate form of insurance against future and unavoidable adversity. When the apostolic treasury was overflowing, Judas put funds on deposit to be used subsequently when they might suffer greatly from a diminution of income. This Judas did after consultation with Andrew. Jesus never personally had anything to do with the apostolic finances except in the disbursement of alms. But there was one economic abuse which he many times condemned, and that was the unfair exploitation of the weak, unlearned, and less fortunate of men by their strong, keen, and more intelligent fellows. Jesus declared that such inhuman treatment of men, women, and children was incompatible with the ideals of the brotherhood of the kingdom of heaven.
+\vs p163 2:11 Jesus never taught that it was wrong to have wealth. He required only the twelve and the 70 to dedicate all of their worldly possessions to the common cause. Even then, he provided for the profitable liquidation of their property, as in the case of the Apostle Matthew. Jesus many times advised his well\hyp{}to\hyp{}do disciples as he taught the rich man of Rome. The Master regarded the wise investment of excess earnings as a legitimate form of insurance against future and unavoidable adversity. When the apostolic treasury was overflowing, Judas put funds on deposit to be used subsequently when they might suffer greatly from a diminution of income. This Judas did after consultation with Andrew. Jesus never personally had anything to do with the apostolic finances except in the disbursement of alms. But there was one economic abuse which he many times condemned, and that was the unfair exploitation of the weak, unlearned, and less fortunate of men by their strong, keen, and more intelligent fellows. Jesus declared that such inhuman treatment of men, women, and children was incompatible with the ideals of the brotherhood of the kingdom of heaven.
 \usection{The Discussion about Wealth}
 \vs p163 3:1 By the time Jesus had finished talking with Matadormus, Peter and a number of the apostles had gathered about him, and as the rich young man was departing, Jesus turned around to face the apostles and said: \textcolour{ubdarkred}{“You see how difficult it is for those who have riches to enter fully into the kingdom of God! Spiritual worship cannot be shared with material devotions; no man can serve two masters. You have a saying that it is ‘easier for a camel to go through the eye of a needle than for the heathen to inherit eternal life.’ And I declare that it is as easy for this camel to go through the needle’s eye as for these self\hyp{}satisfied rich ones to enter the kingdom of heaven.”}
 \vs p163 3:2 When Peter and the apostles heard these words, they were astonished exceedingly, so much so that Peter said: “Who then, Lord, can be saved? Shall all who have riches be kept out of the kingdom?” And Jesus replied: \textcolour{ubdarkred}{“No, Peter, but all who put their trust in riches shall hardly enter into the spiritual life that leads to eternal progress. But even then, much which is impossible to man is not beyond the reach of the Father in heaven; rather should we recognize that with God all things are possible.”}
-\vs p163 3:3 As they went off by themselves, Jesus was grieved that Matadormus did not remain with them, for he greatly loved him. And when they had walked down by the lake, they sat there beside the water, and Peter, speaking for the 12 (who were all present by this time), said: “We are troubled by your words to the rich young man. Shall we require those who would follow you to give up all their worldly goods?” And Jesus said: \textcolour{ubdarkred}{“No, Peter, only those who would become apostles, and who desire to live with me as you do and as one family. But the Father requires that the affections of his children be pure and undivided. Whatever thing or person comes between you and the love of the truths of the kingdom, must be surrendered. If one’s wealth does not invade the precincts of the soul, it is of no consequence in the spiritual life of those who would enter the kingdom.”}
-\vs p163 3:4 And then said Peter, “But, Master, we have left everything to follow you, what then shall we have?” And Jesus spoke to all of the 12: \textcolour{ubdarkred}{“Verily, verily, I say to you, there is no man who has left wealth, home, wife, brethren, parents, or children for my sake and for the sake of the kingdom of heaven who shall not receive manifold more in this world, perhaps with some persecutions, and in the world to come eternal life. But many who are first shall be last, while the last shall often be first. The Father deals with his creatures in accordance with their needs and in obedience to his just laws of merciful and loving consideration for the welfare of a universe.}
+\vs p163 3:3 As they went off by themselves, Jesus was grieved that Matadormus did not remain with them, for he greatly loved him. And when they had walked down by the lake, they sat there beside the water, and Peter, speaking for the twelve (who were all present by this time), said: “We are troubled by your words to the rich young man. Shall we require those who would follow you to give up all their worldly goods?” And Jesus said: \textcolour{ubdarkred}{“No, Peter, only those who would become apostles, and who desire to live with me as you do and as one family. But the Father requires that the affections of his children be pure and undivided. Whatever thing or person comes between you and the love of the truths of the kingdom, must be surrendered. If one’s wealth does not invade the precincts of the soul, it is of no consequence in the spiritual life of those who would enter the kingdom.”}
+\vs p163 3:4 And then said Peter, “But, Master, we have left everything to follow you, what then shall we have?” And Jesus spoke to all of the twelve: \textcolour{ubdarkred}{“Verily, verily, I say to you, there is no man who has left wealth, home, wife, brethren, parents, or children for my sake and for the sake of the kingdom of heaven who shall not receive manifold more in this world, perhaps with some persecutions, and in the world to come eternal life. But many who are first shall be last, while the last shall often be first. The Father deals with his creatures in accordance with their needs and in obedience to his just laws of merciful and loving consideration for the welfare of a universe.}
 \vs p163 3:5 \textcolour{ubdarkred}{“The kingdom of heaven is like a householder who was a large employer of men, and who went out early in the morning to hire labourers to work in his vineyard. When he had agreed with the labourers to pay them a denarius a day, he sent them into the vineyard. Then he went out about 9:00, and seeing others standing in the market place idle, he said to them: ‘Go you also to work in my vineyard, and whatsoever is right I will pay you.’ And they went at once to work. Again he went out about 12:00 and about 15:00 and did likewise. And going to the market place about 17:00, he found still others standing idle, and he inquired of them, ‘Why do you stand here idle all the day?’ And the men answered, ‘Because nobody has hired us.’ Then said the householder: ‘Go you also to work in my vineyard, and whatever is right I will pay you.’}
 \vs p163 3:6 \textcolour{ubdarkred}{“When evening came, this owner of the vineyard said to his steward: ‘Call the labourers and pay them their wages, beginning with the last hired and ending with the first.’ When those who were hired about 17:00 came, they received a denarius each, and so it was with each of the other labourers. When the men who were hired at the beginning of the day saw how the later comers were paid, they expected to receive more than the amount agreed upon. But like the others every man received only a denarius. And when each had received his pay, they complained to the householder, saying: ‘These men who were hired last worked only one hour, and yet you have paid them the same as us who have borne the burden of the day in the scorching sun.’}
 \vs p163 3:7 \textcolour{ubdarkred}{“Then answered the householder: ‘My friends, I do you no wrong. Did not each of you agree to work for a denarius a day? Take now that which is yours and go your way, for it is my desire to give to those who came last as much as I have given to you. Is it not lawful for me to do what I will with my own? or do you begrudge my generosity because I desire to be good and to show mercy?’”}
@@ -55,7 +55,7 @@
 \vs p163 4:16 \pc And when they had been thus charged and instructed, they started out, two and two, on their mission in Galilee, Samaria, and Judea.
 \vs p163 4:17 Although the Jews had a peculiar regard for the number 70, sometimes considering the nations of heathendom as being 70 in number, and although these 70 messengers were to go with the gospel to all peoples, still as far as we can discern, it was only coincidental that this group happened to number just 70. Certain it was that Jesus would have accepted no less than half a dozen others, but they were unwilling to pay the price of forsaking wealth and families.
 \usection{Moving the Camp to Pella}
-\vs p163 5:1 Jesus and the 12 now prepared to establish their last headquarters in Perea, near Pella, where the Master was baptized in the Jordan. The last ten days of November were spent in council at Magadan, and on Tuesday, December 6, the entire company of almost 300 started out at daybreak with all their effects to lodge that night near Pella by the river. This was the same site, by the spring, that John the Baptist had occupied with his camp several years before.
+\vs p163 5:1 Jesus and the twelve now prepared to establish their last headquarters in Perea, near Pella, where the Master was baptized in the Jordan. The last ten days of November were spent in council at Magadan, and on Tuesday, December 6, the entire company of almost 300 started out at daybreak with all their effects to lodge that night near Pella by the river. This was the same site, by the spring, that John the Baptist had occupied with his camp several years before.
 \vs p163 5:2 After the breaking up of the Magadan Camp, David Zebedee returned to Bethsaida and began immediately to curtail the messenger service. The kingdom was taking on a new phase. Daily, pilgrims arrived from all parts of Palestine and even from remote regions of the Roman Empire. Believers occasionally came from Mesopotamia and from the lands east of the Tigris. Accordingly, on Sunday, December 18, David, with the help of his messenger corps, loaded on to the pack animals the camp equipage, then stored in his father’s house, with which he had formerly conducted the camp of Bethsaida by the lake. Bidding farewell to Bethsaida for the time being, he proceeded down the lake shore and along the Jordan to a point about 2.4\,km north of the apostolic camp; and in less than a week he was prepared to offer hospitality to almost 1500 pilgrim visitors. The apostolic camp could accommodate about 500. This was the rainy season in Palestine, and these accommodations were required to take care of the ever\hyp{}increasing number of inquirers, mostly earnest, who came into Perea to see Jesus and to hear his teaching.
 \vs p163 5:3 David did all this on his own initiative, though he had taken counsel with Philip and Matthew at Magadan. He employed the larger part of his former messenger corps as his helpers in conducting this camp; he now used less than 20 men on regular messenger duty. Near the end of December and before the return of the 70, almost 800 visitors were gathered about the Master, and they found lodging in David’s camp.
 \usection{The Return of the Seventy}
@@ -68,8 +68,8 @@
 \vs p163 6:7 \textcolour{ubdarkred}{“You have entered upon this great work of teaching mortal man that he is a son of God. I have shown you the way; go forth to do your duty and be not weary in well doing. To you and to all who shall follow in your steps down through the ages, let me say: I always stand near, and my invitation\hyp{}call is, and ever shall be, Come to me all you who labour and are heavy laden, and I will give you rest. Take my yoke upon you and learn of me, for I am true and loyal, and you shall find spiritual rest for your souls.”}
 \vs p163 6:8 \pc And they found the Master’s words to be true when they put his promises to the test. And since that day countless thousands also have tested and proved the surety of these same promises.
 \usection{Preparation for the Last Mission}
-\vs p163 7:1 The next few days were busy times in the Pella camp; preparations for the Perean mission were being completed. Jesus and his associates were about to enter upon their last mission, the three months’ tour of all Perea, which terminated only upon the Master’s entering Jerusalem for his final labours on earth. Throughout this period the headquarters of Jesus and the 12 apostles was maintained here at the Pella camp.
-\vs p163 7:2 It was no longer necessary for Jesus to go abroad to teach the people. They now came to him in increasing numbers each week and from all parts, not only from Palestine but from the whole Roman world and from the Near East. Although the Master participated with the 70 in the tour of Perea, he spent much of his time at the Pella camp, teaching the multitude and instructing the 12. Throughout this three months’ period at least ten of the apostles remained with Jesus.
-\vs p163 7:3 The women’s corps also prepared to go out, two and two, with the 70 to labour in the larger cities of Perea. This original group of 12 women had recently trained a larger corps of 50 women in the work of home visitation and in the art of ministering to the sick and the afflicted. Perpetua, Simon Peter’s wife, became a member of this new division of the women’s corps and was entrusted with the leadership of the enlarged women’s work under Abner. After Pentecost she remained with her illustrious husband, accompanying him on all of his missionary tours; and on the day Peter was crucified in Rome, she was fed to the wild beasts in the arena. This new women’s corps also had as members the wives of Philip and Matthew and the mother of James and John.
+\vs p163 7:1 The next few days were busy times in the Pella camp; preparations for the Perean mission were being completed. Jesus and his associates were about to enter upon their last mission, the three months’ tour of all Perea, which terminated only upon the Master’s entering Jerusalem for his final labours on earth. Throughout this period the headquarters of Jesus and the twelve apostles was maintained here at the Pella camp.
+\vs p163 7:2 It was no longer necessary for Jesus to go abroad to teach the people. They now came to him in increasing numbers each week and from all parts, not only from Palestine but from the whole Roman world and from the Near East. Although the Master participated with the 70 in the tour of Perea, he spent much of his time at the Pella camp, teaching the multitude and instructing the twelve. Throughout this three months’ period at least ten of the apostles remained with Jesus.
+\vs p163 7:3 The women’s corps also prepared to go out, two and two, with the 70 to labour in the larger cities of Perea. This original group of twelve women had recently trained a larger corps of 50 women in the work of home visitation and in the art of ministering to the sick and the afflicted. Perpetua, Simon Peter’s wife, became a member of this new division of the women’s corps and was entrusted with the leadership of the enlarged women’s work under Abner. After Pentecost she remained with her illustrious husband, accompanying him on all of his missionary tours; and on the day Peter was crucified in Rome, she was fed to the wild beasts in the arena. This new women’s corps also had as members the wives of Philip and Matthew and the mother of James and John.
 \vs p163 7:4 The work of the kingdom now prepared to enter upon its terminal phase under the personal leadership of Jesus. And this present phase was one of spiritual depth in contrast with the miracle\hyp{}minded and wonder\hyp{}seeking multitudes who followed after the Master during the former days of popularity in Galilee. However, there were still any number of his followers who were material\hyp{}minded, and who failed to grasp the truth that the kingdom of heaven is the spiritual brotherhood of man founded on the eternal fact of the universal fatherhood of God.
 \quizlink
