--- a/tex/p165.tex
+++ b/tex/p165.tex
@@ -6,16 +6,16 @@
 \uminitoc{Talks to the Apostles on Wealth}
 \uminitoc{Answer to Peter’s Question}
 \author{Midwayer Commission}
-\vs p165 0:1 On Tuesday, January 3, A.D.\,30, Abner, the former chief of the 12 apostles of John the Baptist, a Nazarite and onetime head of the Nazarite school at Engedi, now chief of the 70 messengers of the kingdom, called his associates together and gave them final instructions before sending them on a mission to all of the cities and villages of Perea. This Perean mission continued for almost three months and was the last ministry of the Master. From these labours Jesus went directly to Jerusalem to pass through his final experiences in the flesh. The 70, supplemented by the periodic labours of Jesus and the 12 apostles, worked in the following cities and towns and some 50 additional villages: Zaphon, Gadara, Macad, Arbela, Ramath, Edrei, Bosora, Caspin, Mispeh, Gerasa, Ragaba, Succoth, Amathus, Adam, Penuel, Capitolias, Dion, Hatita, Gadda, Philadelphia, Jogbehah, Gilead, Beth\hyp{}Nimrah, Tyrus, Elealah, Livias, Heshbon, Callirrhoe, Beth\hyp{}Peor, Shittim, Sibmah, Medeba, Beth\hyp{}Meon, Areopolis, and Aroer.
+\vs p165 0:1 On Tuesday, January 3, A.D.\,30, Abner, the former chief of the twelve apostles of John the Baptist, a Nazarite and onetime head of the Nazarite school at Engedi, now chief of the 70 messengers of the kingdom, called his associates together and gave them final instructions before sending them on a mission to all of the cities and villages of Perea. This Perean mission continued for almost three months and was the last ministry of the Master. From these labours Jesus went directly to Jerusalem to pass through his final experiences in the flesh. The 70, supplemented by the periodic labours of Jesus and the twelve apostles, worked in the following cities and towns and some 50 additional villages: Zaphon, Gadara, Macad, Arbela, Ramath, Edrei, Bosora, Caspin, Mispeh, Gerasa, Ragaba, Succoth, Amathus, Adam, Penuel, Capitolias, Dion, Hatita, Gadda, Philadelphia, Jogbehah, Gilead, Beth\hyp{}Nimrah, Tyrus, Elealah, Livias, Heshbon, Callirrhoe, Beth\hyp{}Peor, Shittim, Sibmah, Medeba, Beth\hyp{}Meon, Areopolis, and Aroer.
 \vs p165 0:2 Throughout this tour of Perea the women’s corps, now numbering 62, took over most of the work of ministration to the sick. This was the final period of the development of the higher spiritual aspects of the gospel of the kingdom, and there was, accordingly, an absence of miracle working. No other part of Palestine was so thoroughly worked by the apostles and disciples of Jesus, and in no other region did the better classes of citizens so generally accept the Master’s teaching.
 \vs p165 0:3 Perea at this time was about equally gentile and Jewish, the Jews having been generally removed from these regions during the times of Judas Maccabee. Perea was the most beautiful and picturesque province of all Palestine. It was generally referred to by the Jews as “the land beyond the Jordan.”\fnc{\ldots{}from these regions during the times of Judas \bibtextul{Maccabeus.} \bibexpl{Although Maccabeus is a more accurate transliteration of the Greek, Maccabee is very common in English works and is used in all other occurrences of the word in the Urantia papers. Therefore, the committee decided to standardize on “Maccabee.”}}
-\vs p165 0:4 Throughout this period Jesus divided his time between the camp at Pella and trips with the 12 to assist the 70 in the various cities where they taught and preached. Under Abner’s instructions the 70 baptized all believers, although Jesus had not so charged them.
+\vs p165 0:4 Throughout this period Jesus divided his time between the camp at Pella and trips with the twelve to assist the 70 in the various cities where they taught and preached. Under Abner’s instructions the 70 baptized all believers, although Jesus had not so charged them.
 \usection{At the Pella Camp}
-\vs p165 1:1 By the middle of January more than 1200 persons were gathered together at Pella, and Jesus taught this multitude at least once each day when he was in residence at the camp, usually speaking at 9:00 if not prevented by rain. Peter and the other apostles taught each afternoon. The evenings Jesus reserved for the usual sessions of questions and answers with the 12 and other advanced disciples. The evening groups averaged about 50.
+\vs p165 1:1 By the middle of January more than 1200 persons were gathered together at Pella, and Jesus taught this multitude at least once each day when he was in residence at the camp, usually speaking at 9:00 if not prevented by rain. Peter and the other apostles taught each afternoon. The evenings Jesus reserved for the usual sessions of questions and answers with the twelve and other advanced disciples. The evening groups averaged about 50.
 \vs p165 1:2 By the middle of March, the time when Jesus began his journey toward Jerusalem, over 4,000 persons composed the large audience which heard Jesus or Peter preach each morning. The Master chose to terminate his work on earth when the interest in his message had reached a high point, the highest point attained under this second or nonmiraculous phase of the progress of the kingdom. While \bibfrac{3}{4}\ts{ers} of the multitude were truth seekers, there were also present a large number of Pharisees from Jerusalem and elsewhere, together with many doubters and cavillers.
-\vs p165 1:3 Jesus and the 12 apostles devoted much of their time to the multitude assembled at the Pella camp. The 12 paid little or no attention to the field work, only going out with Jesus to visit Abner’s associates from time to time. Abner was very familiar with the Perean district since this was the field in which his former master, John the Baptist, had done most of his work. After beginning the Perean mission, Abner and the 70 never returned to the Pella camp.
+\vs p165 1:3 Jesus and the twelve apostles devoted much of their time to the multitude assembled at the Pella camp. The twelve paid little or no attention to the field work, only going out with Jesus to visit Abner’s associates from time to time. Abner was very familiar with the Perean district since this was the field in which his former master, John the Baptist, had done most of his work. After beginning the Perean mission, Abner and the 70 never returned to the Pella camp.
 \usection{Sermon on the Good Shepherd}
-\vs p165 2:1 A company of over 300 Jerusalemites, Pharisees and others, followed Jesus north to Pella when he hastened away from the jurisdiction of the Jewish rulers at the ending of the feast of the dedication; and it was in the presence of these Jewish teachers and leaders, as well as in the hearing of the 12 apostles, that Jesus preached the sermon on the “Good Shepherd.” After half an hour of informal discussion, speaking to a group of about 100, Jesus said:
+\vs p165 2:1 A company of over 300 Jerusalemites, Pharisees and others, followed Jesus north to Pella when he hastened away from the jurisdiction of the Jewish rulers at the ending of the feast of the dedication; and it was in the presence of these Jewish teachers and leaders, as well as in the hearing of the twelve apostles, that Jesus preached the sermon on the “Good Shepherd.” After half an hour of informal discussion, speaking to a group of about 100, Jesus said:
 \vs p165 2:2 \pc \textcolour{ubdarkred}{“On this night I have much to tell you, and since many of you are my disciples and some of you my bitter enemies, I will present my teaching in a parable, so that you may each take for yourself that which finds a reception in your heart.}
 \vs p165 2:3 \textcolour{ubdarkred}{“Tonight, here before me are men who would be willing to die for me and for this gospel of the kingdom, and some of them will so offer themselves in the years to come; and here also are some of you, slaves of tradition, who have followed me down from Jerusalem, and who, with your darkened and deluded leaders, seek to kill the Son of Man. The life which I now live in the flesh shall judge both of you, the true shepherds and the false shepherds. If the false shepherd were blind, he would have no sin, but you claim that you see; you profess to be teachers in Israel; therefore does your sin remain upon you.}
 \vs p165 2:4 \textcolour{ubdarkred}{“The true shepherd gathers his flock into the fold for the night in times of danger. And when the morning has come, he enters into the fold by the door, and when he calls, the sheep know his voice. Every shepherd who gains entrance to the sheepfold by any other means than by the door is a thief and a robber. The true shepherd enters the fold after the porter has opened the door for him, and his sheep, knowing his voice, come out at his word; and when they that are his are thus brought forth, the true shepherd goes before them; he leads the way and the sheep follow him. His sheep follow him because they know his voice; they will not follow a stranger. They will flee from the stranger because they know not his voice. This multitude which is gathered about us here are like sheep without a shepherd, but when we speak to them, they know the shepherd’s voice, and they follow after us; at least, those who hunger for truth and thirst for righteousness do. Some of you are not of my fold; you know not my voice, and you do not follow me. And because you are false shepherds, the sheep know not your voice and will not follow you.”}
@@ -53,16 +53,16 @@
 \vs p165 4:13 \textcolour{ubdarkred}{“\ublistelem{3.}\bibnobreakspace How did you use your wealth?”}
 \vs p165 4:14 \pc Then Jesus went into his tent to rest for a while before the evening meal. When the apostles had finished with the baptizing, they came also and would have talked with him about wealth on earth and treasure in heaven, but he was asleep.
 \usection{Talks to the Apostles on Wealth}
-\vs p165 5:1 That evening after supper, when Jesus and the 12 gathered together for their daily conference, Andrew asked: “Master, while we were baptizing the believers, you spoke many words to the lingering multitude which we did not hear. Would you be willing to repeat these words for our benefit?” And in response to Andrew’s request, Jesus said:
+\vs p165 5:1 That evening after supper, when Jesus and the twelve gathered together for their daily conference, Andrew asked: “Master, while we were baptizing the believers, you spoke many words to the lingering multitude which we did not hear. Would you be willing to repeat these words for our benefit?” And in response to Andrew’s request, Jesus said:
 \vs p165 5:2 \pc \textcolour{ubdarkred}{“Yes, Andrew, I will speak to you about these matters of wealth and self\hyp{}support, but my words to you, the apostles, must be somewhat different from those spoken to the disciples and the multitude since you have forsaken everything, not only to follow me, but to be ordained as ambassadors of the kingdom. Already have you had several years’ experience, and you know that the Father whose kingdom you proclaim will not forsake you. You have dedicated your lives to the ministry of the kingdom; therefore be not anxious or worried about the things of the temporal life, what you shall eat, nor yet for your body, what you shall wear. The welfare of the soul is more than food and drink; the progress in the spirit is far above the need of raiment. When you are tempted to doubt the sureness of your bread, consider the ravens; they sow not neither reap, they have no storehouses or barns, and yet the Father provides food for every one of them that seeks it. And of how much more value are you than many birds! Besides, all of your anxiety or fretting doubts can do nothing to supply your material needs. Which of you by anxiety can add a handbreadth to your stature or a day to your life? Since such matters are not in your hands, why do you give anxious thought to any of these problems?}
 \vs p165 5:3 \textcolour{ubdarkred}{“Consider the lilies, how they grow; they toil not, neither do they spin; yet I say to you, even Solomon in all his glory was not arrayed like one of these. If God so clothes the grass of the field, which is alive today and tomorrow is cut down and cast into the fire, how much more shall he clothe you, the ambassadors of the heavenly kingdom. O you of little faith! When you wholeheartedly devote yourselves to the proclamation of the gospel of the kingdom, you should not be of doubtful minds concerning the support of yourselves or the families you have forsaken. If you give your lives truly to the gospel, you shall live by the gospel. If you are only believing disciples, you must earn your own bread and contribute to the sustenance of all who teach and preach and heal. If you are anxious about your bread and water, wherein are you different from the nations of the world who so diligently seek such necessities? Devote yourselves to your work, believing that both the Father and I know that you have need of all these things. Let me assure you, once and for all, that, if you dedicate your lives to the work of the kingdom, all your real needs shall be supplied. Seek the greater thing, and the lesser will be found therein; ask for the heavenly, and the earthly shall be included. The shadow is certain to follow the substance.}
 \vs p165 5:4 \textcolour{ubdarkred}{“You are only a small group, but if you have faith, if you will not stumble in fear, I declare that it is my Father’s good pleasure to give you this kingdom. You have laid up your treasures where the purse waxes not old, where no thief can despoil, and where no moth can destroy. And as I told the people, where your treasure is, there will your heart be also.}
 \vs p165 5:5 \textcolour{ubdarkred}{“But in the work which is just ahead of us, and in that which remains for you after I go to the Father, you will be grievously tried. You must all be on your watch against fear and doubts. Every one of you, gird up the loins of your minds and let your lamps be kept burning. Keep yourselves like men who are watching for their master to return from the marriage feast so that, when he comes and knocks, you may quickly open to him. Such watchful servants are blessed by the master who finds them faithful at such a great moment. Then will the master make his servants sit down while he himself serves them. Verily, verily, I say to you that a crisis is just ahead in your lives, and it behoves you to watch and be ready.}
 \vs p165 5:6 \textcolour{ubdarkred}{“You well understand that no man would suffer his house to be broken into if he knew what hour the thief was to come. Be you also on watch for yourselves, for in an hour that you least suspect and in a manner you think not, shall the Son of Man depart.”}
-\vs p165 5:7 \pc For some minutes the 12 sat in silence. Some of these warnings they had heard before but not in the setting presented to them at this time.
+\vs p165 5:7 \pc For some minutes the twelve sat in silence. Some of these warnings they had heard before but not in the setting presented to them at this time.
 \usection{Answer to Peter’s Question}
 \vs p165 6:1 As they sat thinking, Simon Peter asked: “Do you speak this parable to us, your apostles, or is it for all the disciples?” And Jesus answered:
 \vs p165 6:2 \pc \textcolour{ubdarkred}{“In the time of testing, a man’s soul is revealed; trial discloses what really is in the heart. When the servant is tested and proved, then may the lord of the house set such a servant over his household and safely trust this faithful steward to see that his children are fed and nurtured. Likewise, will I soon know who can be trusted with the welfare of my children when I shall have returned to the Father. As the lord of the household shall set the true and tried servant over the affairs of his family, so will I exalt those who endure the trials of this hour in the affairs of my kingdom.}
 \vs p165 6:3 \textcolour{ubdarkred}{“But if the servant is slothful and begins to say in his heart, ‘My master delays his coming,’ and begins to mistreat his fellow servants and to eat and drink with the drunken, then the lord of that servant will come at a time when he looks not for him and, finding him unfaithful, will cast him out in disgrace. Therefore you do well to prepare yourselves for that day when you will be visited suddenly and in an unexpected manner. Remember, much has been given to you; therefore will much be required of you. Fiery trials are drawing near you. I have a baptism to be baptized with, and I am on watch until this is accomplished. You preach peace on earth, but my mission will not bring peace in the material affairs of men --- not for a time, at least. Division can only be the result where two members of a family believe in me and three members reject this gospel. Friends, relatives, and loved ones are destined to be set against each other by the gospel you preach. True, each of these believers shall have great and lasting peace in his own heart, but peace on earth will not come until all are willing to believe and enter into their glorious inheritance of sonship with God. Nevertheless, go into all the world proclaiming this gospel to all nations, to every man, woman, and child.”}
-\vs p165 6:4 \pc And this was the end of a full and busy Sabbath day. On the morrow Jesus and the 12 went into the cities of northern Perea to visit with the 70, who were working in these regions under Abner’s supervision.
+\vs p165 6:4 \pc And this was the end of a full and busy Sabbath day. On the morrow Jesus and the twelve went into the cities of northern Perea to visit with the 70, who were working in these regions under Abner’s supervision.
 \quizlink
