--- a/tex/p166.tex
+++ b/tex/p166.tex
@@ -5,10 +5,10 @@
 \uminitoc{Teaching about Accidents}
 \uminitoc{The Congregation at Philadelphia}
 \author{Midwayer Commission}
-\vs p166 0:1 From February 11 to 20, Jesus and the 12 made a tour of all the cities and villages of northern Perea where the associates of Abner and the members of the women’s corps were working. They found these messengers of the gospel meeting with success, and Jesus repeatedly called the attention of his apostles to the fact that the gospel of the kingdom could spread without the accompaniment of miracles and wonders.
-\vs p166 0:2 This entire mission of three months in Perea was successfully carried on with little help from the 12 apostles, and the gospel from this time on reflected, not so much Jesus’ personality, as his \bibemph{teachings.} But his followers did not long follow his instructions, for soon after Jesus’ death and resurrection they departed from his teachings and began to build the early church around the miraculous concepts and the glorified memories of his divine\hyp{}human personality.
+\vs p166 0:1 From February 11 to 20, Jesus and the twelve made a tour of all the cities and villages of northern Perea where the associates of Abner and the members of the women’s corps were working. They found these messengers of the gospel meeting with success, and Jesus repeatedly called the attention of his apostles to the fact that the gospel of the kingdom could spread without the accompaniment of miracles and wonders.
+\vs p166 0:2 This entire mission of three months in Perea was successfully carried on with little help from the twelve apostles, and the gospel from this time on reflected, not so much Jesus’ personality, as his \bibemph{teachings.} But his followers did not long follow his instructions, for soon after Jesus’ death and resurrection they departed from his teachings and began to build the early church around the miraculous concepts and the glorified memories of his divine\hyp{}human personality.
 \usection{The Pharisees at Ragaba}
-\vs p166 1:1 On Sabbath, February 18, Jesus was at Ragaba, where there lived a wealthy Pharisee named Nathaniel; and since quite a number of his fellow Pharisees were following Jesus and the 12 around the country, he made a breakfast on this Sabbath morning for all of them, about 20 in number, and invited Jesus as the guest of honour.
+\vs p166 1:1 On Sabbath, February 18, Jesus was at Ragaba, where there lived a wealthy Pharisee named Nathaniel; and since quite a number of his fellow Pharisees were following Jesus and the twelve around the country, he made a breakfast on this Sabbath morning for all of them, about 20 in number, and invited Jesus as the guest of honour.
 \vs p166 1:2 By the time Jesus arrived at this breakfast, most of the Pharisees, with two or three lawyers, were already there and seated at the table. The Master immediately took his seat at the left of Nathaniel without going to the water basins to wash his hands. Many of the Pharisees, especially those favourable to Jesus’ teachings, knew that he washed his hands only for purposes of cleanliness, that he abhorred these purely ceremonial performances; so they were not surprised at his coming directly to the table without having twice washed his hands. But Nathaniel was shocked by this failure of the Master to comply with the strict requirements of Pharisaic practice. Neither did Jesus wash his hands, as did the Pharisees, after each course of food nor at the end of the meal.
 \vs p166 1:3 After considerable whispering between Nathaniel and an unfriendly Pharisee on his right and after much lifting of eyebrows and sneering curling of lips by those who sat opposite the Master, Jesus finally said: \textcolour{ubdarkred}{“I had thought that you invited me to this house to break bread with you and perchance to inquire of me concerning the proclamation of the new gospel of the kingdom of God; but I perceive that you have brought me here to witness an exhibition of ceremonial devotion to your own self\hyp{}righteousness. That service you have now done me; what next will you honour me with as your guest on this occasion?”}
 \vs p166 1:4 When the Master had thus spoken, they cast their eyes upon the table and remained silent. And since no one spoke, Jesus continued: \textcolour{ubdarkred}{“Many of you Pharisees are here with me as friends, some are even my disciples, but the majority of the Pharisees are persistent in their refusal to see the light and acknowledge the truth, even when the work of the gospel is brought before them in great power. How carefully you cleanse the outside of the cups and the platters while the spiritual\hyp{}food vessels are filthy and polluted! You make sure to present a pious and holy appearance to the people, but your inner souls are filled with self\hyp{}righteousness, covetousness, extortion, and all manner of spiritual wickedness. Your leaders even dare to plot and plan the murder of the Son of Man. Do not you foolish men understand that the God of heaven looks at the inner motives of the soul as well as on your outer pretenses and your pious professions? Think not that the giving of alms and the paying of tithes will cleanse you from unrighteousness and enable you to stand clean in the presence of the Judge of all men. Woe upon you Pharisees who have persisted in rejecting the light of life! You are meticulous in tithing and ostentatious in almsgiving, but you knowingly spurn the visitation of God and reject the revelation of his love. Though it is all right for you to give attention to these minor duties, you should not have left these weightier requirements undone. Woe upon all who shun justice, spurn mercy, and reject truth! Woe upon all those who despise the revelation of the Father while they seek the chief seats in the synagogue and crave flattering salutations in the market places!”}
@@ -20,16 +20,16 @@
 \vs p166 1:10 \ublistelem{3.}\bibnobreakspace Avoidance of association with all non\hyp{}Pharisees.
 \vs p166 1:11 \pc At this time Jesus sought to expose the spiritual barrenness of the first two practices, while he reserved his remarks designed to rebuke the Pharisees’ refusal to engage in social intercourse with non\hyp{}Pharisees for another and subsequent occasion when he would again be dining with many of these same men.
 \usection{The Ten Lepers}
-\vs p166 2:1 The next day Jesus went with the 12 over to Amathus, near the border of Samaria, and as they approached the city, they encountered a group of ten lepers who sojourned near this place. Nine of this group were Jews, one a Samaritan. Ordinarily these Jews would have refrained from all association or contact with this Samaritan, but their common affliction was more than enough to overcome all religious prejudice. They had heard much of Jesus and his earlier miracles of healing, and since the 70 made a practice of announcing the time of Jesus’ expected arrival when the Master was out with the 12 on these tours, the ten lepers had been made aware that he was expected to appear in this vicinity at about this time; and they were, accordingly, posted here on the outskirts of the city where they hoped to attract his attention and ask for healing. When the lepers saw Jesus drawing near them, not daring to approach him, they stood afar off and cried to him: “Master, have mercy on us; cleanse us from our affliction. Heal us as you have healed others.”
-\vs p166 2:2 Jesus had just been explaining to the 12 why the gentiles of Perea, together with the less orthodox Jews, were more willing to believe the gospel preached by the 70 than were the more orthodox and tradition\hyp{}bound Jews of Judea. He had called their attention to the fact that their message had likewise been more readily received by the Galileans, and even by the Samaritans. But the 12 apostles were hardly yet willing to entertain kind feelings for the long\hyp{}despised Samaritans.
+\vs p166 2:1 The next day Jesus went with the twelve over to Amathus, near the border of Samaria, and as they approached the city, they encountered a group of ten lepers who sojourned near this place. Nine of this group were Jews, one a Samaritan. Ordinarily these Jews would have refrained from all association or contact with this Samaritan, but their common affliction was more than enough to overcome all religious prejudice. They had heard much of Jesus and his earlier miracles of healing, and since the 70 made a practice of announcing the time of Jesus’ expected arrival when the Master was out with the twelve on these tours, the ten lepers had been made aware that he was expected to appear in this vicinity at about this time; and they were, accordingly, posted here on the outskirts of the city where they hoped to attract his attention and ask for healing. When the lepers saw Jesus drawing near them, not daring to approach him, they stood afar off and cried to him: “Master, have mercy on us; cleanse us from our affliction. Heal us as you have healed others.”
+\vs p166 2:2 Jesus had just been explaining to the twelve why the gentiles of Perea, together with the less orthodox Jews, were more willing to believe the gospel preached by the 70 than were the more orthodox and tradition\hyp{}bound Jews of Judea. He had called their attention to the fact that their message had likewise been more readily received by the Galileans, and even by the Samaritans. But the twelve apostles were hardly yet willing to entertain kind feelings for the long\hyp{}despised Samaritans.
 \vs p166 2:3 Accordingly, when Simon Zelotes observed the Samaritan among the lepers, he sought to induce the Master to pass on into the city without even hesitating to exchange greetings with them. Said Jesus to Simon: \textcolour{ubdarkred}{“But what if the Samaritan loves God as well as the Jews? Should we sit in judgment on our fellow men? Who can tell? if we make these ten men whole, perhaps the Samaritan will prove more grateful even than the Jews. Do you feel certain about your opinions, Simon?”} And Simon quickly replied, “If you cleanse them, you will soon find out.” And Jesus replied: \textcolour{ubdarkred}{“So shall it be, Simon, and you will soon know the truth regarding the gratitude of men and the loving mercy of God.”}
 \vs p166 2:4 Jesus, going near the lepers, said: \textcolour{ubdarkred}{“If you would be made whole, go forthwith and show yourselves to the priests as required by the law of Moses.”} And as they went, they were made whole. But when the Samaritan saw that he was being healed, he turned back and, going in quest of Jesus, began to glorify God with a loud voice. And when he had found the Master, he fell on his knees at his feet and gave thanks for his cleansing. The nine others, the Jews, had also discovered their healing, and while they also were grateful for their cleansing, they continued on their way to show themselves to the priests.
 \vs p166 2:5 As the Samaritan remained kneeling at Jesus’ feet, the Master, looking about at the 12, especially at Simon Zelotes, said: \textcolour{ubdarkred}{“Were not ten cleansed? Where, then, are the other nine, the Jews? Only one, this alien, has returned to give glory to God.”} And then he said to the Samaritan, \textcolour{ubdarkred}{“Arise and go your way; your faith has made you whole.”}
-\vs p166 2:6 Jesus looked again at his apostles as the stranger departed. And the apostles all looked at Jesus, save Simon Zelotes, whose eyes were downcast. The 12 said not a word. Neither did Jesus speak; it was not necessary that he should.
+\vs p166 2:6 Jesus looked again at his apostles as the stranger departed. And the apostles all looked at Jesus, save Simon Zelotes, whose eyes were downcast. The twelve said not a word. Neither did Jesus speak; it was not necessary that he should.
 \vs p166 2:7 \pc Though all ten of these men really believed they had leprosy, only four were thus afflicted. The other six were cured of a skin disease which had been mistaken for leprosy. But the Samaritan really had leprosy.
-\vs p166 2:8 \pc Jesus enjoined the 12 to say nothing about the cleansing of the lepers, and as they went on into Amathus, he remarked: \textcolour{ubdarkred}{“You see how it is that the children of the house, even when they are insubordinate to their Father’s will, take their blessings for granted. They think it a small matter if they neglect to give thanks when the Father bestows healing upon them, but the strangers, when they receive gifts from the head of the house, are filled with wonder and are constrained to give thanks in recognition of the good things bestowed upon them.”} And still the apostles said nothing in reply to the Master’s words.
+\vs p166 2:8 \pc Jesus enjoined the twelve to say nothing about the cleansing of the lepers, and as they went on into Amathus, he remarked: \textcolour{ubdarkred}{“You see how it is that the children of the house, even when they are insubordinate to their Father’s will, take their blessings for granted. They think it a small matter if they neglect to give thanks when the Father bestows healing upon them, but the strangers, when they receive gifts from the head of the house, are filled with wonder and are constrained to give thanks in recognition of the good things bestowed upon them.”} And still the apostles said nothing in reply to the Master’s words.
 \usection{The Sermon at Gerasa}
-\vs p166 3:1 As Jesus and the 12 visited with the messengers of the kingdom at Gerasa, one of the Pharisees who believed in him asked this question: “Lord, will there be few or many really saved?” And Jesus, answering, said:
+\vs p166 3:1 As Jesus and the twelve visited with the messengers of the kingdom at Gerasa, one of the Pharisees who believed in him asked this question: “Lord, will there be few or many really saved?” And Jesus, answering, said:
 \vs p166 3:2 \pc \textcolour{ubdarkred}{“You have been taught that only the children of Abraham will be saved; that only the gentiles of adoption can hope for salvation. Some of you have reasoned that, since the Scriptures record that only Caleb and Joshua from among all the hosts that went out of Egypt lived to enter the promised land, only a comparatively few of those who seek the kingdom of heaven shall find entrance thereto.}
 \vs p166 3:3 \textcolour{ubdarkred}{“You also have another saying among you, and one that contains much truth: That the way which leads to eternal life is straight and narrow, that the door which leads thereto is likewise narrow so that, of those who seek salvation, few can find entrance through this door. You also have a teaching that the way which leads to destruction is broad, that the entrance thereto is wide, and that there are many who choose to go this way. And this proverb is not without its meaning. But I declare that salvation is first a matter of your personal choosing. Even if the door to the way of life is narrow, it is wide enough to admit all who sincerely seek to enter, for I am that door. And the Son will never refuse entrance to any child of the universe who, by faith, seeks to find the Father through the Son.}
 \vs p166 3:4 “But herein is the danger to all who would postpone their entrance into the kingdom while they continue to pursue the pleasures of immaturity and indulge the satisfactions of selfishness: Having refused to enter the kingdom as a spiritual experience, they may subsequently seek entrance thereto when the glory of the better way becomes revealed in the age to come. And when, therefore, those who spurned the kingdom when I came in the likeness of humanity seek to find an entrance when it is revealed in the likeness of divinity, then will I say to all such selfish ones: I know not whence you are. You had your chance to prepare for this heavenly citizenship, but you refused all such proffers of mercy; you rejected all invitations to come while the door was open. Now, to you who have refused salvation, the door is shut. This door is not open to those who would enter the kingdom for selfish glory. Salvation is not for those who are unwilling to pay the price of wholehearted dedication to doing my Father’s will. When in spirit and soul you have turned your backs upon the Father’s kingdom, it is useless in mind and body to stand before this door and knock, saying, ‘Lord, open to us; we would also be great in the kingdom.’ Then will I declare that you are not of my fold. I will not receive you to be among those who have fought the good fight of faith and won the reward of unselfish service in the kingdom on earth. And when you say, ‘Did we not eat and drink with you, and did you not teach in our streets?’ then shall I again declare that you are spiritual strangers; that we were not fellow servants in the Father’s ministry of mercy on earth; that I do not know you; and then shall the Judge of all the earth say to you: ‘Depart from us, all you who have taken delight in the works of iniquity.’\fnc{\bibtextul{Lord} open to us; we would also be great in the kingdom. \bibexpl{In the original format, Lord was the last word in the line, making a dropped comma not unlikely. It is possible that the comma was simply viewed as unnecessary within such a short phrase, and it should also be noted that while the use of the comma in direct address is now regarded as standard, the Chicago Manual of Style was silent on the matter until its 12\ts{th} edition (1969). The committee decided to adopt the modern format and insert the comma.}}
@@ -51,7 +51,7 @@
 \vs p166 4:11 \textcolour{ubdarkred}{“The Father’s human children have equal capacity for the reception of material blessings; therefore does he bestow things physical upon the children of men without discrimination. When it comes to the bestowal of spiritual gifts, the Father is limited by man’s capacity for receiving these divine endowments. Although the Father is no respecter of persons, in the bestowal of spiritual gifts he is limited by man’s faith and by his willingness always to abide by the Father’s will.”}
 \vs p166 4:12 \pc As they journeyed on toward Philadelphia, Jesus continued to teach them and to answer their questions having to do with accidents, sickness, and miracles, but they were not able fully to comprehend this instruction. One hour of teaching will not wholly change the beliefs of a lifetime, and so Jesus found it necessary to reiterate his message, to tell again and again that which he wished them to understand; and even then they failed to grasp the meaning of his earth mission until after his death and resurrection.
 \usection{The Congregation at Philadelphia}
-\vs p166 5:1 Jesus and the 12 were on their way to visit Abner and his associates, who were preaching and teaching in Philadelphia. Of all the cities of Perea, in Philadelphia the largest group of Jews and gentiles, rich and poor, learned and unlearned, embraced the teachings of the 70, thereby entering into the kingdom of heaven. The synagogue of Philadelphia had never been subject to the supervision of the Sanhedrin at Jerusalem and therefore had never been closed to the teachings of Jesus and his associates. At this very time, Abner was teaching three times a day in the Philadelphia synagogue.
+\vs p166 5:1 Jesus and the twelve were on their way to visit Abner and his associates, who were preaching and teaching in Philadelphia. Of all the cities of Perea, in Philadelphia the largest group of Jews and gentiles, rich and poor, learned and unlearned, embraced the teachings of the 70, thereby entering into the kingdom of heaven. The synagogue of Philadelphia had never been subject to the supervision of the Sanhedrin at Jerusalem and therefore had never been closed to the teachings of Jesus and his associates. At this very time, Abner was teaching three times a day in the Philadelphia synagogue.
 \vs p166 5:2 This very synagogue later on became a Christian church and was the missionary headquarters for the promulgation of the gospel through the regions to the east. It was long a stronghold of the Master’s teachings and stood alone in this region as a centre of Christian learning for centuries.
 \vs p166 5:3 The Jews at Jerusalem had always had trouble with the Jews of Philadelphia. And after the death and resurrection of Jesus the Jerusalem church, of which James the Lord’s brother was head, began to have serious difficulties with the Philadelphia congregation of believers. Abner became the head of the Philadelphia church, continuing as such until his death. And this estrangement with Jerusalem explains why nothing is heard of Abner and his work in the Gospel records of the New Testament. This feud between Jerusalem and Philadelphia lasted throughout the lifetimes of James and Abner and continued for some time after the destruction of Jerusalem. Philadelphia was really the headquarters of the early church in the south and east as Antioch was in the north and west.
 \vs p166 5:4 \pc It was the apparent misfortune of Abner to be at variance with all of the leaders of the early Christian church. He fell out with Peter and James (Jesus’ brother) over questions of administration and the jurisdiction of the Jerusalem church; he parted company with Paul over differences of philosophy and theology. Abner was more Babylonian than Hellenic in his philosophy, and he stubbornly resisted all attempts of Paul to remake the teachings of Jesus so as to present less that was objectionable, first to the Jews, then to the Gr\ae co\hyp{}Roman believers in the mysteries.
