--- a/tex/p167.tex
+++ b/tex/p167.tex
@@ -33,9 +33,9 @@
 \vs p167 4:2 \pc Jesus was very fond of Martha, Mary, and their brother, Lazarus; he loved them with a fervent affection. His first and human thought was to go to their assistance at once, but another idea came into his combined mind. He had almost given up hope that the Jewish leaders at Jerusalem would ever accept the kingdom, but he still loved his people, and there now occurred to him a plan whereby the scribes and Pharisees of Jerusalem might have one more chance to accept his teachings; and he decided, his Father willing, to make this last appeal to Jerusalem the most profound and stupendous outward working of his entire earth career. The Jews clung to the idea of a wonder\hyp{}working deliverer. And though he refused to stoop to the performance of material wonders or to the enactment of temporal exhibitions of political power, he did now ask the Father’s consent for the manifestation of his hitherto unexhibited power over life and death.
 \vs p167 4:3 \pc The Jews were in the habit of burying their dead on the day of their demise; this was a necessary practice in such a warm climate. It often happened that they put in the tomb one who was merely comatose, so that on the second or even the third day, such a one would come forth from the tomb. But it was the belief of the Jews that, while the spirit or soul might linger near the body for two or three days, it never tarried after the third day; that decay was well advanced by the fourth day, and that no one ever returned from the tomb after the lapse of such a period. And it was for these reasons that Jesus tarried yet two full days in Philadelphia before he made ready to start for Bethany.
 \vs p167 4:4 \pc Accordingly, early on Wednesday morning he said to his apostles: \textcolour{ubdarkred}{“Let us prepare at once to go into Judea again.”} And when the apostles heard their Master say this, they drew off by themselves for a time to take counsel of one another. James assumed the direction of the conference, and they all agreed that it was only folly to allow Jesus to go again into Judea, and they came back as one man and so informed him. Said James: “Master, you were in Jerusalem a few weeks back, and the leaders sought your death, while the people were minded to stone you. At that time you gave these men their chance to receive the truth, and we will not permit you to go again into Judea.”
-\vs p167 4:5 Then said Jesus: \textcolour{ubdarkred}{“But do you not understand that there are 12 hours of the day in which work may safely be done? If a man walks in the day, he does not stumble inasmuch as he has light. If a man walks in the night, he is liable to stumble since he is without light. As long as my day lasts, I fear not to enter Judea. I would do one more mighty work for these Jews; I would give them one more chance to believe, even on their own terms --- conditions of outward glory and the visible manifestation of the power of the Father and the love of the Son. Besides, do you not realize that our friend Lazarus has fallen asleep, and I would go to awake him out of this sleep!”}
+\vs p167 4:5 Then said Jesus: \textcolour{ubdarkred}{“But do you not understand that there are twelve hours of the day in which work may safely be done? If a man walks in the day, he does not stumble inasmuch as he has light. If a man walks in the night, he is liable to stumble since he is without light. As long as my day lasts, I fear not to enter Judea. I would do one more mighty work for these Jews; I would give them one more chance to believe, even on their own terms --- conditions of outward glory and the visible manifestation of the power of the Father and the love of the Son. Besides, do you not realize that our friend Lazarus has fallen asleep, and I would go to awake him out of this sleep!”}
 \vs p167 4:6 Then said one of the apostles: “Master, if Lazarus has fallen asleep, then will he the more surely recover.” It was the custom of the Jews at that time to speak of death as a form of sleep, but as the apostles did not understand that Jesus meant that Lazarus had departed from this world, he now said plainly: \textcolour{ubdarkred}{“Lazarus is dead. And I am glad for your sakes, even if the others are not thereby saved, that I was not there, to the end that you shall now have new cause to believe in me; and by that which you will witness, you should all be strengthened in preparation for that day when I shall take leave of you and go to the Father.”}
-\vs p167 4:7 When they could not persuade him to refrain from going into Judea, and when some of the apostles were loath even to accompany him, Thomas addressed his fellows, saying: “We have told the Master our fears, but he is determined to go to Bethany. I am satisfied it means the end; they will surely kill him, but if that is the Master’s choice, then let us acquit ourselves like men of courage; let us go also that we may die with him.” And it was ever so; in matters requiring deliberate and sustained courage, Thomas was always the mainstay of the 12 apostles.
+\vs p167 4:7 When they could not persuade him to refrain from going into Judea, and when some of the apostles were loath even to accompany him, Thomas addressed his fellows, saying: “We have told the Master our fears, but he is determined to go to Bethany. I am satisfied it means the end; they will surely kill him, but if that is the Master’s choice, then let us acquit ourselves like men of courage; let us go also that we may die with him.” And it was ever so; in matters requiring deliberate and sustained courage, Thomas was always the mainstay of the twelve apostles.
 \usection{On the Way to Bethany}
 \vs p167 5:1 On the way to Judea Jesus was followed by a company of almost 50 of his friends and enemies. At their noon lunchtime, on Wednesday, he talked to his apostles and this group of followers on the “Terms of Salvation,” and at the end of this lesson told the parable of the Pharisee and the publican (a tax collector). Said Jesus: \textcolour{ubdarkred}{“You see, then, that the Father gives salvation to the children of men, and this salvation is a free gift to all who have the faith to receive sonship in the divine family. There is nothing man can do to earn this salvation. Works of self\hyp{}righteousness cannot buy the favour of God, and much praying in public will not atone for lack of living faith in the heart. Men you may deceive by your outward service, but God looks into your souls. What I am telling you is well illustrated by two men who went into the temple to pray, the one a Pharisee and the other a publican. The Pharisee stood and prayed to himself: ‘O God, I thank you that I am not like the rest of men, extortioners, unlearned, unjust, adulterers, or even like this publican. I fast twice a week; I give tithes of all that I get.’ But the publican, standing afar off, would not so much as lift his eyes to heaven but smote his breast, saying, ‘God be merciful to me a sinner.’ I tell you that the publican went home with God’s approval rather than the Pharisee, for every one who exalts himself shall be humbled, but he who humbles himself shall be exalted.”}
 \vs p167 5:2 \pc That night, in Jericho, the unfriendly Pharisees sought to entrap the Master by inducing him to discuss marriage and divorce, as did their fellows one time in Galilee, but Jesus artfully avoided their efforts to bring him into conflict with their laws concerning divorce. As the publican and the Pharisee illustrated good and bad religion, their divorce practices served to contrast the better marriage laws of the Jewish code with the disgraceful laxity of the Pharisaic interpretations of these Mosaic divorce statutes. The Pharisee judged himself by the lowest standard; the publican squared himself by the highest ideal. Devotion, to the Pharisee, was a means of inducing self\hyp{}righteous inactivity and the assurance of false spiritual security; devotion, to the publican, was a means of stirring up his soul to the realization of the need for repentance, confession, and the acceptance, by faith, of merciful forgiveness. The Pharisee sought justice; the publican sought mercy. The law of the universe is: Ask and you shall receive; seek and you shall find.
