--- a/tex/p173.tex
+++ b/tex/p173.tex
@@ -5,7 +5,7 @@
 \uminitoc{Parable of the Absent Landlord}
 \uminitoc{Parable of the Marriage Feast}
 \author{Midwayer Commission}
-\vs p173 0:1 Early on this Monday morning, by prearrangement, Jesus and the apostles assembled at the home of Simon in Bethany, and after a brief conference they set out for Jerusalem. The 12 were strangely silent as they journeyed on toward the temple; they had not recovered from the experience of the preceding day. They were expectant, fearful, and profoundly affected by a certain feeling of detachment growing out of the Master’s sudden change of tactics, coupled with his instruction that they were to engage in no public teaching throughout this Passover week.
+\vs p173 0:1 Early on this Monday morning, by prearrangement, Jesus and the apostles assembled at the home of Simon in Bethany, and after a brief conference they set out for Jerusalem. The twelve were strangely silent as they journeyed on toward the temple; they had not recovered from the experience of the preceding day. They were expectant, fearful, and profoundly affected by a certain feeling of detachment growing out of the Master’s sudden change of tactics, coupled with his instruction that they were to engage in no public teaching throughout this Passover week.
 \vs p173 0:2 As this group journeyed down Mount Olivet, Jesus led the way, the apostles following closely behind in meditative silence. There was just one thought uppermost in the minds of all save Judas Iscariot, and that was: What will the Master do today? The one absorbing thought of Judas was: What shall I do? Shall I go on with Jesus and my associates, or shall I withdraw? And if I am going to quit, how shall I break off?
 \vs p173 0:3 It was about 9:00 on this beautiful morning when these men arrived at the temple. They went at once to the large court where Jesus so often taught, and after greeting the believers who were awaiting him, Jesus mounted one of the teaching platforms and began to address the gathering crowd. The apostles withdrew for a short distance and awaited developments.
 \usection{Cleansing the Temple}
@@ -33,7 +33,7 @@
 \vs p173 3:1 As the cavilling Pharisees stood there in silence before Jesus, he looked down on them and said: \textcolour{ubdarkred}{“Since you are in doubt about John’s mission and arrayed in enmity against the teaching and the works of the Son of Man, give ear while I tell you a parable: A certain great and respected landholder had two sons, and desiring the help of his sons in the management of his large estates, he came to one of them, saying, ‘Son, go work today in my vineyard.’ And this unthinking son answered his father, saying, ‘I will not go’; but afterwards he repented and went. When he had found his older son, likewise he said to him, ‘Son, go work in my vineyard.’ And this hypocritical and unfaithful son answered, ‘Yes, my father, I will go.’ But when his father had departed, he went not. Let me ask you, which of these sons really did his father’s will?”}
 \vs p173 3:2 And the people spoke with one accord, saying, “The first son.” And then said Jesus: \textcolour{ubdarkred}{“Even so; and now do I declare that the publicans and harlots, even though they appear to refuse the call to repentance, shall see the error of their way and go on into the kingdom of God before you, who make great pretensions of serving the Father in heaven while you refuse to do the works of the Father. It was not you, the Pharisees and scribes, who believed John, but rather the publicans and sinners; neither do you believe my teaching, but the common people hear my words gladly.”}
 \vs p173 3:3 Jesus did not despise the Pharisees and Sadducees personally. It was their systems of teaching and practice which he sought to discredit. He was hostile to no man, but here was occurring the inevitable clash between a new and living religion of the spirit and the older religion of ceremony, tradition, and authority.
-\vs p173 3:4 All this time the 12 apostles stood near the Master, but they did not in any manner participate in these transactions. Each one of the 12 was reacting in his own peculiar way to the events of these closing days of Jesus’ ministry in the flesh, and each one likewise remained obedient to the Master’s injunction to refrain from all public teaching and preaching during this Passover week.
+\vs p173 3:4 All this time the twelve apostles stood near the Master, but they did not in any manner participate in these transactions. Each one of the twelve was reacting in his own peculiar way to the events of these closing days of Jesus’ ministry in the flesh, and each one likewise remained obedient to the Master’s injunction to refrain from all public teaching and preaching during this Passover week.
 \usection{Parable of the Absent Landlord}
 \vs p173 4:1 When the chief Pharisees and the scribes who had sought to entangle Jesus with their questions had finished listening to the story of the two sons, they withdrew to take further counsel, and the Master, turning his attention to the listening multitude, told another parable:
 \vs p173 4:2 \pc \textcolour{ubdarkred}{“There was a good man who was a householder, and he planted a vineyard. He set a hedge about it, dug a pit for the wine press, and built a watchtower for the guards. Then he let this vineyard out to tenants while he went on a long journey into another country. And when the season of the fruits drew near, he sent servants to the tenants to receive his rental. But they took counsel among themselves and refused to give these servants the fruits due their master; instead, they fell upon his servants, beating one, stoning another, and sending the others away empty\hyp{}handed. And when the householder heard about all this, he sent other and more trusted servants to deal with these wicked tenants, and these they wounded and also treated shamefully. And then the householder sent his favourite servant, his steward, and him they killed. And still, in patience and with forbearance, he dispatched many other servants, but none would they receive. Some they beat, others they killed, and when the householder had been so dealt with, he decided to send his son to deal with these ungrateful tenants, saying to himself, ‘They may mistreat my servants, but they will surely show respect for my beloved son.’ But when these unrepentant and wicked tenants saw the son, they reasoned among themselves: ‘This is the heir; come, let us kill him and then the inheritance will be ours.’ So they laid hold on him, and after casting him out of the vineyard, they killed him. When the lord of that vineyard shall hear how they have rejected and killed his son, what will he do to those ungrateful and wicked tenants?”}
@@ -46,5 +46,5 @@
 \vs p173 5:3 \textcolour{ubdarkred}{“And when he had punished those who spurned his invitation, he appointed yet another day for the wedding feast and said to his messengers: ‘They who were first bidden to the wedding were not worthy; so go now into the parting of the ways and into the highways and even beyond the borders of the city, and as many as you shall find, bid even these strangers to come in and attend this wedding feast.’ And then these servants went out into the highways and the out\hyp{}of\hyp{}the\hyp{}way places, and they gathered together as many as they found, good and bad, rich and poor, so that at last the wedding chamber was filled with willing guests. When all was ready, the king came in to view his guests, and much to his surprise he saw there a man without a wedding garment. The king, since he had freely provided wedding garments for all his guests, addressing this man, said: ‘Friend, how is it that you come into my guest chamber on this occasion without a wedding garment?’ And this unprepared man was speechless. Then said the king to his servants: ‘Cast out this thoughtless guest from my house to share the lot of all the others who have spurned my hospitality and rejected my call. I will have none here except those who delight to accept my invitation, and who do me the honour to wear those guest garments so freely provided for all.’”}
 \vs p173 5:4 \pc After speaking this parable, Jesus was about to dismiss the multitude when a sympathetic believer, making his way through the crowds toward him, asked: “But, Master, how shall we know about these things? how shall we be ready for the king’s invitation? what sign will you give us whereby we shall know that you are the Son of God?” And when the Master heard this, he said, \textcolour{ubdarkred}{“Only one sign shall be given you.”} And then, pointing to his own body, he continued, \textcolour{ubdarkred}{“Destroy this temple, and in three days I will raise it up.”} But they did not understand him, and as they dispersed, they talked among themselves, saying, “Almost 50 years has this temple been in building, and yet he says he will destroy it and raise it up in 3 days.” Even his own apostles did not comprehend the significance of this utterance, but subsequently, after his resurrection, they recalled what he had said.
 \vs p173 5:5 About 16:00 Jesus beckoned to his apostles and indicated that he desired to leave the temple and to go to Bethany for their evening meal and a night of rest. On the way up Olivet Jesus instructed Andrew, Philip, and Thomas that, on the morrow, they should establish a camp nearer the city which they could occupy during the remainder of the Passover week. In compliance with this instruction the following morning they pitched their tents in the hillside ravine overlooking the public camping park of Gethsemane, on a plot of ground belonging to Simon of Bethany.
-\vs p173 5:6 Again it was a silent group of Jews who made their way up the western slope of Olivet on this Monday night. These 12 men, as never before, were beginning to sense that something tragic was about to happen. While the dramatic cleansing of the temple during the early morning had aroused their hopes of seeing the Master assert himself and manifest his mighty powers, the events of the entire afternoon only operated as an anticlimax in that they all pointed to the certain rejection of Jesus’ teaching by the Jewish authorities. The apostles were gripped by suspense and were held in the firm grasp of a terrible uncertainty. They realized that only a few short days could intervene between the events of the day just passed and the crash of an impending doom. They all felt that something tremendous was about to happen, but they knew not what to expect. They went to their various places for rest, but they slept very little. Even the Alpheus twins were at last aroused to the realization that the events of the Master’s life were moving swiftly toward their final culmination.
+\vs p173 5:6 Again it was a silent group of Jews who made their way up the western slope of Olivet on this Monday night. These twelve men, as never before, were beginning to sense that something tragic was about to happen. While the dramatic cleansing of the temple during the early morning had aroused their hopes of seeing the Master assert himself and manifest his mighty powers, the events of the entire afternoon only operated as an anticlimax in that they all pointed to the certain rejection of Jesus’ teaching by the Jewish authorities. The apostles were gripped by suspense and were held in the firm grasp of a terrible uncertainty. They realized that only a few short days could intervene between the events of the day just passed and the crash of an impending doom. They all felt that something tremendous was about to happen, but they knew not what to expect. They went to their various places for rest, but they slept very little. Even the Alpheus twins were at last aroused to the realization that the events of the Master’s life were moving swiftly toward their final culmination.
 \quizlink
