--- a/tex/p174.tex
+++ b/tex/p174.tex
@@ -6,7 +6,7 @@
 \uminitoc{The Inquiring Greeks}
 \author{Midwayer Commission}
 \vs p174 0:1 About 7:00 on this Tuesday morning Jesus met the apostles, the women’s corps, and some two dozen other prominent disciples at the home of Simon. At this meeting he said farewell to Lazarus, giving him that instruction which led him so soon to flee to Philadelphia in Perea, where he later became connected with the missionary movement having its headquarters in that city. Jesus also said good\hyp{}bye to the aged Simon, and gave his parting advice to the women’s corps, as he never again formally addressed them.
-\vs p174 0:2 This morning he greeted each of the 12 with a personal salutation. To Andrew he said: \textcolour{ubdarkred}{“Be not dismayed by the events just ahead. Keep a firm hold on your brethren and see that they do not find you downcast.”} To Peter he said: \textcolour{ubdarkred}{“Put not your trust in the arm of flesh nor in weapons of steel. Establish yourself on the spiritual foundations of the eternal rocks.”} To James he said: \textcolour{ubdarkred}{“Falter not because of outward appearances. Remain firm in your faith, and you shall soon know of the reality of that which you believe.”} To John he said: \textcolour{ubdarkred}{“Be gentle; love even your enemies; be tolerant. And remember that I have trusted you with many things.”} To Nathaniel he said: \textcolour{ubdarkred}{“Judge not by appearances; remain firm in your faith when all appears to vanish; be true to your commission as an ambassador of the kingdom.”} To Philip he said: \textcolour{ubdarkred}{“Be unmoved by the events now impending. Remain unshaken, even when you cannot see the way. Be loyal to your oath of consecration.”} To Matthew he said: \textcolour{ubdarkred}{“Forget not the mercy that received you into the kingdom. Let no man cheat you of your eternal reward. As you have withstood the inclinations of the mortal nature, be willing to be steadfast.”} To Thomas he said: \textcolour{ubdarkred}{“No matter how difficult it may be, just now you must walk by faith and not by sight. Doubt not that I am able to finish the work I have begun, and that I shall eventually see all of my faithful ambassadors in the kingdom beyond.”} To the Alpheus twins he said: \textcolour{ubdarkred}{“Do not allow the things which you cannot understand to crush you. Be true to the affections of your hearts and put not your trust in either great men or the changing attitude of the people. Stand by your brethren.”} And to Simon Zelotes he said: \textcolour{ubdarkred}{“Simon, you may be crushed by disappointment, but your spirit shall rise above all that may come upon you. What you have failed to learn from me, my spirit will teach you. Seek the true realities of the spirit and cease to be attracted by unreal and material shadows.”} And to Judas Iscariot he said: \textcolour{ubdarkred}{“Judas, I have loved you and have prayed that you would love your brethren. Be not weary in well doing; and I would warn you to beware the slippery paths of flattery and the poison darts of ridicule.”}
+\vs p174 0:2 This morning he greeted each of the twelve with a personal salutation. To Andrew he said: \textcolour{ubdarkred}{“Be not dismayed by the events just ahead. Keep a firm hold on your brethren and see that they do not find you downcast.”} To Peter he said: \textcolour{ubdarkred}{“Put not your trust in the arm of flesh nor in weapons of steel. Establish yourself on the spiritual foundations of the eternal rocks.”} To James he said: \textcolour{ubdarkred}{“Falter not because of outward appearances. Remain firm in your faith, and you shall soon know of the reality of that which you believe.”} To John he said: \textcolour{ubdarkred}{“Be gentle; love even your enemies; be tolerant. And remember that I have trusted you with many things.”} To Nathaniel he said: \textcolour{ubdarkred}{“Judge not by appearances; remain firm in your faith when all appears to vanish; be true to your commission as an ambassador of the kingdom.”} To Philip he said: \textcolour{ubdarkred}{“Be unmoved by the events now impending. Remain unshaken, even when you cannot see the way. Be loyal to your oath of consecration.”} To Matthew he said: \textcolour{ubdarkred}{“Forget not the mercy that received you into the kingdom. Let no man cheat you of your eternal reward. As you have withstood the inclinations of the mortal nature, be willing to be steadfast.”} To Thomas he said: \textcolour{ubdarkred}{“No matter how difficult it may be, just now you must walk by faith and not by sight. Doubt not that I am able to finish the work I have begun, and that I shall eventually see all of my faithful ambassadors in the kingdom beyond.”} To the Alpheus twins he said: \textcolour{ubdarkred}{“Do not allow the things which you cannot understand to crush you. Be true to the affections of your hearts and put not your trust in either great men or the changing attitude of the people. Stand by your brethren.”} And to Simon Zelotes he said: \textcolour{ubdarkred}{“Simon, you may be crushed by disappointment, but your spirit shall rise above all that may come upon you. What you have failed to learn from me, my spirit will teach you. Seek the true realities of the spirit and cease to be attracted by unreal and material shadows.”} And to Judas Iscariot he said: \textcolour{ubdarkred}{“Judas, I have loved you and have prayed that you would love your brethren. Be not weary in well doing; and I would warn you to beware the slippery paths of flattery and the poison darts of ridicule.”}
 \vs p174 0:3 And when he had concluded these greetings, he departed for Jerusalem with Andrew, Peter, James, and John as the other apostles set about the establishment of the Gethsemane camp, where they were to go that night, and where they made their headquarters for the remainder of the Master’s life in the flesh. About halfway down the slope of Olivet Jesus paused and visited more than an hour with the four apostles.
 \usection{Divine Forgiveness}
 \vs p174 1:1 For several days Peter and James had been engaged in discussing their differences of opinion about the Master’s teaching regarding the forgiveness of sin. They had both agreed to lay the matter before Jesus, and Peter embraced this occasion as a fitting opportunity for securing the Master’s counsel. Accordingly, Simon Peter broke in on the conversation dealing with the differences between praise and worship, by asking: “Master, James and I are not in accord regarding your teachings having to do with the forgiveness of sin. James claims you teach that the Father forgives us even before we ask him, and I maintain that repentance and confession must precede the forgiveness. Which of us is right? what do you say?”
@@ -35,7 +35,7 @@
 \vs p174 4:6 When no more questions were forthcoming, and as the noon hour was near, Jesus did not resume his teaching but was content merely to ask the Pharisees and their associates a question. Said Jesus: \textcolour{ubdarkred}{“Since you ask no more questions, I would like to ask you one. What do you think of the Deliverer? That is, whose son is he?”} After a brief pause one of the scribes answered, “The Messiah is the son of David.” And since Jesus knew that there had been much debate, even among his own disciples, as to whether or not he was the son of David, he asked this further question: \textcolour{ubdarkred}{“If the Deliverer is indeed the son of David, how is it that, in the Psalm which you accredit to David, he himself, speaking in the spirit, says, ‘The Lord said to my lord, sit on my right hand until I make your enemies the footstool of your feet.’ If David calls him Lord, how then can he be his son?”} Although the rulers, the scribes, and the chief priests made no reply to this question, they likewise refrained from asking him any more questions in an effort to entangle him. They never answered this question which Jesus put to them, but after the Master’s death they attempted to escape the difficulty by changing the interpretation of this Psalm so as to make it refer to Abraham instead of the Messiah. Others sought to escape the dilemma by disallowing that David was the author of this so\hyp{}called Messianic Psalm.
 \vs p174 4:7 A short time back the Pharisees had enjoyed the manner in which the Sadducees had been silenced by the Master; now the Sadducees were delighted by the failure of the Pharisees; but such rivalry was only momentary; they speedily forgot their time\hyp{}honoured differences in the united effort to stop Jesus’ teachings and doings. But throughout all of these experiences the common people heard him gladly.
 \usection{The Inquiring Greeks}
-\vs p174 5:1 About noontime, as Philip was purchasing supplies for the new camp which was that day being established near Gethsemane, he was accosted by a delegation of strangers, a group of believing Greeks from Alexandria, Athens, and Rome, whose spokesman said to the apostle: “You have been pointed out to us by those who know you; so we come to you, Sir, with the request to see Jesus, your Master.” Philip was taken by surprise thus to meet these prominent and inquiring Greek gentiles in the market place, and, since Jesus had so explicitly charged all of the 12 not to engage in any public teaching during the Passover week, he was a bit perplexed as to the right way to handle this matter. He was also disconcerted because these men were foreign gentiles. If they had been Jews or near\hyp{}by and familiar gentiles, he would not have hesitated so markedly. What he did was this: He asked these Greeks to remain right where they were. As he hastened away, they supposed that he went in search of Jesus, but in reality he hurried off to the home of Joseph, where he knew Andrew and the other apostles were at lunch; and calling Andrew out, he explained the purpose of his coming, and then, accompanied by Andrew, he returned to the waiting Greeks.
+\vs p174 5:1 About noontime, as Philip was purchasing supplies for the new camp which was that day being established near Gethsemane, he was accosted by a delegation of strangers, a group of believing Greeks from Alexandria, Athens, and Rome, whose spokesman said to the apostle: “You have been pointed out to us by those who know you; so we come to you, Sir, with the request to see Jesus, your Master.” Philip was taken by surprise thus to meet these prominent and inquiring Greek gentiles in the market place, and, since Jesus had so explicitly charged all of the twelve not to engage in any public teaching during the Passover week, he was a bit perplexed as to the right way to handle this matter. He was also disconcerted because these men were foreign gentiles. If they had been Jews or near\hyp{}by and familiar gentiles, he would not have hesitated so markedly. What he did was this: He asked these Greeks to remain right where they were. As he hastened away, they supposed that he went in search of Jesus, but in reality he hurried off to the home of Joseph, where he knew Andrew and the other apostles were at lunch; and calling Andrew out, he explained the purpose of his coming, and then, accompanied by Andrew, he returned to the waiting Greeks.
 \vs p174 5:2 Since Philip had about finished the purchasing of supplies, he and Andrew returned with the Greeks to the home of Joseph, where Jesus received them; and they sat near while he spoke to his apostles and a number of leading disciples assembled at this luncheon. Said Jesus:
 \vs p174 5:3 \pc \textcolour{ubdarkred}{“My Father sent me to this world to reveal his loving\hyp{}kindness to the children of men, but those to whom I first came have refused to receive me. True, indeed, many of you have believed my gospel for yourselves, but the children of Abraham and their leaders are about to reject me, and in so doing they will reject Him who sent me. I have freely proclaimed the gospel of salvation to this people; I have told them of sonship with joy, liberty, and life more abundant in the spirit. My Father has done many wonderful works among these fear\hyp{}ridden sons of men. But truly did the Prophet Isaiah refer to this people when he wrote: ‘Lord, who has believed our teachings? And to whom has the Lord been revealed?’ Truly have the leaders of my people deliberately blinded their eyes that they see not, and hardened their hearts lest they believe and be saved. All these years have I sought to heal them of their unbelief that they might be recipients of the Father’s eternal salvation. I know that not all have failed me; some of you have indeed believed my message. In this room now are a full score of men who were once members of the Sanhedrin, or who were high in the councils of the nation, albeit even some of you still shrink from open confession of the truth lest they cast you out of the synagogue. Some of you are tempted to love the glory of men more than the glory of God. But I am constrained to show forbearance since I fear for the safety and loyalty of even some of those who have been so long near me, and who have lived so close by my side.}
 \vs p174 5:4 \textcolour{ubdarkred}{“In this banquet chamber I perceive there are assembled Jews and gentiles in about equal numbers, and I would address you as the first and last of such a group that I may instruct in the affairs of the kingdom before I go to my Father.”}
