--- a/tex/p178.tex
+++ b/tex/p178.tex
@@ -3,7 +3,7 @@
 \uminitoc{After the Noontime Meal}
 \uminitoc{On the Way to the Supper}
 \author{Midwayer Commission}
-\vs p178 0:1 Jesus planned to spend this Thursday, his last free day on earth as a divine Son incarnated in the flesh, with his apostles and a few loyal and devoted disciples. Soon after the breakfast hour on this beautiful morning, the Master led them to a secluded spot a short distance above their camp and there taught them many new truths. Although Jesus delivered other discourses to the apostles during the early evening hours of the day, this talk of Thursday forenoon was his farewell address to the combined camp group of apostles and chosen disciples, both Jews and gentiles. The 12 were all present save Judas. Peter and several of the apostles remarked about his absence, and some of them thought Jesus had sent him into the city to attend to some matter, probably to arrange the details of their forthcoming celebration of the Passover. Judas did not return to the camp until midafternoon, a short time before Jesus led the 12 into Jerusalem to partake of the Last Supper.
+\vs p178 0:1 Jesus planned to spend this Thursday, his last free day on earth as a divine Son incarnated in the flesh, with his apostles and a few loyal and devoted disciples. Soon after the breakfast hour on this beautiful morning, the Master led them to a secluded spot a short distance above their camp and there taught them many new truths. Although Jesus delivered other discourses to the apostles during the early evening hours of the day, this talk of Thursday forenoon was his farewell address to the combined camp group of apostles and chosen disciples, both Jews and gentiles. The twelve were all present save Judas. Peter and several of the apostles remarked about his absence, and some of them thought Jesus had sent him into the city to attend to some matter, probably to arrange the details of their forthcoming celebration of the Passover. Judas did not return to the camp until midafternoon, a short time before Jesus led the twelve into Jerusalem to partake of the Last Supper.
 \usection{Discourse on Sonship and Citizenship}
 \vs p178 1:1 Jesus talked to about 50 of his trusted followers for almost 2 hours and answered a score of questions regarding the relation of the kingdom of heaven to the kingdoms of this world, concerning the relation of sonship with God to citizenship in earthly governments. This discourse, together with his answers to questions, may be summarized and restated in modern language as follows:
 \vs p178 1:2 \pc The kingdoms of this world, being material, may often find it necessary to employ physical force in the execution of their laws and for the maintenance of order. In the kingdom of heaven true believers will not resort to the employment of physical force. The kingdom of heaven, being a spiritual brotherhood of the spirit\hyp{}born sons of God, may be promulgated only by the power of the spirit. This distinction of procedure refers to the relations of the kingdom of believers to the kingdoms of secular government and does not nullify the right of social groups of believers to maintain order in their ranks and administer discipline upon unruly and unworthy members.
@@ -35,9 +35,9 @@
 \vs p178 2:9 And all of this came to pass as the result of an understanding arrived at between the Master and John Mark during the afternoon of the preceding day when they were alone in the hills. Jesus wanted to be sure he would have this one last meal undisturbed with his apostles, and believing if Judas knew beforehand of their place of meeting he might arrange with his enemies to take him, he made this secret arrangement with John Mark. In this way Judas did not learn of their place of meeting until later on when he arrived there in company with Jesus and the other apostles.
 \vs p178 2:10 \pc David Zebedee had much business to transact with Judas so that he was easily prevented from following Peter, John, and Philip, as he so much desired to do. When Judas gave David a certain sum of money for provisions, David said to him: “Judas, might it not be well, under the circumstances, to provide me with a little money in advance of my actual needs?” And after Judas had reflected for a moment, he answered: “Yes, David, I think it would be wise. In fact, in view of the disturbed conditions in Jerusalem, I think it would be best for me to turn over all the money to you. They plot against the Master, and in case anything should happen to me, you would not be hampered.”
 \vs p178 2:11 And so David received all the apostolic cash funds and receipts for all money on deposit. Not until the evening of the next day did the apostles learn of this transaction.
-\vs p178 2:12 \pc It was about 16:30 when the three apostles returned and informed Jesus that everything was in readiness for the supper. The Master immediately prepared to lead his 12 apostles over the trail to the Bethany road and on into Jerusalem. And this was the last journey he ever made with all 12 of them.
+\vs p178 2:12 \pc It was about 16:30 when the three apostles returned and informed Jesus that everything was in readiness for the supper. The Master immediately prepared to lead his twelve apostles over the trail to the Bethany road and on into Jerusalem. And this was the last journey he ever made with all twelve of them.
 \usection{On the Way to the Supper}
-\vs p178 3:1 Seeking again to avoid the crowds passing through the Kidron valley back and forth between Gethsemane Park and Jerusalem, Jesus and the 12 walked over the western brow of Mount Olivet to meet the road leading from Bethany down to the city. As they drew near the place where Jesus had tarried the previous evening to discourse on the destruction of Jerusalem, they unconsciously paused while they stood and looked down in silence upon the city. As they were a little early, and since Jesus did not wish to pass through the city until after sunset, he said to his associates:
+\vs p178 3:1 Seeking again to avoid the crowds passing through the Kidron valley back and forth between Gethsemane Park and Jerusalem, Jesus and the twelve walked over the western brow of Mount Olivet to meet the road leading from Bethany down to the city. As they drew near the place where Jesus had tarried the previous evening to discourse on the destruction of Jerusalem, they unconsciously paused while they stood and looked down in silence upon the city. As they were a little early, and since Jesus did not wish to pass through the city until after sunset, he said to his associates:
 \vs p178 3:2 \pc \textcolour{ubdarkred}{“Sit down and rest yourselves while I talk with you about what must shortly come to pass. All these years have I lived with you as brethren, and I have taught you the truth concerning the kingdom of heaven and have revealed to you the mysteries thereof. And my Father has indeed done many wonderful works in connection with my mission on earth. You have been witnesses of all this and partakers in the experience of being labourers together with God. And you will bear me witness that I have for some time warned you that I must presently return to the work the Father has given me to do; I have plainly told you that I must leave you in the world to carry on the work of the kingdom. It was for this purpose that I set you apart, in the hills of Capernaum. The experience you have had with me, you must now make ready to share with others. As the Father sent me into this world, so am I about to send you forth to represent me and finish the work I have begun.}
 \vs p178 3:3 \textcolour{ubdarkred}{“You look down on yonder city in sorrow, for you have heard my words telling of the end of Jerusalem. I have forewarned you lest you should perish in her destruction and so delay the proclamation of the gospel of the kingdom. Likewise do I warn you to take heed lest you needlessly expose yourselves to peril when they come to take the Son of Man. I must go, but you are to remain to witness to this gospel when I have gone, even as I directed that Lazarus flee from the wrath of man that he might live to make known the glory of God. If it is the Father’s will that I depart, nothing you may do can frustrate the divine plan. Take heed to yourselves lest they kill you also. Let your souls be valiant in defence of the gospel by spirit power but be not misled into any foolish attempt to defend the Son of Man. I need no defence by the hand of man; the armies of heaven are even now near at hand; but I am determined to do the will of my Father in heaven, and therefore must we submit to that which is so soon to come upon us.}
 \vs p178 3:4 \textcolour{ubdarkred}{“When you see this city destroyed, forget not that you have entered already upon the eternal life of endless service in the ever\hyp{}advancing kingdom of heaven, even of the heaven of heavens. You should know that in my Father’s universe and in mine are many abodes, and that there awaits the children of light the revelation of cities whose builder is God and worlds whose habit of life is righteousness and joy in the truth. I have brought the kingdom of heaven to you here on earth, but I declare that all of you who by faith enter therein and remain therein by the living service of truth, shall surely ascend to the worlds on high and sit with me in the spirit kingdom of our Father. But first must you gird yourselves and complete the work which you have begun with me. You must first pass through much tribulation and endure many sorrows --- and these trials are even now upon us --- and when you have finished your work on earth, you shall come to my joy, even as I have finished my Father’s work on earth and am about to return to his embrace.”}
