--- a/tex/p187.tex
+++ b/tex/p187.tex
@@ -6,7 +6,7 @@
 \uminitoc{Last Hour on the Cross}
 \uminitoc{After the Crucifixion}
 \author{Midwayer Commission}
-\vs p187 0:1 After the two brigands had been made ready, the soldiers, under the direction of a centurion, started for the scene of the crucifixion. The centurion in charge of these 12 soldiers was the same captain who had led forth the Roman soldiers the previous night to arrest Jesus in Gethsemane. It was the Roman custom to assign four soldiers for each person to be crucified. The two brigands were properly scourged before they were taken out to be crucified, but Jesus was given no further physical punishment; the captain undoubtedly thought he had already been sufficiently scourged, even before his condemnation.
+\vs p187 0:1 After the two brigands had been made ready, the soldiers, under the direction of a centurion, started for the scene of the crucifixion. The centurion in charge of these twelve soldiers was the same captain who had led forth the Roman soldiers the previous night to arrest Jesus in Gethsemane. It was the Roman custom to assign four soldiers for each person to be crucified. The two brigands were properly scourged before they were taken out to be crucified, but Jesus was given no further physical punishment; the captain undoubtedly thought he had already been sufficiently scourged, even before his condemnation.
 \vs p187 0:2 The two thieves crucified with Jesus were associates of Barabbas and would later have been put to death with their leader if he had not been released as the Passover pardon of Pilate. Jesus was thus crucified in the place of Barabbas.
 \vs p187 0:3 What Jesus is now about to do, submit to death on the cross, he does of his own free will. In foretelling this experience, he said: \textcolour{ubdarkred}{“The Father loves and sustains me because I am willing to lay down my life. But I will take it up again. No one takes my life away from me --- I lay it down of myself. I have authority to lay it down, and I have authority to take it up. I have received such a commandment from my Father.”}
 \vs p187 0:4 It was just before 9:00 this morning when the soldiers led Jesus from the praetorium on the way to Golgotha. They were followed by many who secretly sympathized with Jesus, but most of this group of 200 or more were either his enemies or curious idlers who merely desired to enjoy the shock of witnessing the crucifixions. Only a few of the Jewish leaders went out to see Jesus die on the cross. Knowing that he had been turned over to the Roman soldiers by Pilate, and that he was condemned to die, they busied themselves with their meeting in the temple, whereat they discussed what should be done with his followers.
