--- a/tex/p193.tex
+++ b/tex/p193.tex
@@ -27,7 +27,7 @@
 \usection{Causes of Judas’s Downfall}
 \vs p193 4:1 It was in the first part of the Master’s farewell message to his apostles that he alluded to the loss of Judas and held up the tragic fate of their traitorous fellow worker as a solemn warning against the dangers of social and fraternal isolation. It may be helpful to believers, in this and in future ages, briefly to review the causes of Judas’s downfall in the light of the Master’s remarks and in view of the accumulated enlightenment of succeeding centuries.
 \vs p193 4:2 As we look back upon this tragedy, we conceive that Judas went wrong, primarily, because he was very markedly an isolated personality, a personality shut in and away from ordinary social contacts. He persistently refused to confide in, or freely fraternize with, his fellow apostles. But his being an isolated type of personality would not, in and of itself, have wrought such mischief for Judas had it not been that he also failed to increase in love and grow in spiritual grace. And then, as if to make a bad matter worse, he persistently harboured grudges and fostered such psychologic enemies as revenge and the generalized craving to “get even” with somebody for all his disappointments.
-\vs p193 4:3 This unfortunate combination of individual peculiarities and mental tendencies conspired to destroy a well\hyp{}intentioned man who failed to subdue these evils by love, faith, and trust. That Judas need not have gone wrong is well proved by the cases of Thomas and Nathaniel, both of whom were cursed with this same sort of suspicion and overdevelopment of the individualistic tendency. Even Andrew and Matthew had many leanings in this direction; but all these men grew to love Jesus and their fellow apostles more, and not less, as time passed. They grew in grace and in a knowledge of the truth. They became increasingly more trustful of their brethren and slowly developed the ability to confide in their fellows. Judas persistently refused to confide in his brethren. When he was impelled, by the accumulation of his emotional conflicts, to seek relief in self\hyp{}expression, he invariably sought the advice and received the unwise consolation of his unspiritual relatives or those chance acquaintances who were either indifferent, or actually hostile, to the welfare and progress of the spiritual realities of the heavenly kingdom, of which he was one of the 12 consecrated ambassadors on earth.
+\vs p193 4:3 This unfortunate combination of individual peculiarities and mental tendencies conspired to destroy a well\hyp{}intentioned man who failed to subdue these evils by love, faith, and trust. That Judas need not have gone wrong is well proved by the cases of Thomas and Nathaniel, both of whom were cursed with this same sort of suspicion and overdevelopment of the individualistic tendency. Even Andrew and Matthew had many leanings in this direction; but all these men grew to love Jesus and their fellow apostles more, and not less, as time passed. They grew in grace and in a knowledge of the truth. They became increasingly more trustful of their brethren and slowly developed the ability to confide in their fellows. Judas persistently refused to confide in his brethren. When he was impelled, by the accumulation of his emotional conflicts, to seek relief in self\hyp{}expression, he invariably sought the advice and received the unwise consolation of his unspiritual relatives or those chance acquaintances who were either indifferent, or actually hostile, to the welfare and progress of the spiritual realities of the heavenly kingdom, of which he was one of the twelve consecrated ambassadors on earth.
 \vs p193 4:4 Judas met defeat in his battles of the earth struggle because of the following factors of personal tendencies and character weakness:
 \vs p193 4:5 \ublistelem{1.}\bibnobreakspace He was an isolated type of human being. He was highly individualistic and chose to grow into a confirmed “shut\hyp{}in” and unsociable sort of person.
 \vs p193 4:6 \ublistelem{2.}\bibnobreakspace As a child, life had been made too easy for him. He bitterly resented thwarting. He always expected to win; he was a very poor loser.
@@ -50,6 +50,6 @@
 \vs p193 6:2 Simon Peter took it upon himself to speak for his fellow apostles and made a thrilling report of the last meeting of the 11 with their Master and most touchingly portrayed the Master’s final farewell and his ascension disappearance. It was a meeting the like of which had never before occurred on this world. This part of the meeting lasted not quite one hour. Peter then explained that they had decided to choose a successor to Judas Iscariot, and that a recess would be granted to enable the apostles to decide between the two men who had been suggested for this position, Matthias and Justus.
 \vs p193 6:3 The 11 apostles then went downstairs, where they agreed to cast lots in order to determine which of these men should become an apostle to serve in Judas’s place. The lot fell on Matthias, and he was declared to be the new apostle. He was duly inducted into his office and then appointed treasurer. But Matthias had little part in the subsequent activities of the apostles.
 \vs p193 6:4 \pc Soon after Pentecost the twins returned to their homes in Galilee. Simon Zelotes was in retirement for some time before he went forth preaching the gospel. Thomas worried for a shorter period and then resumed his teaching. Nathaniel differed increasingly with Peter regarding preaching about Jesus in the place of proclaiming the former gospel of the kingdom. This disagreement became so acute by the middle of the following month that Nathaniel withdrew, going to Philadelphia to visit Abner and Lazarus; and after tarrying there for more than a year, he went on into the lands beyond Mesopotamia preaching the gospel as he understood it.
-\vs p193 6:5 This left but 6 of the original 12 apostles to become actors on the stage of the early proclamation of the gospel in Jerusalem: Peter, Andrew, James, John, Philip, and Matthew.
+\vs p193 6:5 This left but 6 of the original twelve apostles to become actors on the stage of the early proclamation of the gospel in Jerusalem: Peter, Andrew, James, John, Philip, and Matthew.
 \vs p193 6:6 \pc Just about noon the apostles returned to their brethren in the upper chamber and announced that Matthias had been chosen as the new apostle. And then Peter called all of the believers to engage in prayer, prayer that they might be prepared to receive the gift of the spirit which the Master had promised to send.
 \quizlink
