--- a/tex/p196.tex
+++ b/tex/p196.tex
@@ -25,7 +25,7 @@
 \vs p196 1:5 It should not be the aim of kingdom believers literally to imitate the outward life of Jesus in the flesh but rather to share his faith; to trust God as he trusted God and to believe in men as he believed in men. Jesus never argued about either the fatherhood of God or the brotherhood of men; he was a living illustration of the one and a profound demonstration of the other.
 \vs p196 1:6 Just as men must progress from the consciousness of the human to the realization of the divine, so did Jesus ascend from the nature of man to the consciousness of the nature of God. And the Master made this great ascent from the human to the divine by the conjoint achievement of the faith of his mortal intellect and the acts of his indwelling Adjuster. The fact\hyp{}realization of the attainment of totality of divinity (all the while fully conscious of the reality of humanity) was attended by seven stages of faith consciousness of progressive divinization. These stages of progressive self\hyp{}realization were marked off by the following extraordinary events in the Master’s bestowal experience:
 \vs p196 1:7 \ublistelem{1.}\bibnobreakspace The arrival of the Thought Adjuster.
-\vs p196 1:8 \ublistelem{2.}\bibnobreakspace The messenger of Immanuel who appeared to him at Jerusalem when he was about 12 years old.
+\vs p196 1:8 \ublistelem{2.}\bibnobreakspace The messenger of Immanuel who appeared to him at Jerusalem when he was about twelve years old.
 \vs p196 1:9 \ublistelem{3.}\bibnobreakspace The manifestations attendant upon his baptism.
 \vs p196 1:10 \ublistelem{4.}\bibnobreakspace The experiences on the Mount of Transfiguration.
 \vs p196 1:11 \ublistelem{5.}\bibnobreakspace The morontia resurrection.
