--- a/tex/p137.tex
+++ b/tex/p137.tex
@@ -10,7 +10,7 @@
 \author{Midwayer Commission}
 \vs p137 0:1 Early on Saturday morning, February 23, A.D.\,26, Jesus came down from the hills to rejoin John’s company encamped at Pella. All that day Jesus mingled with the multitude. He ministered to a lad who had injured himself in a fall and journeyed to the near\hyp{}by village of Pella to deliver the boy safely into the hands of his parents.
 \usection{Choosing the First Four Apostles}
-\vs p137 1:1 During this Sabbath two of John’s leading disciples spent much time with Jesus. Of all John’s followers one named Andrew was the most profoundly impressed with Jesus; he accompanied him on the trip to Pella with the injured boy. On the way back to John’s rendezvous he asked Jesus many questions, and just before reaching their destination, the two paused for a short talk, during which Andrew said: “I have observed you ever since you came to Capernaum, and I believe you are the new Teacher, and though I do not understand all your teaching, I have fully made up my mind to follow you; I would sit at your feet and learn the whole truth about the new kingdom.” And Jesus, with hearty assurance, welcomed Andrew as the first of his apostles, that group of 12 who were to labour with him in the work of establishing the new kingdom of God in the hearts of men.
+\vs p137 1:1 During this Sabbath two of John’s leading disciples spent much time with Jesus. Of all John’s followers one named Andrew was the most profoundly impressed with Jesus; he accompanied him on the trip to Pella with the injured boy. On the way back to John’s rendezvous he asked Jesus many questions, and just before reaching their destination, the two paused for a short talk, during which Andrew said: “I have observed you ever since you came to Capernaum, and I believe you are the new Teacher, and though I do not understand all your teaching, I have fully made up my mind to follow you; I would sit at your feet and learn the whole truth about the new kingdom.” And Jesus, with hearty assurance, welcomed Andrew as the first of his apostles, that group of twelve who were to labour with him in the work of establishing the new kingdom of God in the hearts of men.
 \vs p137 1:2 \pc Andrew was a silent observer of, and sincere believer in, John’s work, and he had a very able and enthusiastic brother, named Simon, who was one of John’s foremost disciples. It would not be amiss to say that Simon was one of John’s chief supporters.
 \vs p137 1:3 Soon after Jesus and Andrew returned to the camp, Andrew sought out his brother, Simon, and taking him aside, informed him that he had settled in his own mind that Jesus was the great Teacher, and that he had pledged himself as a disciple. He went on to say that Jesus had accepted his proffer of service and suggested that he (Simon) likewise go to Jesus and offer himself for fellowship in the service of the new kingdom. Said Simon: “Ever since this man came to work in Zebedee’s shop, I have believed he was sent by God, but what about John? Are we to forsake him? Is this the right thing to do?” Whereupon they agreed to go at once to consult John. John was saddened by the thought of losing two of his able advisers and most promising disciples, but he bravely answered their inquiries, saying: “This is but the beginning; presently will my work end, and we shall all become his disciples.” Then Andrew beckoned to Jesus to draw aside while he announced that his brother desired to join himself to the service of the new kingdom. And in welcoming Simon as his second apostle, Jesus said: \textcolour{ubdarkred}{“Simon, your enthusiasm is commendable, but it is dangerous to the work of the kingdom. I admonish you to become more thoughtful in your speech. I would change your name to Peter.”}
 \vs p137 1:4 \pc The parents of the injured lad who lived at Pella had besought Jesus to spend the night with them, to make their house his home, and he had promised. Before leaving Andrew and his brother, Jesus said, \textcolour{ubdarkred}{“Early on the morrow we go into Galilee.”}
