--- a/tex/p141.tex
+++ b/tex/p141.tex
@@ -9,12 +9,12 @@
 \uminitoc{Working in Jericho}
 \uminitoc{Departing for Jerusalem}
 \author{Midwayer Commission}
-\vs p141 0:1 On the first day of the week, January 19, A.D.\,27, Jesus and the 12 apostles made ready to depart from their headquarters in Bethsaida. The 12 knew nothing of their Master’s plans except that they were going up to Jerusalem to attend the Passover feast in April, and that it was the intention to journey by way of the Jordan valley. They did not get away from Zebedee’s house until near noon because the families of the apostles and others of the disciples had come to say good\hyp{}bye and wish them well in the new work they were about to begin.
-\vs p141 0:2 Just before leaving, the apostles missed the Master, and Andrew went out to find him. After a brief search he found Jesus sitting in a boat down the beach, and he was weeping. The 12 had often seen their Master when he seemed to grieve, and they had beheld his brief seasons of serious preoccupation of mind, but none of them had ever seen him weep. Andrew was somewhat startled to see the Master thus affected on the eve of their departure for Jerusalem, and he ventured to approach Jesus and ask: “On this great day, Master, when we are to depart for Jerusalem to proclaim the Father’s kingdom, why is it that you weep? Which of us has offended you?” And Jesus, going back with Andrew to join the 12, answered him: \textcolour{ubdarkred}{“No one of you has grieved me. I am saddened only because none of my father Joseph’s family have remembered to come over to bid us Godspeed.”} At this time Ruth was on a visit to her brother Joseph at Nazareth. Other members of his family were kept away by pride, disappointment, misunderstanding, and petty resentment indulged as a result of hurt feelings.
+\vs p141 0:1 On the first day of the week, January 19, A.D.\,27, Jesus and the twelve apostles made ready to depart from their headquarters in Bethsaida. The twelve knew nothing of their Master’s plans except that they were going up to Jerusalem to attend the Passover feast in April, and that it was the intention to journey by way of the Jordan valley. They did not get away from Zebedee’s house until near noon because the families of the apostles and others of the disciples had come to say good\hyp{}bye and wish them well in the new work they were about to begin.
+\vs p141 0:2 Just before leaving, the apostles missed the Master, and Andrew went out to find him. After a brief search he found Jesus sitting in a boat down the beach, and he was weeping. The twelve had often seen their Master when he seemed to grieve, and they had beheld his brief seasons of serious preoccupation of mind, but none of them had ever seen him weep. Andrew was somewhat startled to see the Master thus affected on the eve of their departure for Jerusalem, and he ventured to approach Jesus and ask: “On this great day, Master, when we are to depart for Jerusalem to proclaim the Father’s kingdom, why is it that you weep? Which of us has offended you?” And Jesus, going back with Andrew to join the twelve, answered him: \textcolour{ubdarkred}{“No one of you has grieved me. I am saddened only because none of my father Joseph’s family have remembered to come over to bid us Godspeed.”} At this time Ruth was on a visit to her brother Joseph at Nazareth. Other members of his family were kept away by pride, disappointment, misunderstanding, and petty resentment indulged as a result of hurt feelings.
 \usection{Leaving Galilee}
 \vs p141 1:1 Capernaum was not far from Tiberias, and the fame of Jesus had begun to spread well over all of Galilee and even to parts beyond. Jesus knew that Herod would soon begin to take notice of his work; so he thought best to journey south and into Judea with his apostles. A company of over 100 believers desired to go with them, but Jesus spoke to them and besought them not to accompany the apostolic group on their way down the Jordan. Though they consented to remain behind, many of them followed after the Master within a few days.
-\vs p141 1:2 The first day Jesus and the apostles only journeyed as far as Tarichea, where they rested for the night. The next day they travelled to a point on the Jordan near Pella where John had preached about one year before, and where Jesus had received baptism. Here they tarried for more than two weeks, teaching and preaching. By the end of the first week several hundred people had assembled in a camp near where Jesus and the 12 dwelt, and they had come from Galilee, Phoenicia, Syria, the Decapolis, Perea, and Judea.
-\vs p141 1:3 Jesus did no public preaching. Andrew divided the multitude and assigned the preachers for the forenoon and afternoon assemblies; after the evening meal Jesus talked with the 12. He taught them nothing new but reviewed his former teaching and answered their many questions. On one of these evenings he told the 12 something about the 40 days which he spent in the hills near this place.
+\vs p141 1:2 The first day Jesus and the apostles only journeyed as far as Tarichea, where they rested for the night. The next day they travelled to a point on the Jordan near Pella where John had preached about one year before, and where Jesus had received baptism. Here they tarried for more than two weeks, teaching and preaching. By the end of the first week several hundred people had assembled in a camp near where Jesus and the twelve dwelt, and they had come from Galilee, Phoenicia, Syria, the Decapolis, Perea, and Judea.
+\vs p141 1:3 Jesus did no public preaching. Andrew divided the multitude and assigned the preachers for the forenoon and afternoon assemblies; after the evening meal Jesus talked with the twelve. He taught them nothing new but reviewed his former teaching and answered their many questions. On one of these evenings he told the twelve something about the 40 days which he spent in the hills near this place.
 \vs p141 1:4 Many of those who came from Perea and Judea had been baptized by John and were interested in finding out more about Jesus’ teachings. The apostles made much progress in teaching the disciples of John inasmuch as they did not in any way detract from John’s preaching, and since they did not at this time even baptize their new disciples. But it was always a stumbling stone to John’s followers that Jesus, if he were all that John had announced, did nothing to get him out of prison. John’s disciples never could understand why Jesus did not prevent the cruel death of their beloved leader.
 \vs p141 1:5 From night to night Andrew carefully instructed his fellow apostles in the delicate and difficult task of getting along smoothly with the followers of John the Baptist. During this first year of Jesus’ public ministry more than \bibfrac{3}{4}\ts{ths} of his followers had previously followed John and had received his baptism. This entire year of A.D.\,27 was spent in quietly taking over John’s work in Perea and Judea.
 \usection{God’s Law and the Father’s Will}
@@ -34,7 +34,7 @@
 \vs p141 4:1 While sojourning at Amathus, Jesus spent much time with the apostles instructing them in the new concept of God; again and again did he impress upon them that \bibemph{God is a Father,} not a great and supreme bookkeeper who is chiefly engaged in making damaging entries against his erring children on earth, recordings of sin and evil to be used against them when he subsequently sits in judgment upon them as the just Judge of all creation. The Jews had long conceived of God as a king over all, even as a Father of the nation, but never before had large numbers of mortal men held the idea of God as a loving Father of the \bibemph{individual.}
 \vs p141 4:2 In answer to Thomas’s question, “Who is this God of the kingdom?” Jesus replied: \textcolour{ubdarkred}{“God is \bibemph{your} Father, and religion --- my gospel --- is nothing more nor less than the believing recognition of the truth that you are his son. And I am here among you in the flesh to make clear both of these ideas in my life and teachings.”}
 \vs p141 4:3 Jesus also sought to free the minds of his apostles from the idea of offering animal sacrifices as a religious duty. But these men, trained in the religion of the daily sacrifice, were slow to comprehend what he meant. Nevertheless, the Master did not grow weary in his teaching. When he failed to reach the minds of all of the apostles by means of one illustration, he would restate his message and employ another type of parable for purposes of illumination.
-\vs p141 4:4 \pc At this same time Jesus began to teach the 12 more fully concerning their mission \textcolour{ubdarkred}{“to comfort the afflicted and minister to the sick.”} The Master taught them much about the whole man --- the union of body, mind, and spirit to form the individual man or woman. Jesus told his associates about the three forms of affliction they would meet and went on to explain how they should minister to all who suffer the sorrows of human sickness. He taught them to recognize:
+\vs p141 4:4 \pc At this same time Jesus began to teach the twelve more fully concerning their mission \textcolour{ubdarkred}{“to comfort the afflicted and minister to the sick.”} The Master taught them much about the whole man --- the union of body, mind, and spirit to form the individual man or woman. Jesus told his associates about the three forms of affliction they would meet and went on to explain how they should minister to all who suffer the sorrows of human sickness. He taught them to recognize:
 \vs p141 4:5 \ublistelem{1.}\bibnobreakspace Diseases of the flesh --- those afflictions commonly regarded as physical sickness.
 \vs p141 4:6 \ublistelem{2.}\bibnobreakspace Troubled minds --- those nonphysical afflictions which were subsequently looked upon as emotional and mental difficulties and disturbances.
 \vs p141 4:7 \ublistelem{3.}\bibnobreakspace The possession of evil spirits.
@@ -44,7 +44,7 @@
 \vs p141 5:1 One of the most eventful of all the evening conferences at Amathus was the session having to do with the discussion of spiritual unity. James Zebedee had asked, “Master, how shall we learn to see alike and thereby enjoy more harmony among ourselves?” When Jesus heard this question, he was stirred within his spirit, so much so that he replied: \textcolour{ubdarkred}{“James, James, when did I teach you that you should all see alike? I have come into the world to proclaim spiritual liberty to the end that mortals may be empowered to live individual lives of originality and freedom before God. I do not desire that social harmony and fraternal peace shall be purchased by the sacrifice of free personality and spiritual originality. What I require of you, my apostles, is \bibemph{spirit unity ---} and that you can experience in the joy of your united dedication to the wholehearted doing of the will of my Father in heaven. You do not have to see alike or feel alike or even think alike in order spiritually to \bibemph{be alike.} Spiritual unity is derived from the consciousness that each of you is indwelt, and increasingly dominated, by the spirit gift of the heavenly Father. Your apostolic harmony must grow out of the fact that the spirit hope of each of you is identical in origin, nature, and destiny.}
 \vs p141 5:2 \textcolour{ubdarkred}{“In this way you may experience a perfected unity of spirit purpose and spirit understanding growing out of the mutual consciousness of the identity of each of your indwelling Paradise spirits; and you may enjoy all of this profound spiritual unity in the very face of the utmost diversity of your individual attitudes of intellectual thinking, temperamental feeling, and social conduct. Your personalities may be refreshingly diverse and markedly different, while your spiritual natures and spirit fruits of divine worship and brotherly love may be so unified that all who behold your lives will of a surety take cognizance of this spirit identity and soul unity; they will recognize that you have been with me and have thereby learned, and acceptably, how to do the will of the Father in heaven. You can achieve the unity of the service of God even while you render such service in accordance with the technique of your own original endowments of mind, body, and soul.}
 \vs p141 5:3 \textcolour{ubdarkred}{“Your spirit unity implies two things, which always will be found to harmonize in the lives of individual believers: First, you are possessed with a common motive for life service; you all desire above everything to do the will of the Father in heaven. Second, you all have a common goal of existence; you all purpose to find the Father in heaven, thereby proving to the universe that you have become like him.”}
-\vs p141 5:4 Many times during the training of the 12 Jesus reverted to this theme. Repeatedly he told them it was not his desire that those who believed in him should become dogmatized and standardized in accordance with the religious interpretations of even good men. Again and again he warned his apostles against the formulation of creeds and the establishment of traditions as a means of guiding and controlling believers in the gospel of the kingdom.
+\vs p141 5:4 Many times during the training of the twelve Jesus reverted to this theme. Repeatedly he told them it was not his desire that those who believed in him should become dogmatized and standardized in accordance with the religious interpretations of even good men. Again and again he warned his apostles against the formulation of creeds and the establishment of traditions as a means of guiding and controlling believers in the gospel of the kingdom.
 \usection{Last Week at Amathus}
 \vs p141 6:1 Near the end of the last week at Amathus, Simon Zelotes brought to Jesus one Teherma, a Persian doing business at Damascus. Teherma had heard of Jesus and had come to Capernaum to see him, and there learning that Jesus had gone with his apostles down the Jordan on the way to Jerusalem, he set out to find him. Andrew had presented Teherma to Simon for instruction. Simon looked upon the Persian as a “fire worshipper,” although Teherma took great pains to explain that fire was only the visible symbol of the Pure and Holy One. After talking with Jesus, the Persian signified his intention of remaining for several days to hear the teaching and listen to the preaching.
 \vs p141 6:2 When Simon Zelotes and Jesus were alone, Simon asked the Master: “Why is it that I could not persuade him? Why did he so resist me and so readily lend an ear to you?” Jesus answered: \textcolour{ubdarkred}{“Simon, Simon, how many times have I instructed you to refrain from all efforts to take something \bibemph{out} of the hearts of those who seek salvation? How often have I told you to labour only to put something \bibemph{into} these hungry souls? Lead men into the kingdom, and the great and living truths of the kingdom will presently drive out all serious error. When you have presented to mortal man the good news that God is his Father, you can the easier persuade him that he is in reality a son of God. And having done that, you have brought the light of salvation to the one who sits in darkness. Simon, when the Son of Man came first to you, did he come denouncing Moses and the prophets and proclaiming a new and better way of life? No. I came not to take away that which you had from your forefathers but to show you the perfected vision of that which your fathers saw only in part. Go then, Simon, teaching and preaching the kingdom, and when you have a man safely and securely within the kingdom, then is the time, when such a one shall come to you with inquiries, to impart instruction having to do with the progressive advancement of the soul within the divine kingdom.”}
@@ -69,10 +69,10 @@
 \vs p141 7:15 Although Peter, James, and John could not understand very much of what Jesus said on this occasion, his gracious words lingered in their hearts, and after the crucifixion and resurrection they came forth greatly to enrich and gladden their subsequent ministry. No wonder these apostles did not fully comprehend the Master’s words, for he was projecting to them the plan of a new age.
 \usection{Working in Jericho}
 \vs p141 8:1 Throughout the four weeks’ sojourn at Bethany beyond Jordan, several times each week Andrew would assign apostolic couples to go up to Jericho for a day or two. John had many believers in Jericho, and the majority of them welcomed the more advanced teachings of Jesus and his apostles. On these Jericho visits the apostles began more specifically to carry out Jesus’ instructions to minister to the sick; they visited every house in the city and sought to comfort every afflicted person.
-\vs p141 8:2 The apostles did some public work in Jericho, but their efforts were chiefly of a more quiet and personal nature. They now made the discovery that the good news of the kingdom was very comforting to the sick; that their message carried healing for the afflicted. And it was in Jericho that Jesus’ commission to the 12 to preach the glad tidings of the kingdom and minister to the afflicted was first fully carried into effect.
+\vs p141 8:2 The apostles did some public work in Jericho, but their efforts were chiefly of a more quiet and personal nature. They now made the discovery that the good news of the kingdom was very comforting to the sick; that their message carried healing for the afflicted. And it was in Jericho that Jesus’ commission to the twelve to preach the glad tidings of the kingdom and minister to the afflicted was first fully carried into effect.
 \vs p141 8:3 They stopped in Jericho on the way up to Jerusalem and were overtaken by a delegation from Mesopotamia that had come to confer with Jesus. The apostles had planned to spend but a day here, but when these truth seekers from the East arrived, Jesus spent three days with them, and they returned to their various homes along the Euphrates happy in the knowledge of the new truths of the kingdom of heaven.
 \usection{Departing for Jerusalem}
 \vs p141 9:1 On Monday, the last day of March, Jesus and the apostles began their journey up the hills toward Jerusalem. Lazarus of Bethany had been down to the Jordan twice to see Jesus, and every arrangement had been made for the Master and his apostles to make their headquarters with Lazarus and his sisters at Bethany as long as they might desire to stay in Jerusalem.
-\vs p141 9:2 The disciples of John remained at Bethany beyond the Jordan, teaching and baptizing the multitudes, so that Jesus was accompanied only by the 12 when he arrived at Lazarus’s home. Here Jesus and the apostles tarried for five days, resting and refreshing themselves before going on to Jerusalem for the Passover. It was a great event in the lives of Martha and Mary to have the Master and his apostles in the home of their brother, where they could minister to their needs.
-\vs p141 9:3 On Sunday morning, April 6, Jesus and the apostles went down to Jerusalem; and this was the first time the Master and all of the 12 had been there together.
+\vs p141 9:2 The disciples of John remained at Bethany beyond the Jordan, teaching and baptizing the multitudes, so that Jesus was accompanied only by the twelve when he arrived at Lazarus’s home. Here Jesus and the apostles tarried for five days, resting and refreshing themselves before going on to Jerusalem for the Passover. It was a great event in the lives of Martha and Mary to have the Master and his apostles in the home of their brother, where they could minister to their needs.
+\vs p141 9:3 On Sunday morning, April 6, Jesus and the apostles went down to Jerusalem; and this was the first time the Master and all of the twelve had been there together.
 \quizlink
