--- a/tex/p142.tex
+++ b/tex/p142.tex
@@ -25,8 +25,8 @@
 \vs p142 2:4 \pc Then Jesus went on to say: \textcolour{ubdarkred}{“When your children are very young and immature, and when you must chastise them, they may reflect that their father is angry and filled with resentful wrath. Their immaturity cannot penetrate beyond the punishment to discern the father’s farseeing and corrective affection. But when these same children become grown\hyp{}up men and women, would it not be folly for them to cling to these earlier and misconceived notions regarding their father? As men and women they should now discern their father’s love in all these early disciplines. And should not mankind, as the centuries pass, come the better to understand the true nature and loving character of the Father in heaven? What profit have you from successive generations of spiritual illumination if you persist in viewing God as Moses and the prophets saw him? I say to you, Jacob, under the bright light of this hour you should see the Father as none of those who have gone before ever beheld him. And thus seeing him, you should rejoice to enter the kingdom wherein such a merciful Father rules, and you should seek to have his will of love dominate your life henceforth.”}
 \vs p142 2:5 And Jacob answered: “Rabbi, I believe; I desire that you lead me into the Father’s kingdom.”
 \usection{The Concept of God}
-\vs p142 3:1 The 12 apostles, most of whom had listened to this discussion of the character of God, that night asked Jesus many questions about the Father in heaven. The Master’s answers to these questions can best be presented by the following summary in modern phraseology:
-\vs p142 3:2 Jesus mildly upbraided the 12, in substance saying: Do you not know the traditions of Israel relating to the growth of the idea of Yahweh, and are you ignorant of the teaching of the Scriptures concerning the doctrine of God? And then did the Master proceed to instruct the apostles about the evolution of the concept of Deity throughout the course of the development of the Jewish people. He called attention to the following phases of the growth of the God idea:
+\vs p142 3:1 The twelve apostles, most of whom had listened to this discussion of the character of God, that night asked Jesus many questions about the Father in heaven. The Master’s answers to these questions can best be presented by the following summary in modern phraseology:
+\vs p142 3:2 Jesus mildly upbraided the twelve, in substance saying: Do you not know the traditions of Israel relating to the growth of the idea of Yahweh, and are you ignorant of the teaching of the Scriptures concerning the doctrine of God? And then did the Master proceed to instruct the apostles about the evolution of the concept of Deity throughout the course of the development of the Jewish people. He called attention to the following phases of the growth of the God idea:
 \vs p142 3:3 \ublistelem{1.}\bibnobreakspace \bibemph{Yahweh ---} the god of the Sinai clans. This was the primitive concept of Deity which Moses exalted to the higher level of the Lord God of Israel. The Father in heaven never fails to accept the sincere worship of his children on earth, no matter how crude their concept of Deity or by what name they symbolize his divine nature.
 \vs p142 3:4 \ublistelem{2.}\bibnobreakspace \bibemph{The Most High.} This concept of the Father in heaven was proclaimed by Melchizedek to Abraham and was carried far from Salem by those who subsequently believed in this enlarged and expanded idea of Deity. Abraham and his brother\fnst{\bibemph{The fact of Nahor leaving Ur with Abraham (cf. Genesis~11:31) has been preserved only in the Samaritan Pentateuch, the Massoretic scribes having carefully deleted the reference to Abraham's brother Nahor from the Hebrew text, leaving him with the sunworshippers in Ur.}} left Ur because of the establishment of sun worship, and they became believers in Melchizedek’s teaching of El Elyon --- the Most High God. Theirs was a composite concept of God, consisting in a blending of their older Mesopotamian ideas and the Most High doctrine.
 \vs p142 3:5 \ublistelem{3.}\bibnobreakspace \bibemph{El Shaddai.} During these early days many of the Hebrews worshipped El Shaddai, the Egyptian concept of the God of heaven, which they learned about during their captivity in the land of the Nile. Long after the times of Melchizedek all three of these concepts of God became joined together to form the doctrine of the creator Deity, the Lord God of Israel.
@@ -58,7 +58,7 @@
 \vs p142 5:2 \pc \textcolour{ubdarkred}{“As to my message and the teaching of my disciples, you should judge them by their fruits. If we proclaim to you the truths of the spirit, the spirit will witness in your hearts that our message is genuine. Concerning the kingdom and your assurance of acceptance by the heavenly Father, let me ask what father among you who is a worthy and kindhearted father would keep his son in anxiety or suspense regarding his status in the family or his place of security in the affections of his father’s heart? Do you earth fathers take pleasure in torturing your children with uncertainty about their place of abiding love in your human hearts? Neither does your Father in heaven leave his faith children of the spirit in doubtful uncertainty as to their position in the kingdom. If you receive God as your Father, then indeed and in truth are you the sons of God. And if you are sons, then are you secure in the position and standing of all that concerns eternal and divine sonship. If you believe my words, you thereby believe in Him who sent me, and by thus believing in the Father, you have made your status in heavenly citizenship sure. If you do the will of the Father in heaven, you shall never fail in the attainment of the eternal life of progress in the divine kingdom.}
 \vs p142 5:3 \textcolour{ubdarkred}{“The Supreme Spirit shall bear witness with your spirits that you are truly the children of God. And if you are the sons of God, then have you been born of the spirit of God; and whosoever has been born of the spirit has in himself the power to overcome all doubt, and this is the victory that overcomes all uncertainty, even your faith.}
 \vs p142 5:4 \textcolour{ubdarkred}{“Said the Prophet Isaiah, speaking of these times: ‘When the spirit is poured upon us from on high, then shall the work of righteousness become peace, quietness, and assurance forever.’ And for all who truly believe this gospel, I will become surety for their reception into the eternal mercies and the everlasting life of my Father’s kingdom. You, then, who hear this message and believe this gospel of the kingdom are the sons of God, and you have life everlasting; and the evidence to all the world that you have been born of the spirit is that you sincerely love one another.”}
-\vs p142 5:5 \pc The throng of listeners remained many hours with Jesus, asking him questions and listening attentively to his comforting answers. Even the apostles were emboldened by Jesus’ teaching to preach the gospel of the kingdom with more power and assurance. This experience at Jerusalem was a great inspiration to the 12. It was their first contact with such enormous crowds, and they learned many valuable lessons which proved of great assistance in their later work.
+\vs p142 5:5 \pc The throng of listeners remained many hours with Jesus, asking him questions and listening attentively to his comforting answers. Even the apostles were emboldened by Jesus’ teaching to preach the gospel of the kingdom with more power and assurance. This experience at Jerusalem was a great inspiration to the twelve. It was their first contact with such enormous crowds, and they learned many valuable lessons which proved of great assistance in their later work.
 \usection{The Visit with Nicodemus}
 \vs p142 6:1 One evening at the home of Flavius there came to see Jesus one Nicodemus, a wealthy and elderly member of the Jewish Sanhedrin. He had heard much about the teachings of this Galilean, and so he went one afternoon to hear him as he taught in the temple courts. He would have gone often to hear Jesus teach, but he feared to be seen by the people in attendance upon his teaching, for already were the rulers of the Jews so at variance with Jesus that no member of the Sanhedrin would want to be identified in any open manner with him. Accordingly, Nicodemus had arranged with Andrew to see Jesus privately and after nightfall on this particular evening. Peter, James, and John were in Flavius’s garden when the interview began, but later they all went into the house where the discourse continued.
 \vs p142 6:2 In receiving Nicodemus, Jesus showed no particular deference; in talking with him, there was no compromise or undue persuasiveness. The Master made no attempt to repulse his secretive caller, nor did he employ sarcasm. In all his dealings with the distinguished visitor, Jesus was calm, earnest, and dignified. Nicodemus was not an official delegate of the Sanhedrin; he came to see Jesus wholly because of his personal and sincere interest in the Master’s teachings.
@@ -70,8 +70,8 @@
 \vs p142 6:8 Nicodemus was thoroughly sincere. He was deeply impressed but went away bewildered. Nicodemus was accomplished in self\hyp{}development, in self\hyp{}restraint, and even in high moral qualities. He was refined, egoistic, and altruistic; but he did not know how to \bibemph{submit} his will to the will of the divine Father as a little child is willing to submit to the guidance and leading of a wise and loving earthly father, thereby becoming in reality a son of God, a progressive heir of the eternal kingdom.
 \vs p142 6:9 But Nicodemus did summon faith enough to lay hold of the kingdom. He faintly protested when his colleagues of the Sanhedrin sought to condemn Jesus without a hearing; and with Joseph of Arimathea, he later boldly acknowledged his faith and claimed the body of Jesus, even when most of the disciples had fled in fear from the scenes of their Master’s final suffering and death.
 \usection{The Lesson on the Family}
-\vs p142 7:1 After the busy period of teaching and personal work of Passover week in Jerusalem, Jesus spent the next Wednesday at Bethany with his apostles, resting. That afternoon, Thomas asked a question which elicited a long and instructive answer. Said Thomas: “Master, on the day we were set apart as ambassadors of the kingdom, you told us many things, instructed us regarding our personal mode of life, but what shall we teach the multitude? How are these people to live after the kingdom more fully comes? Shall your disciples own slaves? Shall your believers court poverty and shun property? Shall mercy alone prevail so that we shall have no more law and justice?” Jesus and the 12 spent all afternoon and all that evening, after supper, discussing Thomas’s questions. For the purposes of this record we present the following summary of the Master’s instruction:
-\vs p142 7:2 Jesus sought first to make plain to his apostles that he himself was on earth living a unique life in the flesh, and that they, the 12, had been called to participate in this bestowal experience of the Son of Man; and as such coworkers, they, too, must share in many of the special restrictions and obligations of the entire bestowal experience. There was a veiled intimation that the Son of Man was the only person who had ever lived on earth who could simultaneously see into the very heart of God and into the very depths of man’s soul.
+\vs p142 7:1 After the busy period of teaching and personal work of Passover week in Jerusalem, Jesus spent the next Wednesday at Bethany with his apostles, resting. That afternoon, Thomas asked a question which elicited a long and instructive answer. Said Thomas: “Master, on the day we were set apart as ambassadors of the kingdom, you told us many things, instructed us regarding our personal mode of life, but what shall we teach the multitude? How are these people to live after the kingdom more fully comes? Shall your disciples own slaves? Shall your believers court poverty and shun property? Shall mercy alone prevail so that we shall have no more law and justice?” Jesus and the twelve spent all afternoon and all that evening, after supper, discussing Thomas’s questions. For the purposes of this record we present the following summary of the Master’s instruction:
+\vs p142 7:2 Jesus sought first to make plain to his apostles that he himself was on earth living a unique life in the flesh, and that they, the twelve, had been called to participate in this bestowal experience of the Son of Man; and as such coworkers, they, too, must share in many of the special restrictions and obligations of the entire bestowal experience. There was a veiled intimation that the Son of Man was the only person who had ever lived on earth who could simultaneously see into the very heart of God and into the very depths of man’s soul.
 \vs p142 7:3 Very plainly Jesus explained that the kingdom of heaven was an evolutionary experience, beginning here on earth and progressing up through successive life stations to Paradise. In the course of the evening he definitely stated that at some future stage of kingdom development he would revisit this world in spiritual power and divine glory.
 \vs p142 7:4 He next explained that the “kingdom idea” was not the best way to illustrate man’s relation to God; that he employed such figures of speech because the Jewish people were expecting the kingdom, and because John had preached in terms of the coming kingdom. Jesus said: \textcolour{ubdarkred}{“The people of another age will better understand the gospel of the kingdom when it is presented in terms expressive of the family relationship --- when man understands religion as the teaching of the fatherhood of God and the brotherhood of man, sonship with God.”} Then the Master discoursed at some length on the earthly family as an illustration of the heavenly family, restating the two fundamental laws of living: the first commandment of love for the father, the head of the family, and the second commandment of mutual love among the children, to love your brother as yourself. And then he explained that such a quality of brotherly affection would invariably manifest itself in unselfish and loving social service.
 \vs p142 7:5 Following that, came the memorable discussion of the fundamental characteristics of family life and their application to the relationship existing between God and man. Jesus stated that a true family is founded on the following seven facts:
@@ -89,7 +89,7 @@
 \vs p142 7:17 Jesus replied: \textcolour{ubdarkred}{“Thomas, Thomas, how long before you will acquire the ability to listen with the ear of the spirit? How long will it be before you discern that this kingdom is a spiritual kingdom, and that my Father is also a spiritual being? Do you not understand that I am teaching you as spiritual children in the spirit family of heaven, of which the fatherhead is an infinite and eternal spirit? Will you not allow me to use the earth family as an illustration of divine relationships without so literally applying my teaching to material affairs? In your minds cannot you separate the spiritual realities of the kingdom from the material, social, economic, and political problems of the age? When I speak the language of the spirit, why do you insist on translating my meaning into the language of the flesh just because I presume to employ commonplace and literal relationships for purposes of illustration? My children, I implore that you cease to apply the teaching of the kingdom of the spirit to the sordid affairs of slavery, poverty, houses, and lands, and to the material problems of human equity and justice. These temporal matters are the concern of the men of this world, and while in a way they affect all men, you have been called to represent me in the world, even as I represent my Father. You are spiritual ambassadors of a spiritual kingdom, special representatives of the spirit Father. By this time it should be possible for me to instruct you as full\hyp{}grown men of the spirit kingdom. Must I ever address you only as children? Will you never grow up in spirit perception? Nevertheless, I love you and will bear with you, even to the very end of our association in the flesh. And even then shall my spirit go before you into all the world.”}
 \usection{In Southern Judea}
 \vs p142 8:1 By the end of April the opposition to Jesus among the Pharisees and Sadducees had become so pronounced that the Master and his apostles decided to leave Jerusalem for a while, going south to work in Bethlehem and Hebron. The entire month of May was spent in doing personal work in these cities and among the people of the surrounding villages. No public preaching was done on this trip, only house\hyp{}to\hyp{}house visitation. A part of this time, while the apostles taught the gospel and ministered to the sick, Jesus and Abner spent at Engedi, visiting the Nazarite colony. John the Baptist had gone forth from this place, and Abner had been head of this group. Many of the Nazarite brotherhood became believers in Jesus, but the majority of these ascetic and eccentric men refused to accept him as a teacher sent from heaven because he did not teach fasting and other forms of self\hyp{}denial.
-\vs p142 8:2 The people living in this region did not know that Jesus had been born in Bethlehem. They always supposed the Master had been born at Nazareth, as did the vast majority of his disciples, but the 12 knew the facts.
+\vs p142 8:2 The people living in this region did not know that Jesus had been born in Bethlehem. They always supposed the Master had been born at Nazareth, as did the vast majority of his disciples, but the twelve knew the facts.
 \vs p142 8:3 This sojourn in the south of Judea was a restful and fruitful season of labour; many souls were added to the kingdom. By the first days of June the agitation against Jesus had so quieted down in Jerusalem that the Master and the apostles returned to instruct and comfort believers.
 \vs p142 8:4 Although Jesus and the apostles spent the entire month of June in or near Jerusalem, they did no public teaching during this period. They lived for the most part in tents, which they pitched in a shaded park, or garden, known in that day as Gethsemane. This park was situated on the western slope of the Mount of Olives not far from the brook Kidron. The Sabbath weekends they usually spent with Lazarus and his sisters at Bethany. Jesus entered within the walls of Jerusalem only a few times, but a large number of interested inquirers came out to Gethsemane to visit with him. One Friday evening Nicodemus and one Joseph of Arimathea ventured out to see Jesus but turned back through fear even after they were standing before the entrance to the Master’s tent. And, of course, they did not perceive that Jesus knew all about their doings.
 \vs p142 8:5 When the rulers of the Jews learned that Jesus had returned to Jerusalem, they prepared to arrest him; but when they observed that he did no public preaching, they concluded that he had become frightened by their previous agitation and decided to allow him to carry on his teaching in this private manner without further molestation. And thus affairs moved along quietly until the last days of June, when one Simon, a member of the Sanhedrin, publicly espoused the teachings of Jesus, after so declaring himself before the rulers of the Jews. Immediately a new agitation for Jesus’ apprehension sprang up and grew so strong that the Master decided to retire into the cities of Samaria and the Decapolis.
