--- a/tex/p143.tex
+++ b/tex/p143.tex
@@ -7,18 +7,18 @@
 \uminitoc{The Samaritan Revival}
 \uminitoc{Teachings about Prayer and Worship}
 \author{Midwayer Commission}
-\vs p143 0:1 At the end of June, A.D.\,27, because of the increasing opposition of the Jewish religious rulers, Jesus and the 12 departed from Jerusalem, after sending their tents and meagre personal effects to be stored at the home of Lazarus at Bethany. Going north into Samaria, they tarried over the Sabbath at Bethel. Here they preached for several days to the people who came from Gophna and Ephraim. A group of citizens from Arimathea and Thamna came over to invite Jesus to visit their villages. The Master and his apostles spent more than two weeks teaching the Jews and Samaritans of this region, many of whom came from as far as Antipatris to hear the good news of the kingdom.
+\vs p143 0:1 At the end of June, A.D.\,27, because of the increasing opposition of the Jewish religious rulers, Jesus and the twelve departed from Jerusalem, after sending their tents and meagre personal effects to be stored at the home of Lazarus at Bethany. Going north into Samaria, they tarried over the Sabbath at Bethel. Here they preached for several days to the people who came from Gophna and Ephraim. A group of citizens from Arimathea and Thamna came over to invite Jesus to visit their villages. The Master and his apostles spent more than two weeks teaching the Jews and Samaritans of this region, many of whom came from as far as Antipatris to hear the good news of the kingdom.
 \vs p143 0:2 The people of southern Samaria heard Jesus gladly, and the apostles, with the exception of Judas Iscariot, succeeded in overcoming much of their prejudice against the Samaritans. It was very difficult for Judas to love these Samaritans. The last week of July Jesus and his associates made ready to depart for the new Greek cities of Phasaelis and Archelais near the Jordan.
 \usection{Preaching at Archelais}
-\vs p143 1:1 The first half of the month of August the apostolic party made its headquarters at the Greek cities of Archelais and Phasaelis, where they had their first experience preaching to well\hyp{}nigh exclusive gatherings of gentiles --- Greeks, Romans, and Syrians --- for few Jews dwelt in these two Greek towns. In contacting with these Roman citizens, the apostles encountered new difficulties in the proclamation of the message of the coming kingdom, and they met with new objections to the teachings of Jesus. At one of the many evening conferences with his apostles, Jesus listened attentively to these objections to the gospel of the kingdom as the 12 repeated their experiences with the subjects of their personal labours.
+\vs p143 1:1 The first half of the month of August the apostolic party made its headquarters at the Greek cities of Archelais and Phasaelis, where they had their first experience preaching to well\hyp{}nigh exclusive gatherings of gentiles --- Greeks, Romans, and Syrians --- for few Jews dwelt in these two Greek towns. In contacting with these Roman citizens, the apostles encountered new difficulties in the proclamation of the message of the coming kingdom, and they met with new objections to the teachings of Jesus. At one of the many evening conferences with his apostles, Jesus listened attentively to these objections to the gospel of the kingdom as the twelve repeated their experiences with the subjects of their personal labours.
 \vs p143 1:2 A question asked by Philip was typical of their difficulties. Said Philip: “Master, these Greeks and Romans make light of our message, saying that such teachings are fit for only weaklings and slaves. They assert that the religion of the heathen is superior to our teaching because it inspires to the acquirement of a strong, robust, and aggressive character. They affirm that we would convert all men into enfeebled specimens of passive nonresisters who would soon perish from the face of the earth. They like you, Master, and freely admit that your teaching is heavenly and ideal, but they will not take us seriously. They assert that your religion is not for this world; that men cannot live as you teach. And now, Master, what shall we say to these gentiles?”
-\vs p143 1:3 After Jesus had heard similar objections to the gospel of the kingdom presented by Thomas, Nathaniel, Simon Zelotes, and Matthew, he said to the 12:
+\vs p143 1:3 After Jesus had heard similar objections to the gospel of the kingdom presented by Thomas, Nathaniel, Simon Zelotes, and Matthew, he said to the twelve:
 \vs p143 1:4 \textcolour{ubdarkred}{“I have come into this world to do the will of my Father and to reveal his loving character to all mankind. That, my brethren, is my mission. And this one thing I will do, regardless of the misunderstanding of my teachings by Jews or gentiles of this day or of another generation. But you should not overlook the fact that even divine love has its severe disciplines. A father’s love for his son oftentimes impels the father to restrain the unwise acts of his thoughtless offspring. The child does not always comprehend the wise and loving motives of the father’s restraining discipline. But I declare to you that my Father in Paradise does rule a universe of universes by the compelling power of his love. Love is the greatest of all spirit realities. Truth is a liberating revelation, but love is the supreme relationship. And no matter what blunders your fellow men make in their world management of today, in an age to come the gospel which I declare to you will rule this very world. The ultimate goal of human progress is the reverent recognition of the fatherhood of God and the loving materialization of the brotherhood of man.}
 \vs p143 1:5 \textcolour{ubdarkred}{“But who told you that my gospel was intended only for slaves and weaklings? Do you, my chosen apostles, resemble weaklings? Did John look like a weakling? Do you observe that I am enslaved by fear? True, the poor and oppressed of this generation have the gospel preached to them. The religions of this world have neglected the poor, but my Father is no respecter of persons. Besides, the poor of this day are the first to heed the call to repentance and acceptance of sonship. The gospel of the kingdom is to be preached to all men --- Jew and gentile, Greek and Roman, rich and poor, free and bond --- and equally to young and old, male and female.}
 \vs p143 1:6 \textcolour{ubdarkred}{“Because my Father is a God of love and delights in the practice of mercy, do not imbibe the idea that the service of the kingdom is to be one of monotonous ease. The Paradise ascent is the supreme adventure of all time, the rugged achievement of eternity. The service of the kingdom on earth will call for all the courageous manhood that you and your coworkers can muster. Many of you will be put to death for your loyalty to the gospel of this kingdom. It is easy to die in the line of physical battle when your courage is strengthened by the presence of your fighting comrades, but it requires a higher and more profound form of human courage and devotion calmly and all alone to lay down your life for the love of a truth enshrined in your mortal heart.}
 \vs p143 1:7 \textcolour{ubdarkred}{“Today, the unbelievers may taunt you with preaching a gospel of nonresistance and with living lives of nonviolence, but you are the first volunteers of a long line of sincere believers in the gospel of this kingdom who will astonish all mankind by their heroic devotion to these teachings. No armies of the world have ever displayed more courage and bravery than will be portrayed by you and your loyal successors who shall go forth to all the world proclaiming the good news --- the fatherhood of God and the brotherhood of men. The courage of the flesh is the lowest form of bravery. Mind bravery is a higher type of human courage, but the highest and supreme is uncompromising loyalty to the enlightened convictions of profound spiritual realities. And such courage constitutes the heroism of the God\hyp{}knowing man. And you are all God\hyp{}knowing men; you are in very truth the personal associates of the Son of Man.”}
-\vs p143 1:8 \pc This was not all that Jesus said on that occasion, but it is the introduction of his address, and he went on at great length in amplification and in illustration of this pronouncement. This was one of the most impassioned addresses which Jesus ever delivered to the 12. Seldom did the Master speak to his apostles with evident strong feeling, but this was one of those few occasions when he spoke with manifest earnestness, accompanied by marked emotion.
-\vs p143 1:9 \pc The result upon the public preaching and personal ministry of the apostles was immediate; from that very day their message took on a new note of courageous dominance. The 12 continued to acquire the spirit of positive aggression in the new gospel of the kingdom. From this day forward they did not occupy themselves so much with the preaching of the negative virtues and the passive injunctions of their Master’s many\hyp{}sided teaching.
+\vs p143 1:8 \pc This was not all that Jesus said on that occasion, but it is the introduction of his address, and he went on at great length in amplification and in illustration of this pronouncement. This was one of the most impassioned addresses which Jesus ever delivered to the twelve. Seldom did the Master speak to his apostles with evident strong feeling, but this was one of those few occasions when he spoke with manifest earnestness, accompanied by marked emotion.
+\vs p143 1:9 \pc The result upon the public preaching and personal ministry of the apostles was immediate; from that very day their message took on a new note of courageous dominance. The twelve continued to acquire the spirit of positive aggression in the new gospel of the kingdom. From this day forward they did not occupy themselves so much with the preaching of the negative virtues and the passive injunctions of their Master’s many\hyp{}sided teaching.
 \usection{Lesson on Self\hyp{}Mastery}
 \vs p143 2:1 The Master was a perfected specimen of human self\hyp{}control. When he was reviled, he reviled not; when he suffered, he uttered no threats against his tormentors; when he was denounced by his enemies, he simply committed himself to the righteous judgment of the Father in heaven.
 \vs p143 2:2 \pc At one of the evening conferences, Andrew asked Jesus: “Master, are we to practise self\hyp{}denial as John taught us, or are we to strive for the self\hyp{}control of your teaching? Wherein does your teaching differ from that of John?” Jesus answered: \textcolour{ubdarkred}{“John indeed taught you the way of righteousness in accordance with the light and laws of his fathers, and that was the religion of self\hyp{}examination and self\hyp{}denial. But I come with a new message of self\hyp{}forgetfulness and self\hyp{}control. I show to you the way of life as revealed to me by my Father in heaven.}
@@ -32,17 +32,17 @@
 \vs p143 3:1 About this time a state of great nervous and emotional tension developed among the apostles and their immediate disciple associates. They had hardly become accustomed to living and working together. They were experiencing increasing difficulties in maintaining harmonious relations with John’s disciples. The contact with the gentiles and the Samaritans was a great trial to these Jews. And besides all this, the recent utterances of Jesus had augmented their disturbed state of mind. Andrew was almost beside himself; he did not know what next to do, and so he went to the Master with his problems and perplexities. When Jesus had listened to the apostolic chief relate his troubles, he said: \textcolour{ubdarkred}{“Andrew, you cannot talk men out of their perplexities when they reach such a stage of involvement, and when so many persons with strong feelings are concerned. I cannot do what you ask of me --- I will not participate in these personal social difficulties --- but I will join you in the enjoyment of a three\hyp{}day period of rest and relaxation. Go to your brethren and announce that all of you are to go with me up on Mount Sartaba, where I desire to rest for a day or two.}
 \vs p143 3:2 \textcolour{ubdarkred}{“Now you should go to each of your 11 brethren and talk with him privately, saying: ‘The Master desires that we go apart with him for a season to rest and relax. Since we all have recently experienced much vexation of spirit and stress of mind, I suggest that no mention be made of our trials and troubles while on this holiday. Can I depend upon you to co\hyp{}operate with me in this matter?’ In this way privately and personally approach each of your brethren.”} And Andrew did as the Master had instructed him.
 \vs p143 3:3 \pc This was a marvellous occasion in the experience of each of them; they never forgot the day going up the mountain. Throughout the entire trip hardly a word was said about their troubles. Upon reaching the top of the mountain, Jesus seated them about him while he said: \textcolour{ubdarkred}{“My brethren, you must all learn the value of rest and the efficacy of relaxation. You must realize that the best method of solving some entangled problems is to forsake them for a time. Then when you go back fresh from your rest or worship, you are able to attack your troubles with a clearer head and a steadier hand, not to mention a more resolute heart. Again, many times your problem is found to have shrunk in size and proportions while you have been resting your mind and body.”}
-\vs p143 3:4 The next day Jesus assigned to each of the 12 a topic for discussion. The whole day was devoted to reminiscences and to talking over matters not related to their religious work. They were momentarily shocked when Jesus even neglected to give thanks --- verbally --- when he broke bread for their noontide lunch. This was the first time they had ever observed him to neglect such formalities.
+\vs p143 3:4 The next day Jesus assigned to each of the twelve a topic for discussion. The whole day was devoted to reminiscences and to talking over matters not related to their religious work. They were momentarily shocked when Jesus even neglected to give thanks --- verbally --- when he broke bread for their noontide lunch. This was the first time they had ever observed him to neglect such formalities.
 \vs p143 3:5 When they went up the mountain, Andrew’s head was full of problems. John was inordinately perplexed in his heart. James was grievously troubled in his soul. Matthew was hard pressed for funds inasmuch as they had been sojourning among the gentiles. Peter was overwrought and had recently been more temperamental than usual. Judas was suffering from a periodic attack of sensitiveness and selfishness. Simon was unusually upset in his efforts to reconcile his patriotism with the love of the brotherhood of man. Philip was more and more nonplussed by the way things were going. Nathaniel had been less humorous since they had come in contact with the gentile populations, and Thomas was in the midst of a severe season of depression. Only the twins were normal and unperturbed. All of them were exceedingly perplexed about how to get along peaceably with John’s disciples.
 \vs p143 3:6 The third day when they started down the mountain and back to their camp, a great change had come over them. They had made the important discovery that many human perplexities are in reality nonexistent, that many pressing troubles are the creations of exaggerated fear and the offspring of augmented apprehension. They had learned that all such perplexities are best handled by being forsaken; by going off they had left such problems to solve themselves.
-\vs p143 3:7 Their return from this holiday marked the beginning of a period of greatly improved relations with the followers of John. Many of the 12 really gave way to mirth when they noted the changed state of everybody’s mind and observed the freedom from nervous irritability which had come to them as a result of their three days’ vacation from the routine duties of life. There is always danger that monotony of human contact will greatly multiply perplexities and magnify difficulties.
-\vs p143 3:8 \pc Not many of the gentiles in the two Greek cities of Archelais and Phasaelis believed in the gospel, but the 12 apostles gained a valuable experience in this their first extensive work with exclusively gentile populations. On a Monday morning, about the middle of the month, Jesus said to Andrew: \textcolour{ubdarkred}{“We go into Samaria.”} And they set out at once for the city of Sychar, near Jacob’s well.
+\vs p143 3:7 Their return from this holiday marked the beginning of a period of greatly improved relations with the followers of John. Many of the twelve really gave way to mirth when they noted the changed state of everybody’s mind and observed the freedom from nervous irritability which had come to them as a result of their three days’ vacation from the routine duties of life. There is always danger that monotony of human contact will greatly multiply perplexities and magnify difficulties.
+\vs p143 3:8 \pc Not many of the gentiles in the two Greek cities of Archelais and Phasaelis believed in the gospel, but the twelve apostles gained a valuable experience in this their first extensive work with exclusively gentile populations. On a Monday morning, about the middle of the month, Jesus said to Andrew: \textcolour{ubdarkred}{“We go into Samaria.”} And they set out at once for the city of Sychar, near Jacob’s well.
 \usection{The Jews and the Samaritans}
 \vs p143 4:1 For more than 600 years the Jews of Judea, and later on those of Galilee also, had been at enmity with the Samaritans. This ill feeling between the Jews and the Samaritans came about in this way: About 700\,B.C., Sargon, king of Assyria, in subduing a revolt in central Palestine, carried away and into captivity over 25,000 Jews of the northern kingdom of Israel and installed in their place an almost equal number of the descendants of the Cuthites, Sepharvites, and the Hamathites. Later on, Ashurbanipal sent still other colonies to dwell in Samaria.
 \vs p143 4:2 The religious enmity between the Jews and the Samaritans dated from the return of the former from the Babylonian captivity, when the Samaritans worked to prevent the rebuilding of Jerusalem. Later they offended the Jews by extending friendly assistance to the armies of Alexander. In return for their friendship Alexander gave the Samaritans permission to build a temple on Mount Gerizim, where they worshipped Yahweh and their tribal gods and offered sacrifices much after the order of the temple services at Jerusalem. At least they continued this worship up to the time of the Maccabees, when John Hyrcanus destroyed their temple on Mount Gerizim. The Apostle Philip, in his labours for the Samaritans after the death of Jesus, held many meetings on the site of this old Samaritan temple.
-\vs p143 4:3 The antagonisms between the Jews and the Samaritans were time\hyp{}honoured and historic; increasingly since the days of Alexander they had had no dealings with each other. The 12 apostles were not averse to preaching in the Greek and other gentile cities of the Decapolis and Syria, but it was a severe test of their loyalty to the Master when he said, \textcolour{ubdarkred}{“Let us go into Samaria.”} But in the year and more they had been with Jesus, they had developed a form of personal loyalty which transcended even their faith in his teachings and their prejudices against the Samaritans.
+\vs p143 4:3 The antagonisms between the Jews and the Samaritans were time\hyp{}honoured and historic; increasingly since the days of Alexander they had had no dealings with each other. The twelve apostles were not averse to preaching in the Greek and other gentile cities of the Decapolis and Syria, but it was a severe test of their loyalty to the Master when he said, \textcolour{ubdarkred}{“Let us go into Samaria.”} But in the year and more they had been with Jesus, they had developed a form of personal loyalty which transcended even their faith in his teachings and their prejudices against the Samaritans.
 \usection{The Woman of Sychar}
-\vs p143 5:1 When the Master and the 12 arrived at Jacob’s well, Jesus, being weary from the journey, tarried by the well while Philip took the apostles with him to assist in bringing food and tents from Sychar, for they were disposed to stay in this vicinity for a while. Peter and the Zebedee sons would have remained with Jesus, but he requested that they go with their brethren, saying: \textcolour{ubdarkred}{“Have no fear for me; these Samaritans will be friendly; only our brethren, the Jews, seek to harm us.”} And it was almost 18:00 on this summer’s evening when Jesus sat down by the well to await the return of the apostles.
+\vs p143 5:1 When the Master and the twelve arrived at Jacob’s well, Jesus, being weary from the journey, tarried by the well while Philip took the apostles with him to assist in bringing food and tents from Sychar, for they were disposed to stay in this vicinity for a while. Peter and the Zebedee sons would have remained with Jesus, but he requested that they go with their brethren, saying: \textcolour{ubdarkred}{“Have no fear for me; these Samaritans will be friendly; only our brethren, the Jews, seek to harm us.”} And it was almost 18:00 on this summer’s evening when Jesus sat down by the well to await the return of the apostles.
 \vs p143 5:2 The water of Jacob’s well was less mineral than that from the wells of Sychar and was therefore much valued for drinking purposes. Jesus was thirsty, but there was no way of getting water from the well. When, therefore, a woman of Sychar came up with her water pitcher and prepared to draw from the well, Jesus said to her, \textcolour{ubdarkred}{“Give me a drink.”} This woman of Samaria knew Jesus was a Jew by his appearance and dress, and she surmised that he was a Galilean Jew from his accent. Her name was Nalda and she was a comely creature. She was much surprised to have a Jewish man thus speak to her at the well and ask for water, for it was not deemed proper in those days for a self\hyp{}respecting man to speak to a woman in public, much less for a Jew to converse with a Samaritan. Therefore Nalda asked Jesus, “How is it that you, being a Jew, ask for a drink of me, a Samaritan woman?” Jesus answered: \textcolour{ubdarkred}{“I have indeed asked you for a drink, but if you could only understand, you would ask me for a draught of the living water.”} Then said Nalda: “But, Sir, you have nothing to draw with, and the well is deep; whence, then, have you this living water? Are you greater than our father Jacob who gave us this well, and who drank thereof himself and his sons and his cattle also?”
 \vs p143 5:3 Jesus replied: \textcolour{ubdarkred}{“Everyone who drinks of this water will thirst again, but whosoever drinks of the water of the living spirit shall never thirst. And this living water shall become in him a well of refreshment springing up even to eternal life.”} Nalda then said: “Give me this water that I thirst not, neither come all the way hither to draw. Besides, anything which a Samaritan woman could receive from such a commendable Jew would be a pleasure.”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Samaritan.jpg}\caption{The woman of Samaria by Harold~Copping}\end{figure}}
 \vs p143 5:4 Nalda did not know how to take Jesus’ willingness to talk with her. She beheld in the Master’s face the countenance of an upright and holy man, but she mistook friendliness for commonplace familiarity, and she misinterpreted his figure of speech as a form of making advances to her. And being a woman of lax morals, she was minded openly to become flirtatious, when Jesus, looking straight into her eyes, with a commanding voice said, \textcolour{ubdarkred}{“Woman, go get your husband and bring him hither.”} This command brought Nalda to her senses. She saw that she had misjudged the Master’s kindness; she perceived that she had misconstrued his manner of speech. She was frightened; she began to realize that she stood in the presence of an unusual person, and groping about in her mind for a suitable reply, in great confusion, she said, “But, Sir, I cannot call my husband, for I have no husband.” Then said Jesus: \textcolour{ubdarkred}{“You have spoken the truth, for, while you may have once had a husband, he with whom you are now living is not your husband. Better it would be if you would cease to trifle with my words and seek for the living water which I have this day offered you.”}
@@ -50,18 +50,18 @@
 \vs p143 5:6 Jesus perceived the attempt of the woman’s soul to avoid direct and searching contact with its Maker, but he also saw that there was present in her soul a desire to know the better way of life. After all, there was in Nalda’s heart a true thirst for the living water; therefore he dealt patiently with her, saying: \textcolour{ubdarkred}{“Woman, let me say to you that the day is soon coming when neither on this mountain nor in Jerusalem will you worship the Father. But now you worship that which you know not, a mixture of the religion of many pagan gods and gentile philosophies. The Jews at least know whom they worship; they have removed all confusion by concentrating their worship upon one God, Yahweh. But you should believe me when I say that the hour will soon come --- even now is --- when all sincere worshippers will worship the Father in spirit and in truth, for it is just such worshippers the Father seeks. God is spirit, and they who worship him must worship him in spirit and in truth. Your salvation comes not from knowing how others should worship or where but by receiving into your own heart this living water which I am offering you even now.”}
 \vs p143 5:7 But Nalda would make one more effort to avoid the discussion of the embarrassing question of her personal life on earth and the status of her soul before God. Once more she resorted to questions of general religion, saying: “Yes, I know, Sir, that John has preached about the coming of the Converter, he who will be called the Deliverer, and that, when he shall come, he will declare to us all things” --- and Jesus, interrupting Nalda, said with startling assurance, \textcolour{ubdarkred}{“I who speak to you am he.”}
 \vs p143 5:8 This was the first direct, positive, and undisguised pronouncement of his divine nature and sonship which Jesus had made on earth; and it was made to a woman, a Samaritan woman, and a woman of questionable character in the eyes of men up to this moment, but a woman whom the divine eye beheld as having been sinned against more than as sinning of her own desire and as \bibemph{now} being a human soul who desired salvation, desired it sincerely and wholeheartedly, and that was enough.
-\vs p143 5:9 As Nalda was about to voice her real and personal longing for better things and a more noble way of living, just as she was ready to speak the real desire of her heart, the 12 apostles returned from Sychar, and coming upon this scene of Jesus’ talking so intimately with this woman --- this Samaritan woman, and alone --- they were more than astonished. They quickly deposited their supplies and drew aside, no man daring to reprove him, while Jesus said to Nalda: \textcolour{ubdarkred}{“Woman, go your way; God has forgiven you. Henceforth you will live a new life. You have received the living water, and a new joy will spring up within your soul, and you shall become a daughter of the Most High.”} And the woman, perceiving the disapproval of the apostles, left her waterpot and fled to the city.
+\vs p143 5:9 As Nalda was about to voice her real and personal longing for better things and a more noble way of living, just as she was ready to speak the real desire of her heart, the twelve apostles returned from Sychar, and coming upon this scene of Jesus’ talking so intimately with this woman --- this Samaritan woman, and alone --- they were more than astonished. They quickly deposited their supplies and drew aside, no man daring to reprove him, while Jesus said to Nalda: \textcolour{ubdarkred}{“Woman, go your way; God has forgiven you. Henceforth you will live a new life. You have received the living water, and a new joy will spring up within your soul, and you shall become a daughter of the Most High.”} And the woman, perceiving the disapproval of the apostles, left her waterpot and fled to the city.
 \vs p143 5:10 As she entered the city, she proclaimed to everyone she met: “Go out to Jacob’s well and go quickly, for there you will see a man who told me all I ever did. Can this be the Converter?” And ere the sun went down, a great crowd had assembled at Jacob’s well to hear Jesus. And the Master talked to them more about the water of life, the gift of the indwelling spirit.
 \vs p143 5:11 The apostles never ceased to be shocked by Jesus’ willingness to talk with women, women of questionable character, even immoral women. It was very difficult for Jesus to teach his apostles that women, even so\hyp{}called immoral women, have souls which can choose God as their Father, thereby becoming daughters of God and candidates for life everlasting. Even 19 centuries later many show the same unwillingness to grasp the Master’s teachings. Even the Christian religion has been persistently built up around the fact of the death of Christ instead of around the truth of his life. The world should be more concerned with his happy and God\hyp{}revealing life than with his tragic and sorrowful death.
-\vs p143 5:12 Nalda told this entire story to the Apostle John the next day, but he never revealed it fully to the other apostles, and Jesus did not speak of it in detail to the 12\fnst{\bibemph{This explains why the story in John 4:6--42 has no parallels in the Synoptics.}}.
+\vs p143 5:12 Nalda told this entire story to the Apostle John the next day, but he never revealed it fully to the other apostles, and Jesus did not speak of it in detail to the twelve\fnst{\bibemph{This explains why the story in John 4:6--42 has no parallels in the Synoptics.}}.
 \vs p143 5:13 Nalda told John that Jesus had told her “all I ever did.” John many times wanted to ask Jesus about this visit with Nalda, but he never did. Jesus told her only one thing about herself, but his look into her eyes and the manner of his dealing with her had so brought all of her checkered life in panoramic review before her mind in a moment of time that she associated all of this self\hyp{}revelation of her past life with the look and the word of the Master. Jesus never told her she had had five husbands. She had lived with four different men since her husband cast her aside, and this, with all her past, came up so vividly in her mind at the moment when she realized Jesus was a man of God that she subsequently repeated to John that Jesus had really told her all about herself.
 \usection{The Samaritan Revival}
-\vs p143 6:1 On the evening that Nalda drew the crowd out from Sychar to see Jesus, the 12 had just returned with food, and they besought Jesus to eat with them instead of talking to the people, for they had been without food all day and were hungry. But Jesus knew that darkness would soon be upon them; so he persisted in his determination to talk to the people before he sent them away. When Andrew sought to persuade him to eat a bite before speaking to the crowd, Jesus said, \textcolour{ubdarkred}{“I have meat to eat that you do not know about.”} When the apostles heard this, they said among themselves: “Has any man brought him aught to eat? Can it be that the woman gave him food as well as drink?” When Jesus heard them talking among themselves, before he spoke to the people, he turned aside and said to the 12: \textcolour{ubdarkred}{“My meat is to do the will of Him who sent me and to accomplish His work. You should no longer say it is such and such a time until the harvest. Behold these people coming out from a Samaritan city to hear us; I tell you the fields are already white for the harvest. He who reaps receives wages and gathers this fruit to eternal life; consequently the sowers and the reapers rejoice together. For herein is the saying true: ‘One sows and another reaps.’ I am now sending you to reap that whereon you have not laboured; others have laboured, and you are about to enter into their labour.”} This he said in reference to the preaching of John the Baptist.
+\vs p143 6:1 On the evening that Nalda drew the crowd out from Sychar to see Jesus, the twelve had just returned with food, and they besought Jesus to eat with them instead of talking to the people, for they had been without food all day and were hungry. But Jesus knew that darkness would soon be upon them; so he persisted in his determination to talk to the people before he sent them away. When Andrew sought to persuade him to eat a bite before speaking to the crowd, Jesus said, \textcolour{ubdarkred}{“I have meat to eat that you do not know about.”} When the apostles heard this, they said among themselves: “Has any man brought him aught to eat? Can it be that the woman gave him food as well as drink?” When Jesus heard them talking among themselves, before he spoke to the people, he turned aside and said to the twelve: \textcolour{ubdarkred}{“My meat is to do the will of Him who sent me and to accomplish His work. You should no longer say it is such and such a time until the harvest. Behold these people coming out from a Samaritan city to hear us; I tell you the fields are already white for the harvest. He who reaps receives wages and gathers this fruit to eternal life; consequently the sowers and the reapers rejoice together. For herein is the saying true: ‘One sows and another reaps.’ I am now sending you to reap that whereon you have not laboured; others have laboured, and you are about to enter into their labour.”} This he said in reference to the preaching of John the Baptist.
 \vs p143 6:2 Jesus and the apostles went into Sychar and preached two days before they established their camp on Mount Gerizim. And many of the dwellers in Sychar believed the gospel and made request for baptism, but the apostles of Jesus did not yet baptize.
 \vs p143 6:3 \pc The first night of the camp on Mount Gerizim the apostles expected that Jesus would rebuke them for their attitude toward the woman at Jacob’s well, but he made no reference to the matter. Instead he gave them that memorable talk on “The realities which are central in the kingdom of God.” In any religion it is very easy to allow values to become disproportionate and to permit facts to occupy the place of truth in one’s theology. The fact of the cross became the very centre of subsequent Christianity; but it is not the central truth of the religion which may be derived from the life and teachings of Jesus of Nazareth.
 \vs p143 6:4 The theme of Jesus’ teaching on Mount Gerizim was: That he wants all men to see God as a Father\hyp{}friend just as he (Jesus) is a brother\hyp{}friend. And again and again he impressed upon them that love is the greatest relationship in the world --- in the universe --- just as truth is the greatest pronouncement of the observation of these divine relationships.
 \vs p143 6:5 Jesus declared himself so fully to the Samaritans because he could safely do so, and because he knew that he would not again visit the heart of Samaria to preach the gospel of the kingdom.
-\vs p143 6:6 Jesus and the 12 camped on Mount Gerizim until the end of August. They preached the good news of the kingdom --- the fatherhood of God --- to the Samaritans in the cities by day and spent the nights at the camp. The work which Jesus and the 12 did in these Samaritan cities yielded many souls for the kingdom and did much to prepare the way for the marvellous work of Philip in these regions after Jesus’ death and resurrection, subsequent to the dispersion of the apostles to the ends of the earth by the bitter persecution of believers at Jerusalem.
+\vs p143 6:6 Jesus and the twelve camped on Mount Gerizim until the end of August. They preached the good news of the kingdom --- the fatherhood of God --- to the Samaritans in the cities by day and spent the nights at the camp. The work which Jesus and the twelve did in these Samaritan cities yielded many souls for the kingdom and did much to prepare the way for the marvellous work of Philip in these regions after Jesus’ death and resurrection, subsequent to the dispersion of the apostles to the ends of the earth by the bitter persecution of believers at Jerusalem.
 \usection{Teachings about Prayer and Worship}
 \vs p143 7:1 At the evening conferences on Mount Gerizim, Jesus taught many great truths, and in particular he laid emphasis on the following:
 \vs p143 7:2 \pc True religion is the act of an individual soul in its self\hyp{}conscious relations with the Creator; organized religion is man’s attempt to \bibemph{socialize} the worship of individual religionists.
