--- a/tex/p145.tex
+++ b/tex/p145.tex
@@ -27,7 +27,7 @@
 \vs p145 2:12 \pc Just as Jesus finished speaking, a young man in the congregation who had been much agitated by his words was seized with a violent epileptic attack and loudly cried out. At the end of the seizure, when recovering consciousness, he spoke in a dreamy state, saying: “What have we to do with you, Jesus of Nazareth? You are the holy one of God; have you come to destroy us?” Jesus bade the people be quiet and, taking the young man by the hand, said, \textcolour{ubdarkred}{“Come out of it”} --- and he was immediately awakened.
 \vs p145 2:13 This young man was not possessed of an unclean spirit or demon; he was a victim of ordinary epilepsy. But he had been taught that his affliction was due to possession by an evil spirit. He believed this teaching and behaved accordingly in all that he thought or said concerning his ailment. The people all believed that such phenomena were directly caused by the presence of unclean spirits. Accordingly they believed that Jesus had cast a demon out of this man. But Jesus did not at that time cure his epilepsy. Not until later on that day, after sundown, was this man really healed. Long after the day of Pentecost the Apostle John, who was the last to write of Jesus’ doings, avoided all reference to these so\hyp{}called acts of “casting out devils,” and this he did in view of the fact that such cases of demon possession never occurred after Pentecost.
 \vs p145 2:14 As a result of this commonplace incident the report was rapidly spread through Capernaum that Jesus had cast a demon out of a man and miraculously healed him in the synagogue at the conclusion of his afternoon sermon. The Sabbath was just the time for the rapid and effective spreading of such a startling rumour. This report was also carried to all the smaller settlements around Capernaum, and many of the people believed it.
-\vs p145 2:15 \pc The cooking and the housework at the large Zebedee home, where Jesus and the 12 made their headquarters, was for the most part done by Simon Peter’s wife and her mother. Peter’s home was near that of Zebedee; and Jesus and his friends stopped there on the way from the synagogue because Peter’s wife’s mother had for several days been sick with chills and fever. Now it chanced that, at about the time Jesus stood over this sick woman, holding her hand, smoothing her brow, and speaking words of comfort and encouragement, the fever left her. Jesus had not yet had time to explain to his apostles that no miracle had been wrought at the synagogue; and with this incident so fresh and vivid in their minds, and recalling the water and the wine at Cana, they seized upon this coincidence as another miracle, and some of them rushed out to spread the news abroad throughout the city.
+\vs p145 2:15 \pc The cooking and the housework at the large Zebedee home, where Jesus and the twelve made their headquarters, was for the most part done by Simon Peter’s wife and her mother. Peter’s home was near that of Zebedee; and Jesus and his friends stopped there on the way from the synagogue because Peter’s wife’s mother had for several days been sick with chills and fever. Now it chanced that, at about the time Jesus stood over this sick woman, holding her hand, smoothing her brow, and speaking words of comfort and encouragement, the fever left her. Jesus had not yet had time to explain to his apostles that no miracle had been wrought at the synagogue; and with this incident so fresh and vivid in their minds, and recalling the water and the wine at Cana, they seized upon this coincidence as another miracle, and some of them rushed out to spread the news abroad throughout the city.
 \vs p145 2:16 Amatha, Peter’s mother\hyp{}in\hyp{}law, was suffering from malarial fever. She was not miraculously healed by Jesus at this time. Not until several hours later, after sundown, was her cure effected in connection with the extraordinary event which occurred in the front yard of the Zebedee home.
 \vs p145 2:17 \pc And these cases are typical of the manner in which a wonder\hyp{}seeking generation and a miracle\hyp{}minded people unfailingly seized upon all such coincidences as the pretext for proclaiming that another miracle had been wrought by Jesus.
 \usection{The Healing at Sundown}
@@ -48,8 +48,8 @@
 \vs p145 3:15 The healing wonders which every now and then attended Jesus’ mission on earth were not a part of his plan of proclaiming the kingdom. They were incidentally inherent in having on earth a divine being of well\hyp{}nigh unlimited creator prerogatives in association with an unprecedented combination of divine mercy and human sympathy. But such so\hyp{}called miracles gave Jesus much trouble in that they provided prejudice\hyp{}raising publicity and afforded much unsought notoriety.
 \usection{The Evening After}
 \vs p145 4:1 Throughout the evening following this great outburst of healing, the rejoicing and happy throng overran Zebedee’s home, and the apostles of Jesus were keyed up to the highest pitch of emotional enthusiasm. From a human standpoint, this was probably the greatest day of all the great days of their association with Jesus. At no time before or after did their hopes surge to such heights of confident expectation. Jesus had told them only a few days before, and when they were yet within the borders of Samaria, that the hour had come when the kingdom was to be proclaimed in \bibemph{power,} and now their eyes had seen what they supposed was the fulfilment of that promise. They were thrilled by the vision of what was to come if this amazing manifestation of healing power was just the beginning. Their lingering doubts of Jesus’ divinity were banished. They were literally intoxicated with the ecstasy of their bewildered enchantment.
-\vs p145 4:2 But when they sought for Jesus, they could not find him. The Master was much perturbed by what had happened. These men, women, and children who had been healed of diverse diseases lingered late into the evening, hoping for Jesus’ return that they might thank him. The apostles could not understand the Master’s conduct as the hours passed and he remained in seclusion; their joy would have been full and perfect but for his continued absence. When Jesus did return to their midst, the hour was late, and practically all of the beneficiaries of the healing episode had gone to their homes. Jesus refused the congratulations and adoration of the 12 and the others who had lingered to greet him, only saying: \textcolour{ubdarkred}{“Rejoice not that my Father is powerful to heal the body, but rather that he is mighty to save the soul. Let us go to our rest, for tomorrow we must be about the Father’s business.”}
-\vs p145 4:3 And again did 12 disappointed, perplexed, and heart\hyp{}sorrowing men go to their rest; few of them, except the twins, slept much that night. No sooner would the Master do something to cheer the souls and gladden the hearts of his apostles, than he seemed immediately to dash their hopes in pieces and utterly to demolish the foundations of their courage and enthusiasm. As these bewildered fishermen looked into each other’s eyes, there was but one thought: “We cannot understand him. What does all this mean?”
+\vs p145 4:2 But when they sought for Jesus, they could not find him. The Master was much perturbed by what had happened. These men, women, and children who had been healed of diverse diseases lingered late into the evening, hoping for Jesus’ return that they might thank him. The apostles could not understand the Master’s conduct as the hours passed and he remained in seclusion; their joy would have been full and perfect but for his continued absence. When Jesus did return to their midst, the hour was late, and practically all of the beneficiaries of the healing episode had gone to their homes. Jesus refused the congratulations and adoration of the twelve and the others who had lingered to greet him, only saying: \textcolour{ubdarkred}{“Rejoice not that my Father is powerful to heal the body, but rather that he is mighty to save the soul. Let us go to our rest, for tomorrow we must be about the Father’s business.”}
+\vs p145 4:3 And again did twelve disappointed, perplexed, and heart\hyp{}sorrowing men go to their rest; few of them, except the twins, slept much that night. No sooner would the Master do something to cheer the souls and gladden the hearts of his apostles, than he seemed immediately to dash their hopes in pieces and utterly to demolish the foundations of their courage and enthusiasm. As these bewildered fishermen looked into each other’s eyes, there was but one thought: “We cannot understand him. What does all this mean?”
 \usection{Early Sunday Morning}
 \vs p145 5:1 Neither did Jesus sleep much that Saturday night. He realized that the world was filled with physical distress and overrun with material difficulties, and he contemplated the great danger of being compelled to devote so much of his time to the care of the sick and afflicted that his mission of establishing the spiritual kingdom in the hearts of men would be interfered with or at least subordinated to the ministry of things physical. Because of these and similar thoughts which occupied the mortal mind of Jesus during the night, he arose that Sunday morning long before daybreak and went all alone to one of his favourite places for communion with the Father. The theme of Jesus’ prayer on this early morning was for wisdom and judgment that he might not allow his human sympathy, joined with his divine mercy, to make such an appeal to him in the presence of mortal suffering that all of his time would be occupied with physical ministry to the neglect of the spiritual. Though he did not wish altogether to avoid ministering to the sick, he knew that he must also do the more important work of spiritual teaching and religious training.
 \vs p145 5:2 Jesus went out in the hills to pray so many times because there were no private rooms suitable for his personal devotions.
