--- a/tex/p147.tex
+++ b/tex/p147.tex
@@ -18,8 +18,8 @@
 \usection{The Journey to Jerusalem}
 \vs p147 2:1 Early on the morning of Tuesday, March 30, Jesus and the apostolic party started on their journey to Jerusalem for the Passover, going by the route of the Jordan valley. They arrived on the afternoon of Friday, April 2, and established their headquarters, as usual, at Bethany. Passing through Jericho, they paused to rest while Judas made a deposit of some of their common funds in the bank of a friend of his family. This was the first time Judas had carried a surplus of money, and this deposit was left undisturbed until they passed through Jericho again when on that last and eventful journey to Jerusalem just before the trial and death of Jesus.
 \vs p147 2:2 The party had an uneventful trip to Jerusalem, but they had hardly got themselves settled at Bethany when from near and far those seeking healing for their bodies, comfort for troubled minds, and salvation for their souls, began to congregate, so much so that Jesus had little time for rest. Therefore they pitched tents at Gethsemane, and the Master would go back and forth from Bethany to Gethsemane to avoid the crowds which so constantly thronged him. The apostolic party spent almost three weeks at Jerusalem, but Jesus enjoined them to do no public preaching, only private teaching and personal work.
-\vs p147 2:3 At Bethany they quietly celebrated the Passover. And this was the first time that Jesus and all of the 12 partook of the bloodless Passover feast. The apostles of John did not eat the Passover with Jesus and his apostles; they celebrated the feast with Abner and many of the early believers in John’s preaching. This was the second Passover Jesus had observed with his apostles in Jerusalem.
-\vs p147 2:4 When Jesus and the 12 departed for Capernaum, the apostles of John did not return with them. Under the direction of Abner they remained in Jerusalem and the surrounding country, quietly labouring for the extension of the kingdom, while Jesus and the 12 returned to work in Galilee. Never again were the 24 all together until a short time before the commissioning and sending forth of the 70 evangelists. But the two groups were co\hyp{}operative, and notwithstanding their differences of opinion, the best of feelings prevailed.
+\vs p147 2:3 At Bethany they quietly celebrated the Passover. And this was the first time that Jesus and all of the twelve partook of the bloodless Passover feast. The apostles of John did not eat the Passover with Jesus and his apostles; they celebrated the feast with Abner and many of the early believers in John’s preaching. This was the second Passover Jesus had observed with his apostles in Jerusalem.
+\vs p147 2:4 When Jesus and the twelve departed for Capernaum, the apostles of John did not return with them. Under the direction of Abner they remained in Jerusalem and the surrounding country, quietly labouring for the extension of the kingdom, while Jesus and the twelve returned to work in Galilee. Never again were the 24 all together until a short time before the commissioning and sending forth of the 70 evangelists. But the two groups were co\hyp{}operative, and notwithstanding their differences of opinion, the best of feelings prevailed.
 \usection{At the Pool of Bethesda}
 \vs p147 3:1 The afternoon of the second Sabbath in Jerusalem, as the Master and the apostles were about to participate in the temple services, John said to Jesus, “Come with me, I would show you something.” John conducted Jesus out through one of the Jerusalem gates to a pool of water called Bethesda. Surrounding this pool was a structure of five porches under which a large group of sufferers lingered in quest of healing. This was a hot spring whose reddish\hyp{}tinged water would bubble up at irregular intervals because of gas accumulations in the rock caverns underneath the pool. This periodic disturbance of the warm waters was believed by many to be due to supernatural influences, and it was a popular belief that the first person who entered the water after such a disturbance would be healed of whatever infirmity he had.
 \vs p147 3:2 The apostles were somewhat restless under the restrictions imposed by Jesus, and John, the youngest of the 12, was especially restive under this restraint. He had brought Jesus to the pool thinking that the sight of the assembled sufferers would make such an appeal to the Master’s compassion that he would be moved to perform a miracle of healing, and thereby would all Jerusalem be astounded and presently be won to believe in the gospel of the kingdom. Said John to Jesus: “Master, see all of these suffering ones; is there nothing we can do for them?” And Jesus replied: \textcolour{ubdarkred}{“John, why would you tempt me to turn aside from the way I have chosen? Why do you go on desiring to substitute the working of wonders and the healing of the sick for the proclamation of the gospel of eternal truth? My son, I may not do that which you desire, but gather together these sick and afflicted that I may speak words of good cheer and eternal comfort to them.”}
@@ -50,14 +50,14 @@
 \vs p147 5:9 But Jesus earnestly warned his apostles against the foolishness of the child of God who presumes upon the Father’s love. He declared that the heavenly Father is not a lax, loose, or foolishly indulgent parent who is ever ready to condone sin and forgive recklessness. He cautioned his hearers not mistakenly to apply his illustrations of father and son so as to make it appear that God is like some overindulgent and unwise parents who conspire with the foolish of earth to encompass the moral undoing of their thoughtless children, and who are thereby certainly and directly contributing to the delinquency and early demoralization of their own offspring. Said Jesus: \textcolour{ubdarkred}{“My Father does not indulgently condone those acts and practices of his children which are self\hyp{}destructive and suicidal to all moral growth and spiritual progress. Such sinful practices are an abomination in the sight of God.”}
 \vs p147 5:10 \pc Many other semiprivate meetings and banquets did Jesus attend with the high and the low, the rich and the poor, of Jerusalem before he and his apostles finally departed for Capernaum. And many, indeed, became believers in the gospel of the kingdom and were subsequently baptized by Abner and his associates, who remained behind to foster the interests of the kingdom in Jerusalem and thereabouts.
 \usection{Returning to Capernaum}
-\vs p147 6:1 The last week of April, Jesus and the 12 departed from their Bethany headquarters near Jerusalem and began their journey back to Capernaum by way of Jericho and the Jordan.
+\vs p147 6:1 The last week of April, Jesus and the twelve departed from their Bethany headquarters near Jerusalem and began their journey back to Capernaum by way of Jericho and the Jordan.
 \vs p147 6:2 The chief priests and the religious leaders of the Jews held many secret meetings for the purpose of deciding what to do with Jesus. They were all agreed that something should be done to put a stop to his teaching, but they could not agree on the method. They had hoped that the civil authorities would dispose of him as Herod had put an end to John, but they discovered that Jesus was so conducting his work that the Roman officials were not much alarmed by his preaching. Accordingly, at a meeting which was held the day before Jesus’ departure for Capernaum, it was decided that he would have to be apprehended on a religious charge and be tried by the Sanhedrin. Therefore a commission of six secret spies was appointed to follow Jesus, to observe his words and acts, and when they had amassed sufficient evidence of lawbreaking and blasphemy, to return to Jerusalem with their report. These six Jews caught up with the apostolic party, numbering about 30, at Jericho and, under the pretense of desiring to become disciples, attached themselves to Jesus’ family of followers, remaining with the group up to the time of the beginning of the second preaching tour in Galilee; whereupon three of them returned to Jerusalem to submit their report to the chief priests and the Sanhedrin.
 \vs p147 6:3 \pc Peter preached to the assembled multitude at the crossing of the Jordan, and the following morning they moved up the river toward Amathus. They wanted to proceed straight on to Capernaum, but such a crowd gathered here they remained three days, preaching, teaching, and baptizing. They did not move toward home until early Sabbath morning, the first day of May. The Jerusalem spies were sure they would now secure their first charge against Jesus --- that of Sabbath breaking --- since he had presumed to start his journey on the Sabbath day. But they were doomed to disappointment because, just before their departure, Jesus called Andrew into his presence and before them all instructed him to proceed for a distance of only 914\,m, the legal Jewish Sabbath day’s journey.
 \vs p147 6:4 But the spies did not have long to wait for their opportunity to accuse Jesus and his associates of Sabbath breaking. As the company passed along the narrow road, the waving wheat, which was just then ripening, was near at hand on either side, and some of the apostles, being hungry, plucked the ripe grain and ate it. It was customary for travellers to help themselves to grain as they passed along the road, and therefore no thought of wrongdoing was attached to such conduct. But the spies seized upon this as a pretext for assailing Jesus. When they saw Andrew rub the grain in his hand, they went up to him and said: “Do you not know that it is unlawful to pluck and rub the grain on the Sabbath day?” And Andrew answered: “But we are hungry and rub only sufficient for our needs; and since when did it become sinful to eat grain on the Sabbath day?” But the Pharisees answered: “You do no wrong in eating, but you do break the law in plucking and rubbing out the grain between your hands; surely your Master would not approve of such acts.” Then said Andrew: “But if it is not wrong to eat the grain, surely the rubbing out between our hands is hardly more work than the chewing of the grain, which you allow; wherefore do you quibble over such trifles?” When Andrew intimated that they were quibblers, they were indignant, and rushing back to where Jesus walked along, talking to Matthew, they protested, saying: “Behold, Teacher, your apostles do that which is unlawful on the Sabbath day; they pluck, rub, and eat the grain. We are sure you will command them to cease.” And then said Jesus to the accusers: \textcolour{ubdarkred}{“You are indeed zealous for the law, and you do well to remember the Sabbath day to keep it holy; but did you never read in the Scripture that, one day when David was hungry, he and they who were with him entered the house of God and ate the showbread, which it was not lawful for anyone to eat save the priests? and David also gave this bread to those who were with him. And have you not read in our law that it is lawful to do many needful things on the Sabbath day? And shall I not, before the day is finished, see you eat that which you have brought along for the needs of this day? My good men, you do well to be zealous for the Sabbath, but you would do better to guard the health and well\hyp{}being of your fellows. I declare that the Sabbath was made for man and not man for the Sabbath. And if you are here present with us to watch my words, then will I openly proclaim that the Son of Man is lord even of the Sabbath.”}
 \vs p147 6:5 The Pharisees were astonished and confounded by his words of discernment and wisdom. For the remainder of the day they kept by themselves and dared not ask any more questions.
 \vs p147 6:6 \pc Jesus’ antagonism to the Jewish traditions and slavish ceremonials was always \bibemph{positive.} It consisted in what he did and in what he affirmed. The Master spent little time in negative denunciations. He taught that those who know God can enjoy the liberty of living without deceiving themselves by the licenses of sinning. Said Jesus to the apostles: \textcolour{ubdarkred}{“Men\fnst{\textbf{Men, if \ldots\ breakers of the law.}, These words of Jesus are preserved (albeit in a modified form) only in the Codex Bezae Cantabrigiensis (V c.) at Luke 6:4 \textgreek{``Τη αυτη ημερα θεασαμενος τινα εργαζομενον τω σαββατω, ειπεν αυτω, Ανθρωπε, ει μεν οιδας τι ποιεις μακαριος ει; ει δε μη οιδας επικαταρατος, και παραβατης ει του νομου.''}, or, translated into English, ``On the same day, seeing one working on the Sabbath, he said unto him, Man, if indeed thou knowest what thou dost, blessed art thou; but if thou knowest not, thou art cursed, and art a transgressor of the law.''}, if you are enlightened by the truth and really know what you are doing, you are blessed; but if you know not the divine way, you are unfortunate and already breakers of the law.”}
 \usection{Back in Capernaum}
-\vs p147 7:1 It was around noon on Monday, May 3, when Jesus and the 12 came to Bethsaida by boat from Tarichea. They travelled by boat in order to escape those who journeyed with them. But by the next day the others, including the official spies from Jerusalem, had again found Jesus.
+\vs p147 7:1 It was around noon on Monday, May 3, when Jesus and the twelve came to Bethsaida by boat from Tarichea. They travelled by boat in order to escape those who journeyed with them. But by the next day the others, including the official spies from Jerusalem, had again found Jesus.
 \vs p147 7:2 On Tuesday evening Jesus was conducting one of his customary classes of questions and answers when the leader of the six spies said to him: “I was today talking with one of John’s disciples who is here attending upon your teaching, and we were at a loss to understand why you never command your disciples to fast and pray as we Pharisees fast and as John bade his followers.” And Jesus, referring to a statement by John, answered this questioner: \textcolour{ubdarkred}{“Do the sons of the bridechamber fast while the bridegroom is with them? As long as the bridegroom remains with them, they can hardly fast. But the time is coming when the bridegroom shall be taken away, and during those times the children of the bridechamber undoubtedly will fast and pray. To pray is natural for the children of light, but fasting is not a part of the gospel of the kingdom of heaven. Be reminded that a wise tailor does not sew a piece of new and unshrunk cloth upon an old garment, lest, when it is wet, it shrink and produce a worse rent. Neither do men put new wine into old wine skins, lest the new wine burst the skins so that both the wine and the skins perish. The wise man puts the new wine into fresh wine skins. Therefore do my disciples show wisdom in that they do not bring too much of the old order over into the new teaching of the gospel of the kingdom. You who have lost your teacher may be justified in fasting for a time. Fasting may be an appropriate part of the law of Moses, but in the coming kingdom the sons of God shall experience freedom from fear and joy in the divine spirit.”} And when they heard these words, the disciples of John were comforted while the Pharisees themselves were the more confounded.
 \vs p147 7:3 Then the Master proceeded to warn his hearers against entertaining the notion that all olden teaching should be replaced entirely by new doctrines. Said Jesus: \textcolour{ubdarkred}{“That which is old and also \bibemph{true} must abide. Likewise, that which is new but false must be rejected. But that which is new and also true, have the faith and courage to accept. Remember it is written: ‘Forsake not an old friend, for the new is not comparable to him. As new wine, so is a new friend; if it becomes old, you shall drink it with gladness.’”}
 \usection{The Feast of Spiritual Goodness}
