--- a/tex/p148.tex
+++ b/tex/p148.tex
@@ -10,17 +10,17 @@
 \uminitoc{Healing the Paralytic}
 \author{Midwayer Commission}
 \vs p148 0:1 From May 3 to October 3, A.D.\,28, Jesus and the apostolic party were in residence at the Zebedee home at Bethsaida. Throughout this five months’ period of the dry season an enormous camp was maintained by the seaside near the Zebedee residence, which had been greatly enlarged to accommodate the growing family of Jesus. This seaside camp, occupied by an ever\hyp{}changing population of truth seekers, healing candidates, and curiosity devotees, numbered from 500 to 1500. This tented city was under the general supervision of David Zebedee, assisted by the Alpheus twins. The encampment was a model in order and sanitation as well as in its general administration. The sick of different types were segregated and were under the supervision of a believer physician, a Syrian named Elman.
-\vs p148 0:2 Throughout this period the apostles would go fishing at least one day a week, selling their catch to David for consumption by the seaside encampment. The funds thus received were turned over to the group treasury. The 12 were permitted to spend one week out of each month with their families or friends.
+\vs p148 0:2 Throughout this period the apostles would go fishing at least one day a week, selling their catch to David for consumption by the seaside encampment. The funds thus received were turned over to the group treasury. The twelve were permitted to spend one week out of each month with their families or friends.
 \vs p148 0:3 While Andrew continued in general charge of the apostolic activities, Peter was in full charge of the school of the evangelists. The apostles all did their share in teaching groups of evangelists each forenoon, and both teachers and pupils taught the people during the afternoons. After the evening meal, five nights a week, the apostles conducted question classes for the benefit of the evangelists. Once a week Jesus presided at this question hour, answering the holdover questions from previous sessions.
 \vs p148 0:4 In five months several thousand came and went at this encampment. Interested persons from every part of the Roman Empire and from the lands east of the Euphrates were in frequent attendance. This was the longest settled and well\hyp{}organized period of the Master’s teaching. Jesus’ immediate family spent most of this time at either Nazareth or Cana.
 \vs p148 0:5 The encampment was not conducted as a community of common interests, as was the apostolic family. David Zebedee managed this large tent city so that it became a self\hyp{}sustaining enterprise, notwithstanding that no one was ever turned away. This ever\hyp{}changing camp was an indispensable feature of Peter’s evangelistic training school.
 \usection{A New School of the Prophets}
 \vs p148 1:1 Peter, James, and Andrew were the committee designated by Jesus to pass upon applicants for admission to the school of evangelists. All the races and nationalities of the Roman world and the East, as far as India, were represented among the students in this new school of the prophets. This school was conducted on the plan of learning and doing. What the students learned during the forenoon they taught to the assembly by the seaside during the afternoon. After supper they informally discussed both the learning of the forenoon and the teaching of the afternoon.
 \vs p148 1:2 Each of the apostolic teachers taught his own view of the gospel of the kingdom. They made no effort to teach just alike; there was no standardized or dogmatic formulation of theologic doctrines. Though they all taught the \bibemph{same truth,} each apostle presented his own personal interpretation of the Master’s teaching. And Jesus upheld this presentation of the diversity of personal experience in the things of the kingdom, unfailingly harmonizing and co\hyp{}ordinating these many and divergent views of the gospel at his weekly question hours. Notwithstanding this great degree of personal liberty in matters of teaching, Simon Peter tended to dominate the theology of the school of evangelists. Next to Peter, James Zebedee exerted the greatest personal influence.
-\vs p148 1:3 The 100 and more evangelists trained during this five months by the seaside represented the material from which (excepting Abner and John’s apostles) the later 70 gospel teachers and preachers were drawn. The school of evangelists did not have everything in common to the same degree as did the 12.
+\vs p148 1:3 The 100 and more evangelists trained during this five months by the seaside represented the material from which (excepting Abner and John’s apostles) the later 70 gospel teachers and preachers were drawn. The school of evangelists did not have everything in common to the same degree as did the twelve.
 \vs p148 1:4 These evangelists, though they taught and preached the gospel, did not baptize believers until after they were later ordained and commissioned by Jesus as the 70 messengers of the kingdom. Only 7 of the large number healed at the sundown scene at this place were to be found among these evangelistic students. The nobleman’s son of Capernaum was one of those trained for gospel service in Peter’s school.
 \usection{The Bethsaida Hospital}
-\vs p148 2:1 In connection with the seaside encampment, Elman, the Syrian physician, with the assistance of a corps of 25 young women and 12 men, organized and conducted for four months what should be regarded as the kingdom’s first hospital. At this infirmary, located a short distance to the south of the main tented city, they treated the sick in accordance with all known material methods as well as by the spiritual practices of prayer and faith encouragement. Jesus visited the sick of this encampment not less than three times a week and made personal contact with each sufferer. As far as we know, no so\hyp{}called miracles of supernatural healing occurred among the 1,000 afflicted and ailing persons who went away from this infirmary improved or cured. However, the vast majority of these benefited individuals ceased not to proclaim that Jesus had healed them.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/First-Hospital.jpg}\caption{The Kingdom's First Hospital by Russ~Docken}\end{figure}}
+\vs p148 2:1 In connection with the seaside encampment, Elman, the Syrian physician, with the assistance of a corps of 25 young women and twelve men, organized and conducted for four months what should be regarded as the kingdom’s first hospital. At this infirmary, located a short distance to the south of the main tented city, they treated the sick in accordance with all known material methods as well as by the spiritual practices of prayer and faith encouragement. Jesus visited the sick of this encampment not less than three times a week and made personal contact with each sufferer. As far as we know, no so\hyp{}called miracles of supernatural healing occurred among the 1,000 afflicted and ailing persons who went away from this infirmary improved or cured. However, the vast majority of these benefited individuals ceased not to proclaim that Jesus had healed them.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/First-Hospital.jpg}\caption{The Kingdom's First Hospital by Russ~Docken}\end{figure}}
 \vs p148 2:2 Many of the cures effected by Jesus in connection with his ministry in behalf of Elman’s patients did, indeed, appear to resemble the working of miracles, but we were instructed that they were only just such transformations of mind and spirit as may occur in the experience of expectant and faith\hyp{}dominated persons who are under the immediate and inspirational influence of a strong, positive, and beneficent personality whose ministry banishes fear and destroys anxiety.
 \vs p148 2:3 Elman and his associates endeavoured to teach the truth to these sick ones concerning the “possession of evil spirits,” but they met with little success. The belief that physical sickness and mental derangement could be caused by the dwelling of a so\hyp{}called unclean spirit in the mind or body of the afflicted person was well\hyp{}nigh universal.
 \vs p148 2:4 In all his contact with the sick and afflicted, when it came to the technique of treatment or the revelation of the unknown causes of disease, Jesus did not disregard the instructions of his Paradise brother, Immanuel, given ere he embarked upon the venture of the Urantia incarnation. Notwithstanding this, those who ministered to the sick learned many helpful lessons by observing the manner in which Jesus inspired the faith and confidence of the sick and suffering.
@@ -28,7 +28,7 @@
 \usection{The Father’s Business}
 \vs p148 3:1 Throughout this period Jesus conducted public services at the encampment less than a dozen times and spoke only once in the Capernaum synagogue, the second Sabbath before their departure with the newly trained evangelists upon their second public preaching tour of Galilee.
 \vs p148 3:2 Not since his baptism had the Master been so much alone as during this period of the evangelists’ training encampment at Bethsaida. Whenever any one of the apostles ventured to ask Jesus why he was absent so much from their midst, he would invariably answer that he was \textcolour{ubdarkred}{“about the Father’s business.”}
-\vs p148 3:3 During these periods of absence, Jesus was accompanied by only two of the apostles. He had released Peter, James, and John temporarily from their assignment as his personal companions that they might also participate in the work of training the new evangelistic candidates, numbering more than 100. When the Master desired to go to the hills about the Father’s business, he would summon to accompany him any two of the apostles who might be at liberty. In this way each of the 12 enjoyed an opportunity for close association and intimate contact with Jesus.
+\vs p148 3:3 During these periods of absence, Jesus was accompanied by only two of the apostles. He had released Peter, James, and John temporarily from their assignment as his personal companions that they might also participate in the work of training the new evangelistic candidates, numbering more than 100. When the Master desired to go to the hills about the Father’s business, he would summon to accompany him any two of the apostles who might be at liberty. In this way each of the twelve enjoyed an opportunity for close association and intimate contact with Jesus.
 \vs p148 3:4 It has not been revealed for the purposes of this record, but we have been led to infer that the Master, during many of these solitary seasons in the hills, was in direct and executive association with many of his chief directors of universe affairs. Ever since about the time of his baptism this incarnated Sovereign of our universe had become increasingly and consciously active in the direction of certain phases of universe administration. And we have always held the opinion that, in some way not revealed to his immediate associates, during these weeks of decreased participation in the affairs of earth he was engaged in the direction of those high spirit intelligences who were charged with the running of a vast universe, and that the human Jesus chose to designate such activities on his part as being \textcolour{ubdarkred}{“about his Father’s business.”}
 \vs p148 3:5 Many times, when Jesus was alone for hours, but when two of his apostles were near by, they observed his features undergo rapid and multitudinous changes, although they heard him speak no words. Neither did they observe any visible manifestation of celestial beings who might have been in communication with their Master, such as some of them did witness on a subsequent occasion.
 \usection{Evil, Sin, and Iniquity}
