--- a/tex/p151.tex
+++ b/tex/p151.tex
@@ -22,7 +22,7 @@
 \vs p151 2:5 The Master permitted this confusion to pass the point of most intense expression; then he clapped his hands and called them about him. When they had all gathered around him once more, he said, \textcolour{ubdarkred}{“Before I tell you about this parable, do any of you have aught to say?”} Following a moment of silence, Thomas spoke up: “Yes, Master, I wish to say a few words. I remember that you once told us to beware of this very thing. You instructed us that, when using illustrations for our preaching, we should employ true stories, not fables, and that we should select a story best suited to the illustration of the one central and vital truth which we wished to teach the people, and that, having so used the story, we should not attempt to make a spiritual application of all the minor details involved in the telling of the story. I hold that Peter and Nathaniel are both wrong in their attempts to interpret this parable. I admire their ability to do these things, but I am equally sure that all such attempts to make a natural parable yield spiritual analogies in all its features can only result in confusion and serious misconception of the true purpose of such a parable. That I am right is fully proved by the fact that, whereas we were all of one mind an hour ago, now are we divided into two separate groups who hold different opinions concerning this parable and hold such opinions so earnestly as to interfere, in my opinion, with our ability fully to grasp the great truth which you had in mind when you presented this parable to the multitude and subsequently asked us to make comment upon it.”
 \vs p151 2:6 The words which Thomas spoke had a quieting effect on all of them. He caused them to recall what Jesus had taught them on former occasions, and before Jesus resumed speaking, Andrew arose, saying: “I am persuaded that Thomas is right, and I would like to have him tell us what meaning he attaches to the parable of the sower.” After Jesus had beckoned Thomas to speak, he said: “My brethren, I did not wish to prolong this discussion, but if you so desire, I will say that I think this parable was spoken to teach us one great truth. And that is that our teaching of the gospel of the kingdom, no matter how faithfully and efficiently we execute our divine commissions, is going to be attended by varying degrees of success; and that all such differences in results are directly due to conditions inherent in the circumstances of our ministry, conditions over which we have little or no control.”
 \vs p151 2:7 When Thomas had finished speaking, the majority of his fellow preachers were about ready to agree with him, even Peter and Nathaniel were on their way over to speak with him, when Jesus arose and said: \textcolour{ubdarkred}{“Well done, Thomas; you have discerned the true meaning of parables; but both Peter and Nathaniel have done you all equal good in that they have so fully shown the danger of undertaking to make an allegory out of my parables. In your own hearts you may often profitably engage in such flights of the speculative imagination, but you make a mistake when you seek to offer such conclusions as a part of your public teaching.”}
-\vs p151 2:8 Now that the tension was over, Peter and Nathaniel congratulated each other on their interpretations, and with the exception of the Alpheus twins, each of the apostles ventured to make an interpretation of the parable of the sower before they retired for the night. Even Judas Iscariot offered a very plausible interpretation. The 12 would often, among themselves, attempt to figure out the Master’s parables as they would an allegory, but never again did they regard such speculations seriously. This was a very profitable session for the apostles and their associates, especially so since from this time on Jesus more and more employed parables in connection with his public teaching.
+\vs p151 2:8 Now that the tension was over, Peter and Nathaniel congratulated each other on their interpretations, and with the exception of the Alpheus twins, each of the apostles ventured to make an interpretation of the parable of the sower before they retired for the night. Even Judas Iscariot offered a very plausible interpretation. The twelve would often, among themselves, attempt to figure out the Master’s parables as they would an allegory, but never again did they regard such speculations seriously. This was a very profitable session for the apostles and their associates, especially so since from this time on Jesus more and more employed parables in connection with his public teaching.
 \usection{More about Parables}
 \vs p151 3:1 The apostles were parable\hyp{}minded, so much so that the whole of the next evening was devoted to the further discussion of parables. Jesus introduced the evening’s conference by saying: \textcolour{ubdarkred}{“My beloved, you must always make a difference in teaching so as to suit your presentation of truth to the minds and hearts before you. When you stand before a multitude of varying intellects and temperaments, you cannot speak different words for each class of hearers, but you can tell a story to convey your teaching; and each group, even each individual, will be able to make his own interpretation of your parable in accordance with his own intellectual and spiritual endowments. You are to let your light shine but do so with wisdom and discretion. No man, when he lights a lamp, covers it up with a vessel or puts it under the bed; he puts his lamp on a stand where all can behold the light. Let me tell you that nothing is hid in the kingdom of heaven which shall not be made manifest; neither are there any secrets which shall not ultimately be made known. Eventually, all these things shall come to light. Think not only of the multitudes and how they hear the truth; take heed also to yourselves how you hear. Remember that I have many times told you: To him who has shall be given more, while from him who has not shall be taken away even that which he thinks he has.”}
 \vs p151 3:2 \pc The continued discussion of parables and further instruction as to their interpretation may be summarized and expressed in modern phraseology as follows:
@@ -54,7 +54,7 @@
 \vs p151 5:3 It was just such an evening gale that caught the boat carrying Jesus over to the other side on this Sunday evening. Three other boats containing some of the younger evangelists were trailing after. This tempest was severe, notwithstanding that it was confined to this region of the lake, there being no evidence of a storm on the western shore. The wind was so strong that the waves began to wash over the boat. The high wind had torn the sail away before the apostles could furl it, and they were now entirely dependent on their oars as they laboriously pulled for the shore, a little more than 2.4\,km distant.
 \vs p151 5:4 Meanwhile Jesus lay asleep in the stern of the boat under a small overhead shelter. The Master was weary when they left Bethsaida, and it was to secure rest that he had directed them to sail him across to the other side. These ex\hyp{}fishermen were strong and experienced oarsmen, but this was one of the worst gales they had ever encountered. Although the wind and the waves tossed their boat about as though it were a toy ship, Jesus slumbered on undisturbed. Peter was at the right\hyp{}hand oar near the stern. When the boat began to fill with water, he dropped his oar and, rushing over to Jesus, shook him vigorously in order to awaken him, and when he was aroused, Peter said: “Master, don’t you know we are in a violent storm? If you do not save us, we will all perish.”
 \vs p151 5:5 As Jesus came out in the rain, he looked first at Peter, and then peering into the darkness at the struggling oarsmen, he turned his glance back upon Simon Peter, who, in his agitation, had not yet returned to his oar, and said: \textcolour{ubdarkred}{“Why are all of you so filled with fear? Where is your faith? Peace, be quiet.”} Jesus had hardly uttered this rebuke to Peter and the other apostles, he had hardly bidden Peter seek peace wherewith to quiet his troubled soul, when the disturbed atmosphere, having established its equilibrium, settled down into a great calm. The angry waves almost immediately subsided, while the dark clouds, having spent themselves in a short shower, vanished, and the stars of heaven shone overhead. All this was purely coincidental as far as we can judge; but the apostles, particularly Simon Peter, never ceased to regard the episode as a nature miracle. It was especially easy for the men of that day to believe in nature miracles inasmuch as they firmly believed that all nature was a phenomenon directly under the control of spirit forces and supernatural beings.
-\vs p151 5:6 Jesus plainly explained to the 12 that he had spoken to their troubled spirits and had addressed himself to their fear\hyp{}tossed minds, that he had not commanded the elements to obey his word, but it was of no avail. The Master’s followers always persisted in placing their own interpretation on all such coincidental occurrences. From this day on they insisted on regarding the Master as having absolute power over the natural elements. Peter never grew weary of reciting how “even the winds and the waves obey him.”
+\vs p151 5:6 Jesus plainly explained to the twelve that he had spoken to their troubled spirits and had addressed himself to their fear\hyp{}tossed minds, that he had not commanded the elements to obey his word, but it was of no avail. The Master’s followers always persisted in placing their own interpretation on all such coincidental occurrences. From this day on they insisted on regarding the Master as having absolute power over the natural elements. Peter never grew weary of reciting how “even the winds and the waves obey him.”
 \vs p151 5:7 It was late in the evening when Jesus and his associates reached the shore, and since it was a calm and beautiful night, they all rested in the boats, not going ashore until shortly after sunrise the next morning. When they were gathered together, about 40 in all, Jesus said: \textcolour{ubdarkred}{“Let us go up into yonder hills and tarry for a few days while we ponder over the problems of the Father’s kingdom.”}
 \usection{The Kheresa Lunatic}
 \vs p151 6:1 Although most of the near\hyp{}by eastern shore of the lake sloped up gently to the highlands beyond, at this particular spot there was a steep hillside, the shore in some places dropping sheer down into the lake. Pointing up to the side of the near\hyp{}by hill, Jesus said: \textcolour{ubdarkred}{“Let us go up on this hillside for our breakfast and under some of the shelters rest and talk.”}
