--- a/tex/p154.tex
+++ b/tex/p154.tex
@@ -32,7 +32,7 @@
 \vs p154 4:6 \pc There was much talk about Jesus’ preaching doctrines which were upsetting for the common people; his enemies maintained that his teachings were impractical, that everything would go to pieces if everybody made an honest effort to live in accordance with his ideas. And the men of many subsequent generations have said the same things. Many intelligent and well\hyp{}meaning men, even in the more enlightened age of these revelations, maintain that modern civilization could not have been built upon the teachings of Jesus --- and they are partially right. But all such doubters forget that a much better civilization could have been built upon his teachings, and sometime will be. This world has never seriously tried to carry out the teachings of Jesus on a large scale, notwithstanding that half\hyp{}hearted attempts have often been made to follow the doctrines of so\hyp{}called Christianity.
 \usection{The Eventful Sunday Morning}
 \vs p154 5:1 May 22 was an eventful day in the life of Jesus. On this Sunday morning, before daybreak, one of David’s messengers arrived in great haste from Tiberias, bringing the word that Herod had authorized, or was about to authorize, the arrest of Jesus by the officers of the Sanhedrin. The receipt of the news of this impending danger caused David Zebedee to arouse his messengers and send them out to all the local groups of disciples, summoning them for an emergency council at 7:00 that morning. When the sister\hyp{}in\hyp{}law of Jude (Jesus’ brother) heard this alarming report, she hastened word to all of Jesus’ family who dwelt near by, summoning them forthwith to assemble at Zebedee’s house. And in response to this hasty call, presently there were assembled Mary, James, Joseph, Jude, and Ruth.
-\vs p154 5:2 At this early morning meeting Jesus imparted his farewell instructions to the assembled disciples; that is, he bade them farewell for the time being, knowing well that they would soon be dispersed from Capernaum. He directed them all to seek God for guidance and to carry on the work of the kingdom regardless of consequences. The evangelists were to labour as they saw fit until such time as they might be called. He selected 12 of the evangelists to accompany him; the 12 apostles he directed to remain with him no matter what happened. The 12 women he instructed to remain at the Zebedee house and at Peter’s house until he should send for them.
+\vs p154 5:2 At this early morning meeting Jesus imparted his farewell instructions to the assembled disciples; that is, he bade them farewell for the time being, knowing well that they would soon be dispersed from Capernaum. He directed them all to seek God for guidance and to carry on the work of the kingdom regardless of consequences. The evangelists were to labour as they saw fit until such time as they might be called. He selected twelve of the evangelists to accompany him; the twelve apostles he directed to remain with him no matter what happened. The twelve women he instructed to remain at the Zebedee house and at Peter’s house until he should send for them.
 \vs p154 5:3 Jesus consented to David Zebedee’s continuing his countrywide messenger service, and in bidding the Master farewell presently, David said: “Go forth to your work, Master. Don’t let the bigots catch you, and never doubt that the messengers will follow after you. My men will never lose contact with you, and through them you shall know of the kingdom in other parts, and by them we will all know about you. Nothing that might happen to me will interfere with this service, for I have appointed first and second leaders, even a third. I am neither a teacher nor a preacher, but it is in my heart to do this, and none can stop me.”
 \vs p154 5:4 About 7:30 this morning Jesus began his parting address to almost 100 believers who had crowded indoors to hear him. This was a solemn occasion for all present, but Jesus seemed unusually cheerful; he was once more like his normal self. The seriousness of weeks had gone, and he inspired all of them with his words of faith, hope, and courage.
 \usection{Jesus’ Family Arrives}
@@ -49,7 +49,7 @@
 \vs p154 6:11 The haste of their flight was augmented by the arrival of a party of David’s messengers at the rear entrance of the Zebedee home. The commotion produced by these men frightened the apostles into thinking that these new arrivals might be their apprehenders, and in fear of immediate arrest, they hastened through the front entrance to the waiting boat. And all of this explains why Jesus did not see his family waiting on the back porch.
 \vs p154 6:12 But he did say to David Zebedee as he entered the boat in hasty flight: \textcolour{ubdarkred}{“Tell my mother and my brothers that I appreciate their coming, and that I intended to see them. Admonish them to find no offence in me but rather to seek for a knowledge of the will of God and for grace and courage to do that will.”}
 \usection{The Hasty Flight}
-\vs p154 7:1 And so it was on this Sunday morning, the 22\ts{nd} of May, in the year A.D.\,29, that Jesus, with his 12 apostles and the 12 evangelists, engaged in this hasty flight from the Sanhedrin officers who were on their way to Bethsaida with authority from Herod Antipas to arrest him and take him to Jerusalem for trial on charges of blasphemy and other violations of the sacred laws of the Jews. It was almost 8:30 this beautiful morning when this company of 25 manned the oars and pulled for the eastern shore of the Sea of Galilee.
+\vs p154 7:1 And so it was on this Sunday morning, the 22\ts{nd} of May, in the year A.D.\,29, that Jesus, with his twelve apostles and the twelve evangelists, engaged in this hasty flight from the Sanhedrin officers who were on their way to Bethsaida with authority from Herod Antipas to arrest him and take him to Jerusalem for trial on charges of blasphemy and other violations of the sacred laws of the Jews. It was almost 8:30 this beautiful morning when this company of 25 manned the oars and pulled for the eastern shore of the Sea of Galilee.
 \vs p154 7:2 Following the Master’s boat was another and smaller craft, containing six of David’s messengers, who had instructions to maintain contact with Jesus and his associates and to see that information of their whereabouts and safety was regularly transmitted to the home of Zebedee in Bethsaida, which had served as headquarters for the work of the kingdom for some time. But Jesus was never again to make his home at the house of Zebedee. From now on, throughout the remainder of his earth life, the Master truly “had not where to lay his head.” No more did he have even the semblance of a settled abode.
 \vs p154 7:3 They rowed over to near the village of Kheresa, put their boat in the custody of friends, and began the wanderings of this eventful last year of the Master’s life on earth. For a time they remained in the domains of Philip, going from Kheresa up to Caesarea\hyp{}Philippi, thence making their way over to the coast of Phoenicia.
 \vs p154 7:4 \pc The crowd lingered about the home of Zebedee watching these two boats make their way over the lake toward the eastern shore, and they were well started when the Jerusalem officers hurried up and began their search for Jesus. They refused to believe he had escaped them, and while Jesus and his party were journeying northward through Batanea, the Pharisees and their assistants spent almost a full week vainly searching for him in the neighbourhood of Capernaum.
