--- a/tex/p158.tex
+++ b/tex/p158.tex
@@ -15,7 +15,7 @@
 \vs p158 1:2 Jesus had been summoned to go up on the mountain, apart by himself, for the transaction of important matters having to do with the progress of his bestowal in the flesh as this experience was related to the universe of his own creation. It is significant that this extraordinary event was timed to occur while Jesus and the apostles were in the lands of the gentiles, and that it actually transpired on a mountain of the gentiles.
 \vs p158 1:3 They reached their destination, about halfway up the mountain, shortly before noon, and while eating lunch, Jesus told the 3 apostles something of his experience in the hills to the east of Jordan shortly after his baptism and also some more of his experience on Mount Hermon in connection with his former visit to this lonely retreat.
 \vs p158 1:4 When a boy, Jesus used to ascend the hill near his home and dream of the battles which had been fought by the armies of empires on the plain of Esdraelon; now he ascended Mount Hermon to receive the endowment which was to prepare him to descend upon the plains of the Jordan to enact the closing scenes of the drama of his bestowal on Urantia. The Master could have relinquished the struggle this day on Mount Hermon and returned to his rule of the universe domains, but he not only chose to meet the requirements of his order of divine sonship embraced in the mandate of the Eternal Son on Paradise, but he also elected to meet the last and full measure of the present will of his Paradise Father. On this day in August 3 of his apostles saw him decline to be invested with full universe authority. They looked on in amazement as the celestial messengers departed, leaving him alone to finish out his earth life as the Son of Man and the Son of God.
-\vs p158 1:5 The faith of the apostles was at a high point at the time of the feeding of the 5,000, and then it rapidly fell almost to zero. Now, as a result of the Master’s admission of his divinity, the lagging faith of the 12 arose in the next few weeks to its highest pitch, only to undergo a progressive decline. The third revival of their faith did not occur until after the Master’s resurrection.
+\vs p158 1:5 The faith of the apostles was at a high point at the time of the feeding of the 5,000, and then it rapidly fell almost to zero. Now, as a result of the Master’s admission of his divinity, the lagging faith of the twelve arose in the next few weeks to its highest pitch, only to undergo a progressive decline. The third revival of their faith did not occur until after the Master’s resurrection.
 \vs p158 1:6 It was about 15:00 on this beautiful afternoon that Jesus took leave of the 3 apostles, saying: \textcolour{ubdarkred}{“I go apart by myself for a season to commune with the Father and his messengers; I bid you tarry here and, while awaiting my return, pray that the Father’s will may be done in all your experience in connection with the further bestowal mission of the Son of Man.”} And after saying this to them, Jesus withdrew for a long conference with Gabriel and the Father Melchizedek\fnst{\textbf{Gabriel and the Father Melchizedek}, Elsewhere (\bibref[35:1.2]{p035 1:2}) it is said that these two are never away from Salvington at the same time. It is possible that they were not really \bibemph{away}, but were communicating with Jesus via some kind of holographic presence.}, not returning until about 18:00. When Jesus saw their anxiety over his prolonged absence, he said: \textcolour{ubdarkred}{“Why were you afraid? You well know I must be about my Father’s business; wherefore do you doubt when I am not with you? I now declare that the Son of Man has chosen to go through his full life in your midst and as one of you. Be of good cheer; I will not leave you until my work is finished.”}
 \vs p158 1:7 As they partook of their meagre evening meal, Peter asked the Master, “How long do we remain on this mountain away from our brethren?” And Jesus answered: \textcolour{ubdarkred}{“Until you shall see the glory of the Son of Man and know that whatsoever I have declared to you is true.”} And they talked over the affairs of the Lucifer rebellion while seated about the glowing embers of their fire until darkness drew on and the apostles’ eyes grew heavy, for they had begun their journey very early that morning.
 \vs p158 1:8 When the 3 had been fast asleep for about half an hour, they were suddenly awakened by a near\hyp{}by crackling sound, and much to their amazement and consternation, on looking about them, they beheld Jesus in intimate converse with two brilliant beings clothed in the habiliments of the light of the celestial world. And Jesus’ face and form shone with the luminosity of a heavenly light. These 3 conversed in a strange language, but from certain things said, Peter erroneously conjectured that the beings with Jesus were Moses and Elijah; in reality, they were Gabriel and the Father Melchizedek. The physical controllers had arranged for the apostles to witness this scene because of Jesus’ request.
@@ -26,7 +26,7 @@
 \vs p158 2:2 Peter shuddered at the thought of the Master’s dying --- it was too disagreeable an idea to entertain --- and fearing that James or John might ask some question relative to this statement, he thought best to start up a diverting conversation and, not knowing what else to talk about, gave expression to the first thought coming into his mind, which was: “Master, why is it that the scribes say that Elijah must first come before the Messiah shall appear?” And Jesus, knowing that Peter sought to avoid reference to his death and resurrection, answered: \textcolour{ubdarkred}{“Elijah indeed comes first to prepare the way for the Son of Man, who must suffer many things and finally be rejected. But I tell you that Elijah has already come, and they received him not but did to him whatsoever they willed.”} And then did the 3 apostles perceive that he referred to John the Baptist as Elijah. Jesus knew that, if they insisted on regarding him as the Messiah, then must John be the Elijah of the prophecy.
 \vs p158 2:3 Jesus enjoined silence about their observation of the foretaste of his postresurrection glory because he did not want to foster the notion that, being now received as the Messiah, he would in any degree fulfil their erroneous concepts of a wonder\hyp{}working deliverer. Although Peter, James, and John pondered all this in their minds, they spoke not of it to any man until after the Master’s resurrection.
 \vs p158 2:4 As they continued to descend the mountain, Jesus said to them: \textcolour{ubdarkred}{“You would not receive me as the Son of Man; therefore have I consented to be received in accordance with your settled determination, but, mistake not, the will of my Father must prevail. If you thus choose to follow the inclination of your own wills, you must prepare to suffer many disappointments and experience many trials, but the training which I have given you should suffice to bring you triumphantly through even these sorrows of your own choosing.”}
-\vs p158 2:5 Jesus did not take Peter, James, and John with him up to the mount of the transfiguration because they were in any sense better prepared than the other apostles to witness what happened, or because they were spiritually more fit to enjoy such a rare privilege. Not at all. He well knew that none of the 12 were spiritually qualified for this experience; therefore did he take with him only the 3 apostles who were assigned to accompany him at those times when he desired to be alone to enjoy solitary communion.
+\vs p158 2:5 Jesus did not take Peter, James, and John with him up to the mount of the transfiguration because they were in any sense better prepared than the other apostles to witness what happened, or because they were spiritually more fit to enjoy such a rare privilege. Not at all. He well knew that none of the twelve were spiritually qualified for this experience; therefore did he take with him only the 3 apostles who were assigned to accompany him at those times when he desired to be alone to enjoy solitary communion.
 \usection{Meaning of the Transfiguration}
 \vs p158 3:1 That which Peter, James, and John witnessed on the mount of transfiguration was a fleeting glimpse of a celestial pageant which transpired that eventful day on Mount Hermon. The transfiguration was the occasion of:
 \vs p158 3:2 \ublistelem{1.}\bibnobreakspace The acceptance of the fullness of the bestowal of the incarnated life of Michael on Urantia by the Eternal Mother\hyp{}Son of Paradise. As far as concerned the requirements of the Eternal Son, Jesus had now received assurance of their fulfilment. And Gabriel brought Jesus that assurance.
@@ -47,25 +47,25 @@
 \vs p158 5:1 As Jesus drew near, the 9 apostles were more than relieved to welcome him, and they were greatly encouraged to behold the good cheer and unusual enthusiasm which marked the countenances of Peter, James, and John. They all rushed forward to greet Jesus and their 3 brethren. As they exchanged greetings, the crowd came up, and Jesus asked, \textcolour{ubdarkred}{“What were you disputing about as we drew near?”} But before the disconcerted and humiliated apostles could reply to the Master’s question, the anxious father of the afflicted lad stepped forward and, kneeling at Jesus’ feet, said: “Master, I have a son, an only child, who is possessed by an evil spirit. Not only does he cry out in terror, foam at the mouth, and fall like a dead person at the time of seizure, but oftentimes this evil spirit which possesses him rends him in convulsions and sometimes has cast him into the water and even into the fire. With much grinding of teeth and as a result of many bruises, my child wastes away. His life is worse than death; his mother and I are of a sad heart and a broken spirit. About noon yesterday, seeking for you, I caught up with your disciples, and while we were waiting, your apostles sought to cast out this demon, but they could not do it. And now, Master, will you do this for us, will you heal my son?”
 \vs p158 5:2 When Jesus had listened to this recital, he touched the kneeling father and bade him rise while he gave the near\hyp{}by apostles a searching survey. Then said Jesus to all those who stood before him: \textcolour{ubdarkred}{“O faithless and perverse generation, how long shall I bear with you? How long shall I be with you? How long ere you learn that the works of faith come not forth at the bidding of doubting unbelief?”} And then, pointing to the bewildered father, Jesus said, \textcolour{ubdarkred}{“Bring hither your son.”} And when James had brought the lad before Jesus, he asked, \textcolour{ubdarkred}{“How long has the boy been afflicted in this way?”} The father answered, “Since he was a very young child.” And as they talked, the youth was seized with a violent attack and fell in their midst, gnashing his teeth and foaming at the mouth. After a succession of violent convulsions he lay there before them as one dead. Now did the father again kneel at Jesus’ feet while he implored the Master, saying: “If you can cure him, I beseech you to have compassion on us and deliver us from this affliction.” And when Jesus heard these words, he looked down into the father’s anxious face, saying: \textcolour{ubdarkred}{“Question not my Father’s power of love, only the sincerity and reach of your faith. All things are possible to him who really believes.”} And then James of Safed spoke those long\hyp{}to\hyp{}be\hyp{}remembered words of commingled faith and doubt, “Lord, I believe. I pray you help my unbelief.”
 \vs p158 5:3 When Jesus heard these words, he stepped forward and, taking the lad by the hand, said: \textcolour{ubdarkred}{“I will do this in accordance with my Father’s will and in honour of living faith. My son, arise! Come out of him, disobedient spirit, and go not back into him.”} And placing the hand of the lad in the hand of the father, Jesus said: \textcolour{ubdarkred}{“Go your way. The Father has granted the desire of your soul.”} And all who were present, even the enemies of Jesus, were astonished at what they saw.
-\vs p158 5:4 It was indeed a disillusionment for the 3 apostles who had so recently enjoyed the spiritual ecstasy of the scenes and experiences of the transfiguration, so soon to return to this scene of the defeat and discomfiture of their fellow apostles. But it was ever so with these 12 ambassadors of the kingdom. They never failed to alternate between exaltation and humiliation in their life experiences.
+\vs p158 5:4 It was indeed a disillusionment for the 3 apostles who had so recently enjoyed the spiritual ecstasy of the scenes and experiences of the transfiguration, so soon to return to this scene of the defeat and discomfiture of their fellow apostles. But it was ever so with these twelve ambassadors of the kingdom. They never failed to alternate between exaltation and humiliation in their life experiences.
 \vs p158 5:5 This was a true healing of a double affliction, a physical ailment and a spirit malady. And the lad was permanently cured from that hour. When James had departed with his restored son, Jesus said: \textcolour{ubdarkred}{“We go now to Caesarea\hyp{}Philippi; make ready at once.”} And they were a quiet group as they journeyed southward while the crowd followed on behind.
 \usection{In Celsus’ Garden}
-\vs p158 6:1 They remained overnight with Celsus, and that evening in the garden, after they had eaten and rested, the 12 gathered about Jesus, and Thomas said: “Master, while we who tarried behind still remain ignorant of what transpired up on the mountain, and which so greatly cheered our brethren who were with you, we crave to have you talk with us concerning our defeat and instruct us in these matters, seeing that those things which happened on the mountain cannot be disclosed at this time.”
+\vs p158 6:1 They remained overnight with Celsus, and that evening in the garden, after they had eaten and rested, the twelve gathered about Jesus, and Thomas said: “Master, while we who tarried behind still remain ignorant of what transpired up on the mountain, and which so greatly cheered our brethren who were with you, we crave to have you talk with us concerning our defeat and instruct us in these matters, seeing that those things which happened on the mountain cannot be disclosed at this time.”
 \vs p158 6:2 And Jesus answered Thomas, saying: \textcolour{ubdarkred}{“Everything which your brethren heard on the mountain shall be revealed to you in due season. But I will now show you the cause of your defeat in that which you so unwisely attempted. While your Master and his companions, your brethren, ascended yonder mountain yesterday to seek for a larger knowledge of the Father’s will and to ask for a richer endowment of wisdom effectively to do that divine will, you who remained on watch here with instructions to strive to acquire the mind of spiritual insight and to pray with us for a fuller revelation of the Father’s will, failed to exercise the faith at your command but, instead, yielded to the temptation and fell into your old evil tendencies to seek for yourselves preferred places in the kingdom of heaven --- the material and temporal kingdom which you persist in contemplating. And you cling to these erroneous concepts in spite of the reiterated declaration that my kingdom is not of this world.}
 \vs p158 6:3 \textcolour{ubdarkred}{“No sooner does your faith grasp the identity of the Son of Man than your selfish desire for worldly preferment creeps back upon you, and you fall to discussing among yourselves as to who should be greatest in the kingdom of heaven, a kingdom which, as you persist in conceiving it, does not exist, nor ever shall. Have not I told you that he who would be greatest in the kingdom of my Father’s spiritual brotherhood must become little in his own eyes and thus become the server of his brethren? Spiritual greatness consists in an understanding love that is Godlike and not in an enjoyment of the exercise of material power for the exaltation of self. In what you attempted, in which you so completely failed, your purpose was not pure. Your motive was not divine. Your ideal was not spiritual. Your ambition was not altruistic. Your procedure was not based on love, and your goal of attainment was not the will of the Father in heaven.}
 \vs p158 6:4 \textcolour{ubdarkred}{“How long will it take you to learn that you cannot time\hyp{}shorten the course of established natural phenomena except when such things are in accordance with the Father’s will? nor can you do spiritual work in the absence of spiritual power. And you can do neither of these, even when their potential is present, without the existence of that third and essential human factor, the personal experience of the possession of living faith. Must you always have material manifestations as an attraction for the spiritual realities of the kingdom? Can you not grasp the spirit significance of my mission without the visible exhibition of unusual works? When can you be depended upon to adhere to the higher and spiritual realities of the kingdom regardless of the outward appearance of all material manifestations?”}
 \vs p158 6:5 When Jesus had thus spoken to the 12, he added: \textcolour{ubdarkred}{“And now go to your rest, for on the morrow we return to Magadan and there take counsel concerning our mission to the cities and villages of the Decapolis. And in the conclusion of this day’s experience, let me declare to each of you that which I spoke to your brethren on the mountain, and let these words find a deep lodgement in your hearts: The Son of Man now enters upon the last phase of the bestowal. We are about to begin those labours which shall presently lead to the great and final testing of your faith and devotion when I shall be delivered into the hands of the men who seek my destruction. And remember what I am saying to you: The Son of Man will be put to death, but he shall rise again.”}
 \vs p158 6:6 They retired for the night, sorrowful. They were bewildered; they could not comprehend these words. And while they were afraid to ask aught concerning what he had said, they did recall all of it subsequent to his resurrection.
 \usection{Peter’s Protest}
-\vs p158 7:1 Early this Wednesday morning Jesus and the 12 departed from Caesarea\hyp{}Philippi for Magadan Park near Bethsaida\hyp{}Julias. The apostles had slept very little that night, so they were up early and ready to go. Even the stolid Alpheus twins had been shocked by this talk about the death of Jesus. As they journeyed south, just beyond the Waters of Merom they came to the Damascus road, and desiring to avoid the scribes and others whom Jesus knew would presently be coming along after them, he directed that they go on to Capernaum by the Damascus road which passes through Galilee. And he did this because he knew that those who followed after him would go on down over the east Jordan road since they reckoned that Jesus and the apostles would fear to pass through the territory of Herod Antipas. Jesus sought to elude his critics and the crowd which followed him that he might be alone with his apostles this day.
+\vs p158 7:1 Early this Wednesday morning Jesus and the twelve departed from Caesarea\hyp{}Philippi for Magadan Park near Bethsaida\hyp{}Julias. The apostles had slept very little that night, so they were up early and ready to go. Even the stolid Alpheus twins had been shocked by this talk about the death of Jesus. As they journeyed south, just beyond the Waters of Merom they came to the Damascus road, and desiring to avoid the scribes and others whom Jesus knew would presently be coming along after them, he directed that they go on to Capernaum by the Damascus road which passes through Galilee. And he did this because he knew that those who followed after him would go on down over the east Jordan road since they reckoned that Jesus and the apostles would fear to pass through the territory of Herod Antipas. Jesus sought to elude his critics and the crowd which followed him that he might be alone with his apostles this day.
 \vs p158 7:2 They travelled on through Galilee until well past the time for their lunch, when they stopped in the shade to refresh themselves. And after they had partaken of food, Andrew, speaking to Jesus, said: “Master, my brethren do not comprehend your deep sayings. We have come fully to believe that you are the Son of God, and now we hear these strange words about leaving us, about dying. We do not understand your teaching. Are you speaking to us in parables? We pray you to speak to us directly and in undisguised form.”
 \vs p158 7:3 In answer to Andrew, Jesus said: \textcolour{ubdarkred}{“My brethren, it is because you have confessed that I am the Son of God that I am constrained to begin to unfold to you the truth about the end of the bestowal of the Son of Man on earth. You insist on clinging to the belief that I am the Messiah, and you will not abandon the idea that the Messiah must sit upon a throne in Jerusalem; wherefore do I persist in telling you that the Son of Man must presently go to Jerusalem, suffer many things, be rejected by the scribes, the elders, and the chief priests, and after all this be killed and raised from the dead. And I speak not a parable to you; I speak the truth to you that you may be prepared for these events when they suddenly come upon us.”} And while he was yet speaking, Simon Peter, rushing impetuously toward him, laid his hand upon the Master’s shoulder and said: “Master, be it far from us to contend with you, but I declare that these things shall never happen to you.”
 \vs p158 7:4 Peter spoke thus because he loved Jesus; but the Master’s human nature recognized in these words of well\hyp{}meant affection the subtle suggestion of temptation that he change his policy of pursuing to the end his earth bestowal in accordance with the will of his Paradise Father. And it was because he detected the danger of permitting the suggestions of even his affectionate and loyal friends to dissuade him, that he turned upon Peter and the other apostles, saying: \textcolour{ubdarkred}{“Get you behind me. You savour of the spirit of the adversary, the tempter. When you talk in this manner, you are not on my side but rather on the side of our enemy. In this way do you make your love for me a stumbling block to my doing the Father’s will. Mind not the ways of men but rather the will of God.”}
 \vs p158 7:5 After they had recovered from the first shock of Jesus’ stinging rebuke, and before they resumed their journey, the Master spoke further: \textcolour{ubdarkred}{“If any man would come after me, let him disregard himself, take up his responsibilities daily, and follow me. For whosoever would save his life selfishly, shall lose it, but whosoever loses his life for my sake and the gospel’s, shall save it. What does it profit a man to gain the whole world and lose his own soul? What would a man give in exchange for eternal life? Be not ashamed of me and my words in this sinful and hypocritical generation, even as I will not be ashamed to acknowledge you when in glory I appear before my Father in the presence of all the celestial hosts. Nevertheless, many of you now standing before me shall not taste death till you see this kingdom of God come with power.”}
-\vs p158 7:6 And thus did Jesus make plain to the 12 the painful and conflicting path which they must tread if they would follow him. What a shock these words were to these Galilean fishermen who persisted in dreaming of an earthly kingdom with positions of honour for themselves! But their loyal hearts were stirred by this courageous appeal, and not one of them was minded to forsake him. Jesus was not sending them alone into the conflict; he was leading them. He asked only that they bravely follow.
-\vs p158 7:7 Slowly the 12 were grasping the idea that Jesus was telling them something about the possibility of his dying. They only vaguely comprehended what he said about his death, while his statement about rising from the dead utterly failed to register in their minds. As the days passed, Peter, James, and John, recalling their experience upon the mount of the transfiguration, arrived at a fuller understanding of certain of these matters.
-\vs p158 7:8 In all the association of the 12 with their Master, only a few times did they see that flashing eye and hear such swift words of rebuke as were administered to Peter and the rest of them on this occasion. Jesus had always been patient with their human shortcomings, but not so when faced by an impending threat against the program of implicitly carrying out his Father’s will regarding the remainder of his earth career. The apostles were literally stunned; they were amazed and horrified. They could not find words to express their sorrow. Slowly they began to realize what the Master must endure, and that they must go through these experiences with him, but they did not awaken to the reality of these coming events until long after these early hints of the impending tragedy of his latter days.
-\vs p158 7:9 In silence Jesus and the 12 started for their camp at Magadan Park, going by way of Capernaum. As the afternoon wore on, though they did not converse with Jesus, they talked much among themselves while Andrew talked with the Master.
+\vs p158 7:6 And thus did Jesus make plain to the twelve the painful and conflicting path which they must tread if they would follow him. What a shock these words were to these Galilean fishermen who persisted in dreaming of an earthly kingdom with positions of honour for themselves! But their loyal hearts were stirred by this courageous appeal, and not one of them was minded to forsake him. Jesus was not sending them alone into the conflict; he was leading them. He asked only that they bravely follow.
+\vs p158 7:7 Slowly the twelve were grasping the idea that Jesus was telling them something about the possibility of his dying. They only vaguely comprehended what he said about his death, while his statement about rising from the dead utterly failed to register in their minds. As the days passed, Peter, James, and John, recalling their experience upon the mount of the transfiguration, arrived at a fuller understanding of certain of these matters.
+\vs p158 7:8 In all the association of the twelve with their Master, only a few times did they see that flashing eye and hear such swift words of rebuke as were administered to Peter and the rest of them on this occasion. Jesus had always been patient with their human shortcomings, but not so when faced by an impending threat against the program of implicitly carrying out his Father’s will regarding the remainder of his earth career. The apostles were literally stunned; they were amazed and horrified. They could not find words to express their sorrow. Slowly they began to realize what the Master must endure, and that they must go through these experiences with him, but they did not awaken to the reality of these coming events until long after these early hints of the impending tragedy of his latter days.
+\vs p158 7:9 In silence Jesus and the twelve started for their camp at Magadan Park, going by way of Capernaum. As the afternoon wore on, though they did not converse with Jesus, they talked much among themselves while Andrew talked with the Master.
 \usection{At Peter’s House}
 \vs p158 8:1 Entering Capernaum at twilight, they went by unfrequented thoroughfares directly to the home of Simon Peter for their evening meal. While David Zebedee made ready to take them across the lake, they lingered at Simon’s house, and Jesus, looking up at Peter and the other apostles, asked: \textcolour{ubdarkred}{“As you walked along together this afternoon, what was it that you talked about so earnestly among yourselves?”} The apostles held their peace because many of them had continued the discussion begun at Mount Hermon as to what positions they were to have in the coming kingdom; who should be the greatest, and so on. Jesus, knowing what it was that occupied their thoughts that day, beckoned to one of Peter’s little ones and, setting the child down among them, said: \textcolour{ubdarkred}{“Verily, verily, I say to you, except you turn about and become more like this child, you will make little progress in the kingdom of heaven. Whosoever shall humble himself and become as this little one, the same shall become greatest in the kingdom of heaven. And whoso receives such a little one receives me. And they who receive me receive also Him who sent me. If you would be first in the kingdom, seek to minister these good truths to your brethren in the flesh. But whosoever causes one of these little ones to stumble, it would be better for him if a millstone were hanged about his neck and he were cast into the sea. If the things you do with your hands, or the things you see with your eyes give offence in the progress of the kingdom, sacrifice these cherished idols, for it is better to enter the kingdom minus many of the beloved things of life rather than to cling to these idols and find yourself shut out of the kingdom. But most of all, see that you despise not one of these little ones, for their angels do always behold the faces of the heavenly hosts.”}
 \vs p158 8:2 When Jesus had finished speaking, they entered the boat and sailed across to Magadan.
