--- a/tex/p171.tex
+++ b/tex/p171.tex
@@ -16,10 +16,10 @@
 \vs p171 0:6 By this time someone had carried word of this conference to Peter and the other apostles, and they were highly indignant that James and John would seek to be preferred before them, and that they would secretly go with their mother to make such a request. When they fell to arguing among themselves, Jesus called them all together and said: \textcolour{ubdarkred}{“You well understand how the rulers of the gentiles lord it over their subjects, and how those who are great exercise authority. But it shall not be so in the kingdom of heaven. Whosoever would be great among you, let him first become your servant. He who would be first in the kingdom, let him become your minister. I declare to you that the Son of Man came not to be ministered to but to minister; and I now go up to Jerusalem to lay down my life in the doing of the Father’s will and in the service of my brethren.”} When the apostles heard these words, they withdrew by themselves to pray. That evening, in response to the labours of Peter, James and John made suitable apologies to the ten and were restored to the good graces of their brethren.
 \vs p171 0:7 In asking for places on the right hand and on the left hand of Jesus at Jerusalem, the sons of Zebedee little realized that in less than one month their beloved teacher would be hanging on a Roman cross with a dying thief on one side and another transgressor on the other side. And their mother, who was present at the crucifixion, well remembered the foolish request she had made of Jesus at Pella regarding the honours she so unwisely sought for her apostle sons.
 \usection{The Departure from Pella}
-\vs p171 1:1 On the forenoon of Monday, March 13, Jesus and his 12 apostles took final leave of the Pella encampment, starting south on their tour of the cities of southern Perea, where Abner’s associates were at work. They spent more than two weeks visiting among the 70 and then went directly to Jerusalem for the Passover.
+\vs p171 1:1 On the forenoon of Monday, March 13, Jesus and his twelve apostles took final leave of the Pella encampment, starting south on their tour of the cities of southern Perea, where Abner’s associates were at work. They spent more than two weeks visiting among the 70 and then went directly to Jerusalem for the Passover.
 \vs p171 1:2 When the Master left Pella, the disciples encamped with the apostles, about 1,000 in number, followed after him. About one half of this group left him at the Jordan ford on the road to Jericho when they learned he was going over to Heshbon, and after he had preached the sermon on “Counting the Cost.” They went on up to Jerusalem, while the other half followed him for two weeks, visiting the towns in southern Perea.
 \vs p171 1:3 In a general way, most of Jesus’ immediate followers understood that the camp at Pella had been abandoned, but they really thought this indicated that their Master at last intended to go to Jerusalem and lay claim to David’s throne. A large majority of his followers never were able to grasp any other concept of the kingdom of heaven; no matter what he taught them, they would not give up this Jewish idea of the kingdom.
-\vs p171 1:4 Acting on the instructions of the Apostle Andrew, David Zebedee closed the visitors’ camp at Pella on Wednesday, March 15. At this time almost 4,000 visitors were in residence, and this does not include the 1,000 and more persons who sojourned with the apostles at what was known as the teachers’ camp, and who went south with Jesus and the 12. Much as David disliked to do it, he sold the entire equipment to numerous buyers and proceeded with the funds to Jerusalem, subsequently turning the money over to Judas Iscariot.
+\vs p171 1:4 Acting on the instructions of the Apostle Andrew, David Zebedee closed the visitors’ camp at Pella on Wednesday, March 15. At this time almost 4,000 visitors were in residence, and this does not include the 1,000 and more persons who sojourned with the apostles at what was known as the teachers’ camp, and who went south with Jesus and the twelve. Much as David disliked to do it, he sold the entire equipment to numerous buyers and proceeded with the funds to Jerusalem, subsequently turning the money over to Judas Iscariot.
 \vs p171 1:5 \pc David was present in Jerusalem during the tragic last week, taking his mother back with him to Bethsaida after the crucifixion. While awaiting Jesus and the apostles, David stopped with Lazarus at Bethany and became tremendously agitated by the manner in which the Pharisees had begun to persecute and harass him since his resurrection. Andrew had directed David to discontinue the messenger service; and this was construed by all as an indication of the early establishment of the kingdom at Jerusalem. David found himself without a job, and he had about decided to become the self\hyp{}appointed defender of Lazarus when presently the object of his indignant solicitude fled in haste to Philadelphia. Accordingly, sometime after the resurrection and also after the death of his mother, David betook himself to Philadelphia, having first assisted Martha and Mary in disposing of their real estate; and there, in association with Abner and Lazarus, he spent the remainder of his life, becoming the financial overseer of all those large interests of the kingdom which had their centre at Philadelphia during the lifetime of Abner.
 \vs p171 1:6 Within a short time after the destruction of Jerusalem, Antioch became the headquarters of \bibemph{Pauline Christianity,} while Philadelphia remained the centre of the \bibemph{Abnerian kingdom of heaven.} From Antioch the Pauline version of the teachings of Jesus and about Jesus spread to all the Western world; from Philadelphia the missionaries of the Abnerian version of the kingdom of heaven spread throughout Mesopotamia and Arabia until the later times when these uncompromising emissaries of the teachings of Jesus were overwhelmed by the sudden rise of Islam.
 \usection{On Counting the Cost}
@@ -28,9 +28,9 @@
 \vs p171 2:3 \textcolour{ubdarkred}{“If you are not willing to pay the full price, you can hardly be my disciple. Before you go further, you should each sit down and count the cost of being my disciple. Which one of you would undertake to build a watchtower on your lands without first sitting down to count up the cost to see whether you had money enough to complete it? If you fail thus to reckon the cost, after you have laid the foundation, you may discover that you are unable to finish that which you have begun, and therefore will all your neighbours mock you, saying, ‘Behold, this man began to build but was unable to finish his work.’ Again, what king, when he prepares to make war upon another king, does not first sit down and take counsel as to whether he will be able, with 10,000 men, to meet him who comes against him with 20,000? If the king cannot afford to meet his enemy because he is unprepared, he sends an embassy to this other king, even when he is yet a great way off, asking for terms of peace.}
 \vs p171 2:4 \textcolour{ubdarkred}{“Now, then, must each of you sit down and count the cost of being my disciple. From now on you will not be able to follow after us, listening to the teaching and beholding the works; you will be required to face bitter persecutions and to bear witness for this gospel in the face of crushing disappointment. If you are unwilling to renounce all that you are and to dedicate all that you have, then are you unworthy to be my disciple. If you have already conquered yourself within your own heart, you need have no fear of that outward victory which you must presently gain when the Son of Man is rejected by the chief priests and the Sadducees and is given into the hands of mocking unbelievers.}
 \vs p171 2:5 \textcolour{ubdarkred}{“Now should you examine yourself to find out your motive for being my disciple. If you seek honour and glory, if you are worldly minded, you are like the salt when it has lost its savour. And when that which is valued for its saltiness has lost its savour, wherewith shall it be seasoned? Such a condiment is useless; it is fit only to be cast out among the refuse. Now have I warned you to turn back to your homes in peace if you are not willing to drink with me the cup which is being prepared. Again and again have I told you that my kingdom is not of this world, but you will not believe me. He who has ears to hear let him hear what I say.”}
-\vs p171 2:6 \pc Immediately after speaking these words, Jesus, leading the 12, started off on the way to Heshbon, followed by about 500. After a brief delay the other half of the multitude went on up to Jerusalem. His apostles, together with the leading disciples, thought much about these words, but still they clung to the belief that, after this brief period of adversity and trial, the kingdom would certainly be set up somewhat in accordance with their long\hyp{}cherished hopes.
+\vs p171 2:6 \pc Immediately after speaking these words, Jesus, leading the twelve, started off on the way to Heshbon, followed by about 500. After a brief delay the other half of the multitude went on up to Jerusalem. His apostles, together with the leading disciples, thought much about these words, but still they clung to the belief that, after this brief period of adversity and trial, the kingdom would certainly be set up somewhat in accordance with their long\hyp{}cherished hopes.
 \usection{The Perean Tour}
-\vs p171 3:1 For more than two weeks Jesus and the 12, followed by a crowd of several hundred disciples, journeyed about in southern Perea, visiting all of the towns wherein the 70 laboured. Many gentiles lived in this region, and since few were going up to the Passover feast at Jerusalem, the messengers of the kingdom went right on with their work of teaching and preaching.
+\vs p171 3:1 For more than two weeks Jesus and the twelve, followed by a crowd of several hundred disciples, journeyed about in southern Perea, visiting all of the towns wherein the 70 laboured. Many gentiles lived in this region, and since few were going up to the Passover feast at Jerusalem, the messengers of the kingdom went right on with their work of teaching and preaching.
 \vs p171 3:2 Jesus met Abner at Heshbon, and Andrew directed that the labours of the 70 should not be interrupted by the Passover feast; Jesus advised that the messengers should go forward with their work in complete disregard of what was about to happen at Jerusalem. He also counselled Abner to permit the women’s corps, at least such as desired, to go to Jerusalem for the Passover. And this was the last time Abner ever saw Jesus in the flesh. His farewell to Abner was: \textcolour{ubdarkred}{“My son, I know you will be true to the kingdom, and I pray the Father to grant you wisdom that you may love and understand your brethren.”}
 \vs p171 3:3 As they travelled from city to city, large numbers of their followers deserted to go on to Jerusalem so that, by the time Jesus started for the Passover, the number of those who followed along with him day by day had dwindled to less than 200.
 \vs p171 3:4 The apostles understood that Jesus was going to Jerusalem for the Passover. They knew that the Sanhedrin had broadcast a message to all Israel that he had been condemned to die and directing that anyone knowing his whereabouts should inform the Sanhedrin; and yet, despite all this, they were not so alarmed as they had been when he had announced to them in Philadelphia that he was going to Bethany to see Lazarus. This change of attitude from that of intense fear to a state of hushed expectancy was mostly because of Lazarus’s resurrection. They had reached the conclusion that Jesus might, in an emergency, assert his divine power and put to shame his enemies. This hope, coupled with their more profound and mature faith in the spiritual supremacy of their Master, accounted for the outward courage displayed by his immediate followers, who now made ready to follow him into Jerusalem in the very face of the open declaration of the Sanhedrin that he must die.
@@ -69,7 +69,7 @@
 \vs p171 8:1 They did not start from Jericho until near noon since they sat up late the night before while Jesus taught Zaccheus and his family the gospel of the kingdom. About halfway up the ascending road to Bethany the party paused for lunch while the multitude passed on to Jerusalem, not knowing that Jesus and the apostles were going to abide that night on the Mount of Olives.
 \vs p171 8:2 The parable of the pounds, unlike the parable of the talents, which was intended for all the disciples, was spoken more exclusively to the apostles and was largely based on the experience of Archelaus and his futile attempt to gain the rule of the kingdom of Judea. This is one of the few parables of the Master to be founded on an actual historic character. It was not strange that they should have had Archelaus in mind inasmuch as the house of Zaccheus in Jericho was very near the ornate palace of Archelaus, and his aqueduct ran along the road by which they had departed from Jericho.
 \vs p171 8:3 \pc Said Jesus: \textcolour{ubdarkred}{“You think that the Son of Man goes up to Jerusalem to receive a kingdom, but I declare that you are doomed to disappointment. Do you not remember about a certain prince who went into a far country to receive for himself a kingdom, but even before he could return, the citizens of his province, who in their hearts had already rejected him, sent an embassy after him, saying, ‘We will not have this man to reign over us’? As this king was rejected in the temporal rule, so is the Son of Man to be rejected in the spiritual rule. Again I declare that my kingdom is not of this world; but if the Son of Man had been accorded the spiritual rule of his people, he would have accepted such a kingdom of men’s souls and would have reigned over such a dominion of human hearts. Notwithstanding that they reject my spiritual rule over them, I will return again to receive from others such a kingdom of spirit as is now denied me. You will see the Son of Man rejected now, but in another age that which the children of Abraham now reject will be received and exalted.}
-\vs p171 8:4 \textcolour{ubdarkred}{“And now, as the rejected nobleman of this parable, I would call before me my 12 servants, special stewards, and giving into each of your hands the sum of one pound, I would admonish each to heed well my instructions that you trade diligently with your trust fund while I am away that you may have wherewith to justify your stewardship when I return, when a reckoning shall be required of you.}
+\vs p171 8:4 \textcolour{ubdarkred}{“And now, as the rejected nobleman of this parable, I would call before me my twelve servants, special stewards, and giving into each of your hands the sum of one pound, I would admonish each to heed well my instructions that you trade diligently with your trust fund while I am away that you may have wherewith to justify your stewardship when I return, when a reckoning shall be required of you.}
 \vs p171 8:5 \textcolour{ubdarkred}{“And even if this rejected Son should not return, another Son will be sent to receive this kingdom, and this Son will then send for all of you to receive your report of stewardship and to be made glad by your gains.}
 \vs p171 8:6 \textcolour{ubdarkred}{“And when these stewards were subsequently called together for an accounting, the first came forward, saying, ‘Lord, with your pound I have made ten pounds more.’ And his master said to him: ‘Well done; you are a good servant; because you have proved faithful in this matter, I will give you authority over ten cities.’ And the second came, saying, ‘Your pound left with me, Lord, has made five pounds.’ And the master said, ‘I will accordingly make you ruler over five cities.’ And so on down through the others until the last of the servants, on being called to account, reported: ‘Lord, behold, here is your pound, which I have kept safely done up in this napkin. And this I did because I feared you; I believed that you were unreasonable, seeing that you take up where you have not laid down, and that you seek to reap where you have not sown.’ Then said his lord: ‘You negligent and unfaithful servant, I will judge you out of your own mouth. You knew that I reap where I have apparently not sown; therefore you knew this reckoning would be required of you. Knowing this, you should have at least given my money to the banker that at my coming I might have had it with proper interest.’}
 \vs p171 8:7 \textcolour{ubdarkred}{“And then said this ruler to those who stood by: ‘Take the money from this slothful servant and give it to him who has ten pounds.’ And when they reminded the master that such a one already had ten pounds, he said: ‘To every one who has shall be given more, but from him who has not, even that which he has shall be taken away from him.’”}
