--- a/tex/p176.tex
+++ b/tex/p176.tex
@@ -5,7 +5,7 @@
 \uminitoc{The Return of Michael}
 \author{Midwayer Commission}
 \vs p176 0:1 This Tuesday afternoon, as Jesus and the apostles passed out of the temple on their way to the Gethsemane camp, Matthew, calling attention to the temple construction, said: “Master, observe what manner of buildings these are. See the massive stones and the beautiful adornment; can it be that these buildings are to be destroyed?” As they went on toward Olivet, Jesus said: \textcolour{ubdarkred}{“You see these stones and this massive temple; verily, verily, I say to you: In the days soon to come there shall not be left one stone upon another. They shall all be thrown down.”} These remarks depicting the destruction of the sacred temple aroused the curiosity of the apostles as they walked along behind the Master; they could conceive of no event short of the end of the world which would occasion the destruction of the temple.
-\vs p176 0:2 In order to avoid the crowds passing along the Kidron valley toward Gethsemane, Jesus and his associates were minded to climb up the western slope of Olivet for a short distance and then follow a trail over to their private camp near Gethsemane located a short distance above the public camping ground. As they turned to leave the road leading on to Bethany, they observed the temple, glorified by the rays of the setting sun; and while they tarried on the mount, they saw the lights of the city appear and beheld the beauty of the illuminated temple; and there, under the mellow light of the full moon, Jesus and the 12 sat down. The Master talked with them, and presently Nathaniel asked this question: “Tell us, Master, how shall we know when these events are about to come to pass?”
+\vs p176 0:2 In order to avoid the crowds passing along the Kidron valley toward Gethsemane, Jesus and his associates were minded to climb up the western slope of Olivet for a short distance and then follow a trail over to their private camp near Gethsemane located a short distance above the public camping ground. As they turned to leave the road leading on to Bethany, they observed the temple, glorified by the rays of the setting sun; and while they tarried on the mount, they saw the lights of the city appear and beheld the beauty of the illuminated temple; and there, under the mellow light of the full moon, Jesus and the twelve sat down. The Master talked with them, and presently Nathaniel asked this question: “Tell us, Master, how shall we know when these events are about to come to pass?”
 \usection{The Destruction of Jerusalem}
 \vs p176 1:1 In answering Nathaniel’s question, Jesus said: \textcolour{ubdarkred}{“Yes, I will tell you about the times when this people shall have filled up the cup of their iniquity; when justice shall swiftly descend upon this city of our fathers. I am about to leave you; I go to the Father. After I leave you, take heed that no man deceive you, for many will come as deliverers and will lead many astray. When you hear of wars and rumours of wars, be not troubled, for though all these things will happen, the end of Jerusalem is not yet at hand. You should not be perturbed by famines or earthquakes; neither should you be concerned when you are delivered up to the civil authorities and are persecuted for the sake of the gospel. You will be thrown out of the synagogue and put in prison for my sake, and some of you will be killed. When you are brought up before governors and rulers, it shall be for a testimony of your faith and to show your steadfastness in the gospel of the kingdom. And when you stand before judges, be not anxious beforehand as to what you should say, for the spirit will teach you in that very hour what you should answer your adversaries. In these days of travail, even your own kinsfolk, under the leadership of those who have rejected the Son of Man, will deliver you up to prison and death. For a time you may be hated by all men for my sake, but even in these persecutions I will not forsake you; my spirit will not desert you. Be patient! doubt not that this gospel of the kingdom will triumph over all enemies and, eventually, be proclaimed to all nations.”}
 \vs p176 1:2 Jesus paused while he looked down upon the city. The Master realized that the rejection of the spiritual concept of the Messiah, the determination to cling persistently and blindly to the material mission of the expected deliverer, would presently bring the Jews in direct conflict with the powerful Roman armies, and that such a contest could only result in the final and complete overthrow of the Jewish nation. When his people rejected his spiritual bestowal and refused to receive the light of heaven as it so mercifully shone upon them, they thereby sealed their doom as an independent people with a special spiritual mission on earth. Even the Jewish leaders subsequently recognized that it was this secular idea of the Messiah which directly led to the turbulence which eventually brought about their destruction.
@@ -23,7 +23,7 @@
 \vs p176 2:6 \textcolour{ubdarkred}{“And now concerning the travail of Jerusalem, about which I have spoken to you, even this generation will not pass away until my words are fulfilled; but concerning the times of the coming again of the Son of Man, no one in heaven or on earth may presume to speak. But you should be wise regarding the ripening of an age; you should be alert to discern the signs of the times. You know when the fig tree shows its tender branches and puts forth its leaves that summer is near. Likewise, when the world has passed through the long winter of material\hyp{}mindedness and you discern the coming of the spiritual springtime of a new dispensation, should you know that the summertime of a new visitation draws near.}
 \vs p176 2:7 \textcolour{ubdarkred}{“But what is the significance of this teaching having to do with the coming of the Sons of God? Do you not perceive that, when each of you is called to lay down his life struggle and pass through the portal of death, you stand in the immediate presence of judgment, and that you are face to face with the facts of a new dispensation of service in the eternal plan of the infinite Father? What the whole world must face as a literal fact at the end of an age, you, as individuals, must each most certainly face as a personal experience when you reach the end of your natural life and thereby pass on to be confronted with the conditions and demands inherent in the next revelation of the eternal progression of the Father’s kingdom.”}
 \vs p176 2:8 Of all the discourses which the Master gave his apostles, none ever became so confused in their minds as this one, given this Tuesday evening on the Mount of Olives, regarding the twofold subject of the destruction of Jerusalem and his own second coming. There was, therefore, little agreement between the subsequent written accounts based on the memories of what the Master said on this extraordinary occasion. Consequently, when the records were left blank concerning much that was said that Tuesday evening, there grew up many traditions; and very early in the second century a Jewish apocalyptic about the Messiah written by one Selta, who was attached to the court of the Emperor Caligula, was bodily copied into the Matthew Gospel and subsequently added (in part) to the Mark and Luke records. It was in these writings of Selta that the parable of the ten virgins appeared. No part of the gospel record ever suffered such confusing misconstruction as this evening’s teaching. But the Apostle John never became thus confused.
-\vs p176 2:9 As these 13 men resumed their journey toward the camp, they were speechless and under great emotional tension. Judas had finally confirmed his decision to abandon his associates. It was a late hour when David Zebedee, John Mark, and a number of the leading disciples welcomed Jesus and the 12 to the new camp, but the apostles did not want to sleep; they wanted to know more about the destruction of Jerusalem, the Master’s departure, and the end of the world.
+\vs p176 2:9 As these 13 men resumed their journey toward the camp, they were speechless and under great emotional tension. Judas had finally confirmed his decision to abandon his associates. It was a late hour when David Zebedee, John Mark, and a number of the leading disciples welcomed Jesus and the twelve to the new camp, but the apostles did not want to sleep; they wanted to know more about the destruction of Jerusalem, the Master’s departure, and the end of the world.
 \usection{Later Discussion at the Camp}
 \vs p176 3:1 As they gathered about the campfire, some 20 of them, Thomas asked: “Since you are to return to finish the work of the kingdom, what should be our attitude while you are away on the Father’s business?” As Jesus looked them over by the firelight, he answered:\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Master-Teacher.jpg}\caption{The Master Teacher by Michael~Dudash}\end{figure}}
 \vs p176 3:2 \pc \textcolour{ubdarkred}{“And even you, Thomas, fail to comprehend what I have been saying. Have I not all this time taught you that your connection with the kingdom is spiritual and individual, wholly a matter of personal experience in the spirit by the faith\hyp{}realization that you are a son of God? What more shall I say? The downfall of nations, the crash of empires, the destruction of the unbelieving Jews, the end of an age, even the end of the world, what have these things to do with one who believes this gospel, and who has hid his life in the surety of the eternal kingdom? You who are God\hyp{}knowing and gospel\hyp{}believing have already received the assurances of eternal life. Since your lives have been lived in the spirit and for the Father, nothing can be of serious concern to you. Kingdom builders, the accredited citizens of the heavenly worlds, are not to be disturbed by temporal upheavals or perturbed by terrestrial cataclysms. What does it matter to you who believe this gospel of the kingdom if nations overturn, the age ends, or all things visible crash, since you know that your life is the gift of the Son, and that it is eternally secure in the Father? Having lived the temporal life by faith and having yielded the fruits of the spirit as the righteousness of loving service for your fellows, you can confidently look forward to the next step in the eternal career with the same survival faith that has carried you through your first and earthly adventure in sonship with God.}
