--- a/tex/p182.tex
+++ b/tex/p182.tex
@@ -10,7 +10,7 @@
 \vs p182 1:2 When Jesus had thus spoken, he led the way a short distance up on Olivet, and in full view of Jerusalem he bade them kneel on a large flat rock in a circle about him as they had done on the day of their ordination; and then, as he stood there in the midst of them glorified in the mellow moonlight, he lifted up his eyes toward heaven and prayed:\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/He-Lifted-His-Eyes-toward-Heaven.jpg}\caption{He Lifted His Eyes toward Heaven by Michael~Dudash}\end{figure}}
 \vs p182 1:3 \textcolour{ubdarkred}{“Father, my hour has come; now glorify your Son that the Son may glorify you. I know that you have given me full authority over all living creatures in my realm, and I will give eternal life to all who will become faith sons of God. And this is eternal life, that my creatures should know you as the only true God and Father of all, and that they should believe in him whom you sent into the world. Father, I have exalted you on earth and have accomplished the work which you gave me to do. I have almost finished my bestowal upon the children of our own creation; there remains only for me to lay down my life in the flesh. And now, O my Father, glorify me with the glory which I had with you before this world was and receive me once more at your right hand.}
 \vs p182 1:4 \textcolour{ubdarkred}{“I have manifested you to the men whom you chose from the world and gave to me. They are yours --- as all life is in your hands --- you gave them to me, and I have lived among them, teaching them the way of life, and they have believed. These men are learning that all I have comes from you, and that the life I live in the flesh is to make known my Father to the worlds. The truth which you have given to me I have revealed to them. These, my friends and ambassadors, have sincerely willed to receive your word. I have told them that I came forth from you, that you sent me into this world, and that I am about to return to you. Father, I do pray for these chosen men. And I pray for them not as I would pray for the world, but as for those whom I have chosen out of the world to represent me to the world after I have returned to your work, even as I have represented you in this world during my sojourn in the flesh. These men are mine; you gave them to me; but all things which are mine are ever yours, and all that which was yours you have now caused to be mine. You have been exalted in me, and I now pray that I may be honoured in these men. I can no longer be in this world; I am about to return to the work you have given me to do. I must leave these men behind to represent us and our kingdom among men. Father, keep these men faithful as I prepare to yield up my life in the flesh. Help these, my friends, to be one in spirit, even as we are one. As long as I could be with them, I could watch over them and guide them, but now am I about to go away. Be near them, Father, until we can send the new teacher to comfort and strengthen them.}
-\vs p182 1:5 \textcolour{ubdarkred}{“You gave me 12 men, and I have kept them all save one, the son of revenge, who would not have further fellowship with us. These men are weak and frail, but I know we can trust them; I have proved them; they love me, even as they reverence you. While they must suffer much for my sake, I desire that they should also be filled with the joy of the assurance of sonship in the heavenly kingdom. I have given these men your word and have taught them the truth. The world may hate them, even as it has hated me, but I do not ask that you take them out of the world, only that you keep them from the evil in the world. Sanctify them in the truth; your word is truth. And as you sent me into this world, even so am I about to send these men into the world. For their sakes I have lived among men and have consecrated my life to your service that I might inspire them to be purified through the truth I have taught them and the love I have revealed to them. I well know, my Father, that there is no need for me to ask you to watch over these brethren after I have gone; I know you love them even as I, but I do this that they may the better realize the Father loves mortal men even as does the Son.}
+\vs p182 1:5 \textcolour{ubdarkred}{“You gave me twelve men, and I have kept them all save one, the son of revenge, who would not have further fellowship with us. These men are weak and frail, but I know we can trust them; I have proved them; they love me, even as they reverence you. While they must suffer much for my sake, I desire that they should also be filled with the joy of the assurance of sonship in the heavenly kingdom. I have given these men your word and have taught them the truth. The world may hate them, even as it has hated me, but I do not ask that you take them out of the world, only that you keep them from the evil in the world. Sanctify them in the truth; your word is truth. And as you sent me into this world, even so am I about to send these men into the world. For their sakes I have lived among men and have consecrated my life to your service that I might inspire them to be purified through the truth I have taught them and the love I have revealed to them. I well know, my Father, that there is no need for me to ask you to watch over these brethren after I have gone; I know you love them even as I, but I do this that they may the better realize the Father loves mortal men even as does the Son.}
 \vs p182 1:6 \textcolour{ubdarkred}{“And now, my Father, I would pray not only for these 11 men but also for all others who now believe, or who may hereafter believe the gospel of the kingdom through the word of their future ministry. I want them all to be one, even as you and I are one. You are in me and I am in you, and I desire that these believers likewise be in us; that both of our spirits indwell them. If my children are one as we are one, and if they love one another as I have loved them, all men will then believe that I came forth from you and be willing to receive the revelation of truth and glory which I have made. The glory which you gave me I have revealed to these believers. As you have lived with me in spirit, so have I lived with them in the flesh. As you have been one with me, so have I been one with them, and so will the new teacher ever be one with them and in them. And all this have I done that my brethren in the flesh may know that the Father loves them even as does the Son, and that you love them even as you love me. Father, work with me to save these believers that they may presently come to be with me in glory and then go on to join you in the Paradise embrace. Those who serve with me in humiliation, I would have with me in glory so that they may see all you have given into my hands as the eternal harvest of the seed sowing of time in the likeness of mortal flesh. I long to show my earthly brethren the glory I had with you before the founding of this world. This world knows very little of you, righteous Father, but I know you, and I have made you known to these believers, and they will make known your name to other generations. And now I promise them that you will be with them in the world even as you have been with me --- even so.”}
 \vs p182 1:7 The 11 remained kneeling in this circle about Jesus for several minutes before they arose and in silence made their way back to the near\hyp{}by camp.
 \vs p182 1:8 \pc Jesus prayed for \bibemph{unity} among his followers, but he did not desire uniformity. Sin creates a dead level of evil inertia, but righteousness nourishes the creative spirit of individual experience in the living realities of eternal truth and in the progressive communion of the divine spirits of the Father and the Son. In the spiritual fellowship of the believer\hyp{}son with the divine Father there can never be doctrinal finality and sectarian superiority of group consciousness.
@@ -55,7 +55,7 @@
 \vs p182 3:6 Each time he prayed in the garden, his humanity laid a firmer faith\hyp{}hold upon his divinity; his human will more completely became one with the divine will of his Father. Among other words spoken to him by the mighty angel was the message that the Father desired his Son to finish his earth bestowal by passing through the creature experience of death just as all mortal creatures must experience material dissolution in passing from the existence of time into the progression of eternity.
 \vs p182 3:7 Earlier in the evening it had not seemed so difficult to drink the cup, but as the human Jesus bade farewell to his apostles and sent them to their rest, the trial grew more appalling. Jesus experienced that natural ebb and flow of feeling which is common to all human experience, and just now he was weary from work, exhausted from the long hours of strenuous labour and painful anxiety concerning the safety of his apostles. While no mortal can presume to understand the thoughts and feelings of the incarnate Son of God at such a time as this, we know that he endured great anguish and suffered untold sorrow, for the perspiration rolled off his face in great drops. He was at last convinced that the Father intended to allow natural events to take their course; he was fully determined to employ none of his sovereign power as the supreme head of a universe to save himself.
 \vs p182 3:8 The assembled hosts of a vast creation are now hovered over this scene under the transient joint command of Gabriel and the Personalized Adjuster of Jesus. The division commanders of these armies of heaven have repeatedly been warned not to interfere with these transactions on earth unless Jesus himself should order them to intervene.
-\vs p182 3:9 \pc The experience of parting with the apostles was a great strain on the human heart of Jesus; this sorrow of love bore down on him and made it more difficult to face such a death as he well knew awaited him. He realized how weak and how ignorant his apostles were, and he dreaded to leave them. He well knew that the time of his departure had come, but his human heart longed to find out whether there might not possibly be some legitimate avenue of escape from this terrible plight of suffering and sorrow. And when it had thus sought escape, and failed, it was willing to drink the cup. The divine mind of Michael knew he had done his best for the 12 apostles; but the human heart of Jesus wished that more might have been done for them before they should be left alone in the world. Jesus’ heart was being crushed; he truly loved his brethren. He was isolated from his family in the flesh; one of his chosen associates was betraying him. His father Joseph’s people had rejected him and thereby sealed their doom as a people with a special mission on earth. His soul was tortured by baffled love and rejected mercy. It was just one of those awful human moments when everything seems to bear down with crushing cruelty and terrible agony.
+\vs p182 3:9 \pc The experience of parting with the apostles was a great strain on the human heart of Jesus; this sorrow of love bore down on him and made it more difficult to face such a death as he well knew awaited him. He realized how weak and how ignorant his apostles were, and he dreaded to leave them. He well knew that the time of his departure had come, but his human heart longed to find out whether there might not possibly be some legitimate avenue of escape from this terrible plight of suffering and sorrow. And when it had thus sought escape, and failed, it was willing to drink the cup. The divine mind of Michael knew he had done his best for the twelve apostles; but the human heart of Jesus wished that more might have been done for them before they should be left alone in the world. Jesus’ heart was being crushed; he truly loved his brethren. He was isolated from his family in the flesh; one of his chosen associates was betraying him. His father Joseph’s people had rejected him and thereby sealed their doom as a people with a special mission on earth. His soul was tortured by baffled love and rejected mercy. It was just one of those awful human moments when everything seems to bear down with crushing cruelty and terrible agony.
 \vs p182 3:10 Jesus’ humanity was not insensible to this situation of private loneliness, public shame, and the appearance of the failure of his cause. All these sentiments bore down on him with indescribable heaviness. In this great sorrow his mind went back to the days of his childhood in Nazareth and to his early work in Galilee. At the time of this great trial there came up in his mind many of those pleasant scenes of his earthly ministry. And it was from these old memories of Nazareth, Capernaum, Mount Hermon, and of the sunrise and sunset on the shimmering Sea of Galilee, that he soothed himself as he made his human heart strong and ready to encounter the traitor who should so soon betray him.
 \vs p182 3:11 Before Judas and the soldiers arrived, the Master had fully regained his customary poise; the spirit had triumphed over the flesh; faith had asserted itself over all human tendencies to fear or entertain doubt. The supreme test of the full realization of the human nature had been met and acceptably passed. Once more the Son of Man was prepared to face his enemies with equanimity and in the full assurance of his invincibility as a mortal man unreservedly dedicated to the doing of his Father’s will.
 \quizlink
